--- a/Rigveda/SamhitaPatha/Kannada/Ashtaka/Format1/RVS-Kannada-F1-A04.html
+++ b/Rigveda/SamhitaPatha/Kannada/Ashtaka/Format1/RVS-Kannada-F1-A04.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ಶ್ರೀ॒ ಗು॒ರು॒ಭ್ಯೋ॒ ನ॒ಮಃ॒ ಹರಿಃ ಓಂ ||</h1>
 <h2 class='simpHtmlH1'>|| ಋಗ್ವೇದ ಸಂಹಿತಾ (ಅಷ್ಟಕ: 04) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಋಕ್ಸಂಹಿತ ಸೂಕ್ತ ಸಂಖ್ಯಾ,ಋಕ್ಸಂಹಿತ ಮಂತ್ರ ಸಂಖ್ಯಾ}<br> [Last updated on: 22-Jan-2025]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಋಕ್ಸಂಹಿತ ಸೂಕ್ತ ಸಂಖ್ಯಾ,ಋಕ್ಸಂಹಿತ ಮಂತ್ರ ಸಂಖ್ಯಾ}<br> [Last updated on: 01-Feb-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1965,13 +1965,13 @@
 <td class='VargaStyle1'>ಅ॒ಭಿ ಯೇ ತ್ವಾ᳚ ವಿಭಾವರಿ॒ ಸ್ತೋಮೈ᳚ರ್ಗೃ॒ಣಂತಿ॒ ವಹ್ನ॑ಯಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸತ್ಯಶ್ರವಾಃ | ಉಷಾಃ | ಪಂಕ್ತಿಃ}</span><p>ಮ॒ಘೈರ್ಮ॑ಘೋನಿ ಸು॒ಶ್ರಿಯೋ॒ ದಾಮ᳚ನ್ವಂತಃ ಸುರಾ॒ತಯಃ॒ ಸುಜಾ᳚ತೇ॒, ಅಶ್ವ॑ಸೂನೃತೇ ||<span class='MantraNumbering'>{4/10}{4.4.21.4}{5.79.4}{5.6.7.4}{433, 4306}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಯಚ್ಚಿ॒ದ್ಧಿ ತೇ᳚ ಗ॒ಣಾ, ಇ॒ಮೇ ಛ॒ದಯಂ᳚ತಿ ಮ॒ಘತ್ತ॑ಯೇ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸತ್ಯಶ್ರವಾಃ | ಉಷಾಃ | ಪಂಕ್ತಿಃ}</span><p>ಪರಿ॑ ಚಿ॒ದ್ವಷ್ಟ॑ಯೋ ದಧು॒ರ್ದದ॑ತೋ॒ ರಾಧೋ॒, ಅಹ್ರ॑ಯಂ॒ ಸುಜಾ᳚ತೇ॒, ಅಶ್ವ॑ಸೂನೃತೇ ||<span class='MantraNumbering'>{5/10}{4.4.21.5}{5.79.5}{5.6.7.5}{433, 4307}</span></td>
+<td class='VargaStyle1'>ಯಚ್ಚಿ॒ದ್ಧಿ ತೇ᳚ ಗ॒ಣಾ, ಇ॒ಮೇ ಛ॒ದಯಂ᳚ತಿ ಮ॒ಘತ್ತ॑ಯೇ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸತ್ಯಶ್ರವಾಃ | ಉಷಾಃ | ಪಂಕ್ತಿಃ}</span><p>ಪರಿ॑ ಚಿ॒ದ್‌ ವಷ್ಟ॑ಯೋ ದಧು॒ರ್ದದ॑ತೋ॒ ರಾಧೋ॒, ಅಹ್ರ॑ಯಂ॒ ಸುಜಾ᳚ತೇ॒, ಅಶ್ವ॑ಸೂನೃತೇ ||<span class='MantraNumbering'>{5/10}{4.4.21.5}{5.79.5}{5.6.7.5}{433, 4307}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಐಷು॑ ಧಾ ವೀ॒ರವ॒ದ್ಯಶ॒ ಉಷೋ᳚ ಮಘೋನಿ ಸೂ॒ರಿಷು॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸತ್ಯಶ್ರವಾಃ | ಉಷಾಃ | ಪಂಕ್ತಿಃ}</span><p>ಯೇ ನೋ॒ ರಾಧಾಂ॒ಸ್ಯಹ್ರ॑ಯಾ ಮ॒ಘವಾ᳚ನೋ॒, ಅರಾ᳚ಸತ॒ ಸುಜಾ᳚ತೇ॒, ಅಶ್ವ॑ಸೂನೃತೇ ||<span class='MantraNumbering'>{6/10}{4.4.22.1}{5.79.6}{5.6.7.6}{433, 4308}</span></td>
+<td class='VargaStyle2'>ಐಷು॑ ಧಾ ವೀ॒ರವ॒ದ್‌ ಯಶ॒ ಉಷೋ᳚ ಮಘೋನಿ ಸೂ॒ರಿಷು॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸತ್ಯಶ್ರವಾಃ | ಉಷಾಃ | ಪಂಕ್ತಿಃ}</span><p>ಯೇ ನೋ॒ ರಾಧಾಂ॒ಸ್ಯಹ್ರ॑ಯಾ ಮ॒ಘವಾ᳚ನೋ॒, ಅರಾ᳚ಸತ॒ ಸುಜಾ᳚ತೇ॒, ಅಶ್ವ॑ಸೂನೃತೇ ||<span class='MantraNumbering'>{6/10}{4.4.22.1}{5.79.6}{5.6.7.6}{433, 4308}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ತೇಭ್ಯೋ᳚ ದ್ಯು॒ಮ್ನಂ ಬೃ॒ಹದ್ಯಶ॒ ಉಷೋ᳚ ಮಘೋ॒ನ್ಯಾ ವ॑ಹ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸತ್ಯಶ್ರವಾಃ | ಉಷಾಃ | ಪಂಕ್ತಿಃ}</span><p>ಯೇ ನೋ॒ ರಾಧಾಂ॒ಸ್ಯಶ್ವ್ಯಾ᳚ ಗ॒ವ್ಯಾ ಭಜಂ᳚ತ ಸೂ॒ರಯಃ॒ ಸುಜಾ᳚ತೇ॒, ಅಶ್ವ॑ಸೂನೃತೇ ||<span class='MantraNumbering'>{7/10}{4.4.22.2}{5.79.7}{5.6.7.7}{433, 4309}</span></td>
+<td class='VargaStyle2'>ತೇಭ್ಯೋ᳚ ದ್ಯು॒ಮ್ನಂ ಬೃ॒ಹದ್‌ ಯಶ॒ ಉಷೋ᳚ ಮಘೋ॒ನ್ಯಾ ವ॑ಹ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸತ್ಯಶ್ರವಾಃ | ಉಷಾಃ | ಪಂಕ್ತಿಃ}</span><p>ಯೇ ನೋ॒ ರಾಧಾಂ॒ಸ್ಯಶ್ವ್ಯಾ᳚ ಗ॒ವ್ಯಾ ಭಜಂ᳚ತ ಸೂ॒ರಯಃ॒ ಸುಜಾ᳚ತೇ॒, ಅಶ್ವ॑ಸೂನೃತೇ ||<span class='MantraNumbering'>{7/10}{4.4.22.2}{5.79.7}{5.6.7.7}{433, 4309}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಉ॒ತ ನೋ॒ ಗೋಮ॑ತೀ॒ರಿಷ॒ ಆ ವ॑ಹಾ ದುಹಿತರ್ದಿವಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸತ್ಯಶ್ರವಾಃ | ಉಷಾಃ | ಪಂಕ್ತಿಃ}</span><p>ಸಾ॒ಕಂ ಸೂರ್‍ಯ॑ಸ್ಯ ರ॒ಶ್ಮಿಭಿಃ॑ ಶು॒ಕ್ರೈಃ ಶೋಚ॑ದ್ಭಿರ॒ರ್ಚಿಭಿಃ॒ ಸುಜಾ᳚ತೇ॒, ಅಶ್ವ॑ಸೂನೃತೇ ||<span class='MantraNumbering'>{8/10}{4.4.22.3}{5.79.8}{5.6.7.8}{433, 4310}</span></td>
@@ -1980,7 +1980,7 @@
 <td class='VargaStyle2'>ವ್ಯು॑ಚ್ಛಾ ದುಹಿತರ್ದಿವೋ॒ ಮಾ ಚಿ॒ರಂ ತ॑ನುಥಾ॒, ಅಪಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸತ್ಯಶ್ರವಾಃ | ಉಷಾಃ | ಪಂಕ್ತಿಃ}</span><p>ನೇತ್‌ ತ್ವಾ᳚ ಸ್ತೇ॒ನಂ ಯಥಾ᳚ ರಿ॒ಪುಂ ತಪಾ᳚ತಿ॒ ಸೂರೋ᳚, ಅ॒ರ್ಚಿಷಾ॒ ಸುಜಾ᳚ತೇ॒, ಅಶ್ವ॑ಸೂನೃತೇ ||<span class='MantraNumbering'>{9/10}{4.4.22.4}{5.79.9}{5.6.7.9}{433, 4311}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಏ॒ತಾವ॒ದ್ವೇದು॑ಷ॒ಸ್ತ್ವಂ ಭೂಯೋ᳚ ವಾ॒ ದಾತು॑ಮರ್ಹಸಿ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸತ್ಯಶ್ರವಾಃ | ಉಷಾಃ | ಪಂಕ್ತಿಃ}</span><p>ಯಾ ಸ್ತೋ॒ತೃಭ್ಯೋ᳚ ವಿಭಾವರ್‍ಯು॒ಚ್ಛಂತೀ॒ ನ ಪ್ರ॒ಮೀಯ॑ಸೇ॒ ಸುಜಾ᳚ತೇ॒, ಅಶ್ವ॑ಸೂನೃತೇ ||<span class='MantraNumbering'>{10/10}{4.4.22.5}{5.79.10}{5.6.7.10}{433, 4312}</span></td>
+<td class='VargaStyle2'>ಏ॒ತಾವ॒ದ್‌ ವೇದು॑ಷ॒ಸ್ತ್ವಂ ಭೂಯೋ᳚ ವಾ॒ ದಾತು॑ಮರ್ಹಸಿ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸತ್ಯಶ್ರವಾಃ | ಉಷಾಃ | ಪಂಕ್ತಿಃ}</span><p>ಯಾ ಸ್ತೋ॒ತೃಭ್ಯೋ᳚ ವಿಭಾವರ್‍ಯು॒ಚ್ಛಂತೀ॒ ನ ಪ್ರ॒ಮೀಯ॑ಸೇ॒ ಸುಜಾ᳚ತೇ॒, ಅಶ್ವ॑ಸೂನೃತೇ ||<span class='MantraNumbering'>{10/10}{4.4.22.5}{5.79.10}{5.6.7.10}{433, 4312}</span></td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[72] ದ್ಯುತದ್ಯಾಮಾನಮಿತಿ ಷಡೃಚಸ್ಯ ಸೂಕ್ತಸ್ಯಾತ್ರೇಯಃಸತ್ಯಶ್ರವಾಉಷಾಸ್ತ್ರಿಷ್ಟುಪ್ |</td>
@@ -1992,7 +1992,7 @@
 <td class='VargaStyle1'>ಏ॒ಷಾ ಜನಂ᳚ ದರ್ಶ॒ತಾ ಬೋ॒ಧಯಂ᳚ತೀ ಸು॒ಗಾನ್‌ ಪ॒ಥಃ ಕೃ᳚ಣ್ವ॒ತೀ ಯಾ॒ತ್ಯಗ್ರೇ᳚ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸತ್ಯಶ್ರವಾಃ | ಉಷಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಬೃ॒ಹ॒ದ್ರ॒ಥಾ ಬೃ॑ಹ॒ತೀ ವಿ॑ಶ್ವಮಿ॒ನ್ವೋಷಾ ಜ್ಯೋತಿ᳚ರ್ಯಚ್ಛ॒ತ್ಯಗ್ರೇ॒, ಅಹ್ನಾಂ᳚ ||<span class='MantraNumbering'>{2/6}{4.4.23.2}{5.80.2}{5.6.8.2}{434, 4314}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಏ॒ಷಾ ಗೋಭಿ॑ರರು॒ಣೇಭಿ᳚ರ್ಯುಜಾ॒ನಾಸ್ರೇ᳚ಧಂತೀ ರ॒ಯಿಮಪ್ರಾ᳚ಯು ಚಕ್ರೇ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸತ್ಯಶ್ರವಾಃ | ಉಷಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಪ॒ಥೋ ರದಂ᳚ತೀ ಸುವಿ॒ತಾಯ॑ ದೇ॒ವೀ ಪು॑ರುಷ್ಟು॒ತಾ ವಿ॒ಶ್ವವಾ᳚ರಾ॒ ವಿ ಭಾ᳚ತಿ ||<span class='MantraNumbering'>{3/6}{4.4.23.3}{5.80.3}{5.6.8.3}{434, 4315}</span></td>
+<td class='VargaStyle1'>ಏ॒ಷಾ ಗೋಭಿ॑ರರು॒ಣೇಭಿ᳚ರ್ಯುಜಾ॒ನಾ ಽಸ್ರೇ᳚ಧಂತೀ ರ॒ಯಿಮಪ್ರಾ᳚ಯು ಚಕ್ರೇ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸತ್ಯಶ್ರವಾಃ | ಉಷಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಪ॒ಥೋ ರದಂ᳚ತೀ ಸುವಿ॒ತಾಯ॑ ದೇ॒ವೀ ಪು॑ರುಷ್ಟು॒ತಾ ವಿ॒ಶ್ವವಾ᳚ರಾ॒ ವಿ ಭಾ᳚ತಿ ||<span class='MantraNumbering'>{3/6}{4.4.23.3}{5.80.3}{5.6.8.3}{434, 4315}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಏ॒ಷಾ ವ್ಯೇ᳚ನೀ ಭವತಿ ದ್ವಿ॒ಬರ್ಹಾ᳚, ಆವಿಷ್ಕೃಣ್ವಾ॒ನಾ ತ॒ನ್ವಂ᳚ ಪು॒ರಸ್ತಾ᳚ತ್ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸತ್ಯಶ್ರವಾಃ | ಉಷಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಋ॒ತಸ್ಯ॒ ಪಂಥಾ॒ಮನ್ವೇ᳚ತಿ ಸಾ॒ಧು ಪ್ರ॑ಜಾನ॒ತೀವ॒ ನ ದಿಶೋ᳚ ಮಿನಾತಿ ||<span class='MantraNumbering'>{4/6}{4.4.23.4}{5.80.4}{5.6.8.4}{434, 4316}</span></td>
@@ -2001,7 +2001,7 @@
 <td class='VargaStyle1'>ಏ॒ಷಾ ಶು॒ಭ್ರಾ ನ ತ॒ನ್ವೋ᳚ ವಿದಾ॒ನೋರ್ಧ್ವೇವ॑ ಸ್ನಾ॒ತೀ ದೃ॒ಶಯೇ᳚ ನೋ, ಅಸ್ಥಾತ್ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸತ್ಯಶ್ರವಾಃ | ಉಷಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಅಪ॒ ದ್ವೇಷೋ॒ ಬಾಧ॑ಮಾನಾ॒ ತಮಾಂ᳚ಸ್ಯು॒ಷಾ ದಿ॒ವೋ ದು॑ಹಿ॒ತಾ ಜ್ಯೋತಿ॒ಷಾಗಾ᳚ತ್ ||<span class='MantraNumbering'>{5/6}{4.4.23.5}{5.80.5}{5.6.8.5}{434, 4317}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಏ॒ಷಾ ಪ್ರ॑ತೀ॒ಚೀ ದು॑ಹಿ॒ತಾ ದಿ॒ವೋ ನೄನ್ಯೋಷೇ᳚ವ ಭ॒ದ್ರಾ ನಿ ರಿ॑ಣೀತೇ॒, ಅಪ್ಸಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸತ್ಯಶ್ರವಾಃ | ಉಷಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ವ್ಯೂ॒ರ್ಣ್ವ॒ತೀ ದಾ॒ಶುಷೇ॒ ವಾರ್‍ಯಾ᳚ಣಿ॒ ಪುನ॒ರ್ಜ್ಯೋತಿ᳚ರ್ಯುವ॒ತಿಃ ಪೂ॒ರ್‍ವಥಾ᳚ಕಃ ||<span class='MantraNumbering'>{6/6}{4.4.23.6}{5.80.6}{5.6.8.6}{434, 4318}</span></td>
+<td class='VargaStyle1'>ಏ॒ಷಾ ಪ್ರ॑ತೀ॒ಚೀ ದು॑ಹಿ॒ತಾ ದಿ॒ವೋ ನೄನ್ ಯೋಷೇ᳚ವ ಭ॒ದ್ರಾ ನಿ ರಿ॑ಣೀತೇ॒, ಅಪ್ಸಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸತ್ಯಶ್ರವಾಃ | ಉಷಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ವ್ಯೂ॒ರ್ಣ್ವ॒ತೀ ದಾ॒ಶುಷೇ॒ ವಾರ್‍ಯಾ᳚ಣಿ॒ ಪುನ॒ರ್ಜ್ಯೋತಿ᳚ರ್ಯುವ॒ತಿಃ ಪೂ॒ರ್‍ವಥಾ᳚ಕಃ ||<span class='MantraNumbering'>{6/6}{4.4.23.6}{5.80.6}{5.6.8.6}{434, 4318}</span></td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[73] ಯುಂಜತೇಮನಇತಿ ಪಂಚರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯಾತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ ಸವಿತಾಜಗತೀ |</td>
@@ -2010,10 +2010,10 @@
 <td class='VargaStyle2'>ಯುಂ॒ಜತೇ॒ ಮನ॑ ಉ॒ತ ಯುಂ᳚ಜತೇ॒ ಧಿಯೋ॒ ವಿಪ್ರಾ॒ ವಿಪ್ರ॑ಸ್ಯ ಬೃಹ॒ತೋ ವಿ॑ಪ॒ಶ್ಚಿತಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಸವಿತಾ | ಜಗತೀ}</span><p>ವಿ ಹೋತ್ರಾ᳚ ದಧೇ ವಯುನಾ॒ವಿದೇಕ॒ ಇನ್ಮ॒ಹೀ ದೇ॒ವಸ್ಯ॑ ಸವಿ॒ತುಃ ಪರಿ॑ಷ್ಟುತಿಃ ||<span class='MantraNumbering'>{1/5}{4.4.24.1}{5.81.1}{5.6.9.1}{435, 4319}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ವಿಶ್ವಾ᳚ ರೂ॒ಪಾಣಿ॒ ಪ್ರತಿ॑ ಮುಂಚತೇ ಕ॒ವಿಃ ಪ್ರಾಸಾ᳚ವೀದ್ಭ॒ದ್ರಂ ದ್ವಿ॒ಪದೇ॒ ಚತು॑ಷ್ಪದೇ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಸವಿತಾ | ಜಗತೀ}</span><p>ವಿ ನಾಕ॑ಮಖ್ಯತ್ಸವಿ॒ತಾ ವರೇ॒ಣ್ಯೋಽನು॑ ಪ್ರ॒ಯಾಣ॑ಮು॒ಷಸೋ॒ ವಿ ರಾ᳚ಜತಿ ||<span class='MantraNumbering'>{2/5}{4.4.24.2}{5.81.2}{5.6.9.2}{435, 4320}</span></td>
+<td class='VargaStyle2'>ವಿಶ್ವಾ᳚ ರೂ॒ಪಾಣಿ॒ ಪ್ರತಿ॑ ಮುಂಚತೇ ಕ॒ವಿಃ ಪ್ರಾಸಾ᳚ವೀದ್‌ ಭ॒ದ್ರಂ ದ್ವಿ॒ಪದೇ॒ ಚತು॑ಷ್ಪದೇ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಸವಿತಾ | ಜಗತೀ}</span><p>ವಿ ನಾಕ॑ಮಖ್ಯತ್‌ ಸವಿ॒ತಾ ವರೇ॒ಣ್ಯೋಽನು॑ ಪ್ರ॒ಯಾಣ॑ಮು॒ಷಸೋ॒ ವಿ ರಾ᳚ಜತಿ ||<span class='MantraNumbering'>{2/5}{4.4.24.2}{5.81.2}{5.6.9.2}{435, 4320}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಯಸ್ಯ॑ ಪ್ರ॒ಯಾಣ॒ಮನ್ವ॒ನ್ಯ ಇದ್ಯ॒ಯುರ್ದೇ॒ವಾ ದೇ॒ವಸ್ಯ॑ ಮಹಿ॒ಮಾನ॒ಮೋಜ॑ಸಾ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಸವಿತಾ | ಜಗತೀ}</span><p>ಯಃ ಪಾರ್‍ಥಿ॑ವಾನಿ ವಿಮ॒ಮೇ ಸ ಏತ॑ಶೋ॒ ರಜಾಂ᳚ಸಿ ದೇ॒ವಃ ಸ॑ವಿ॒ತಾ ಮ॑ಹಿತ್ವ॒ನಾ ||<span class='MantraNumbering'>{3/5}{4.4.24.3}{5.81.3}{5.6.9.3}{435, 4321}</span></td>
+<td class='VargaStyle2'>ಯಸ್ಯ॑ ಪ್ರ॒ಯಾಣ॒ಮನ್ವ॒ನ್ಯ ಇದ್‌ ಯ॒ಯುರ್ದೇ॒ವಾ ದೇ॒ವಸ್ಯ॑ ಮಹಿ॒ಮಾನ॒ಮೋಜ॑ಸಾ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಸವಿತಾ | ಜಗತೀ}</span><p>ಯಃ ಪಾರ್‍ಥಿ॑ವಾನಿ ವಿಮ॒ಮೇ ಸ ಏತ॑ಶೋ॒ ರಜಾಂ᳚ಸಿ ದೇ॒ವಃ ಸ॑ವಿ॒ತಾ ಮ॑ಹಿತ್ವ॒ನಾ ||<span class='MantraNumbering'>{3/5}{4.4.24.3}{5.81.3}{5.6.9.3}{435, 4321}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಉ॒ತ ಯಾ᳚ಸಿ ಸವಿತ॒ಸ್ತ್ರೀಣಿ॑ ರೋಚ॒ನೋತ ಸೂರ್‍ಯ॑ಸ್ಯ ರ॒ಶ್ಮಿಭಿಃ॒ ಸಮು॑ಚ್ಯಸಿ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಸವಿತಾ | ಜಗತೀ}</span><p>ಉ॒ತ ರಾತ್ರೀ᳚ಮುಭ॒ಯತಃ॒ ಪರೀ᳚ಯಸ ಉ॒ತ ಮಿ॒ತ್ರೋ ಭ॑ವಸಿ ದೇವ॒ ಧರ್ಮ॑ಭಿಃ ||<span class='MantraNumbering'>{4/5}{4.4.24.4}{5.81.4}{5.6.9.4}{435, 4322}</span></td>
@@ -2025,7 +2025,7 @@
 <td class='SuktaLabel'>[74] ತತ್ಸವಿತುರಿತಿ ನವರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯಾತ್ರೇಯಃಶ್ಯಾವಾಶ್ವಃ ಸವಿತಾಗಾಯತ್ರೀ ಆದ್ಯಾನುಷ್ಟುಪ್ |</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ತತ್ಸ॑ವಿ॒ತುರ್‍ವೃ॑ಣೀಮಹೇ ವ॒ಯಂ ದೇ॒ವಸ್ಯ॒ ಭೋಜ॑ನಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಸವಿತಾ | ಅನುಷ್ಟುಪ್}</span><p>ಶ್ರೇಷ್ಠಂ᳚ ಸರ್‍ವ॒ಧಾತ॑ಮಂ॒ ತುರಂ॒ ಭಗ॑ಸ್ಯ ಧೀಮಹಿ ||<span class='MantraNumbering'>{1/9}{4.4.25.1}{5.82.1}{5.6.10.1}{436, 4324}</span></td>
+<td class='VargaStyle1'>ತತ್‌ ಸ॑ವಿ॒ತುರ್‍ವೃ॑ಣೀಮಹೇ ವ॒ಯಂ ದೇ॒ವಸ್ಯ॒ ಭೋಜ॑ನಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಸವಿತಾ | ಅನುಷ್ಟುಪ್}</span><p>ಶ್ರೇಷ್ಠಂ᳚ ಸರ್‍ವ॒ಧಾತ॑ಮಂ॒ ತುರಂ॒ ಭಗ॑ಸ್ಯ ಧೀಮಹಿ ||<span class='MantraNumbering'>{1/9}{4.4.25.1}{5.82.1}{5.6.10.1}{436, 4324}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಅಸ್ಯ॒ ಹಿ ಸ್ವಯ॑ಶಸ್ತರಂ ಸವಿ॒ತುಃ ಕಚ್ಚ॒ನ ಪ್ರಿ॒ಯಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಸವಿತಾ | ಗಾಯತ್ರೀ}</span><p>ನ ಮಿ॒ನಂತಿ॑ ಸ್ವ॒ರಾಜ್ಯಂ᳚ ||<span class='MantraNumbering'>{2/9}{4.4.25.2}{5.82.2}{5.6.10.2}{436, 4325}</span></td>
@@ -2034,10 +2034,10 @@
 <td class='VargaStyle1'>ಸ ಹಿ ರತ್ನಾ᳚ನಿ ದಾ॒ಶುಷೇ᳚ ಸು॒ವಾತಿ॑ ಸವಿ॒ತಾ ಭಗಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಸವಿತಾ | ಗಾಯತ್ರೀ}</span><p>ತಂ ಭಾ॒ಗಂ ಚಿ॒ತ್ರಮೀ᳚ಮಹೇ ||<span class='MantraNumbering'>{3/9}{4.4.25.3}{5.82.3}{5.6.10.3}{436, 4326}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಅ॒ದ್ಯಾ ನೋ᳚ ದೇವ ಸವಿತಃ ಪ್ರ॒ಜಾವ॑ತ್ಸಾವೀಃ॒ ಸೌಭ॑ಗಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಸವಿತಾ | ಗಾಯತ್ರೀ}</span><p>ಪರಾ᳚ ದು॒ಷ್ಷ್ವಪ್ನ್ಯಂ᳚ ಸುವ ||<span class='MantraNumbering'>{4/9}{4.4.25.4}{5.82.4}{5.6.10.4}{436, 4327}</span></td>
+<td class='VargaStyle1'>ಅ॒ದ್ಯಾ ನೋ᳚ ದೇವ ಸವಿತಃ ಪ್ರ॒ಜಾವ॑ತ್‌ ಸಾವೀಃ॒ ಸೌಭ॑ಗಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಸವಿತಾ | ಗಾಯತ್ರೀ}</span><p>ಪರಾ᳚ ದು॒ಷ್ಷ್ವಪ್ನ್ಯಂ᳚ ಸುವ ||<span class='MantraNumbering'>{4/9}{4.4.25.4}{5.82.4}{5.6.10.4}{436, 4327}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ವಿಶ್ವಾ᳚ನಿ ದೇವ ಸವಿತರ್ದುರಿ॒ತಾನಿ॒ ಪರಾ᳚ ಸುವ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಸವಿತಾ | ಗಾಯತ್ರೀ}</span><p>ಯದ್ಭ॒ದ್ರಂ ತನ್ನ॒ ಆ ಸು॑ವ ||<span class='MantraNumbering'>{5/9}{4.4.25.5}{5.82.5}{5.6.10.5}{436, 4328}</span></td>
+<td class='VargaStyle1'>ವಿಶ್ವಾ᳚ನಿ ದೇವ ಸವಿತರ್ದುರಿ॒ತಾನಿ॒ ಪರಾ᳚ ಸುವ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಸವಿತಾ | ಗಾಯತ್ರೀ}</span><p>ಯದ್‌ ಭ॒ದ್ರಂ ತನ್ನ॒ ಆ ಸು॑ವ ||<span class='MantraNumbering'>{5/9}{4.4.25.5}{5.82.5}{5.6.10.5}{436, 4328}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಅನಾ᳚ಗಸೋ॒, ಅದಿ॑ತಯೇ ದೇ॒ವಸ್ಯ॑ ಸವಿ॒ತುಃ ಸ॒ವೇ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಸವಿತಾ | ಗಾಯತ್ರೀ}</span><p>ವಿಶ್ವಾ᳚ ವಾ॒ಮಾನಿ॑ ಧೀಮಹಿ ||<span class='MantraNumbering'>{6/9}{4.4.26.1}{5.82.6}{5.6.10.6}{436, 4329}</span></td>
@@ -2064,7 +2064,7 @@
 <td class='VargaStyle1'>ರ॒ಥೀವ॒ ಕಶ॒ಯಾಶ್ವಾಁ᳚, ಅಭಿಕ್ಷಿ॒ಪನ್ನಾ॒ವಿರ್ದೂ॒ತಾನ್‌ ಕೃ॑ಣುತೇ ವ॒ರ್ಷ್ಯಾ॒೩॑(ಆಁ॒) ಅಹ॑ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ಪರ್ಜನ್ಯಃ | ಜಗತೀ}</span><p>ದೂ॒ರಾತ್‌ ಸಿಂ॒ಹಸ್ಯ॑ ಸ್ತ॒ನಥಾ॒, ಉದೀ᳚ರತೇ॒ ಯತ್‌ ಪ॒ರ್ಜನ್ಯಃ॑ ಕೃಣು॒ತೇ ವ॒ರ್ಷ್ಯ೧॑(ಅಂ॒) ನಭಃ॑ ||<span class='MantraNumbering'>{3/10}{4.4.27.3}{5.83.3}{5.6.11.3}{437, 4335}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಪ್ರ ವಾತಾ॒ ವಾನ್‌ ತಿ॑ ಪ॒ತಯಂ᳚ತಿ ವಿ॒ದ್ಯುತ॒ ಉದೋಷ॑ಧೀ॒ರ್ಜಿಹ॑ತೇ॒ ಪಿನ್ವ॑ತೇ॒ ಸ್ವಃ॑ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ಪರ್ಜನ್ಯಃ | ಜಗತೀ}</span><p>ಇರಾ॒ ವಿಶ್ವ॑ಸ್ಮೈ॒ ಭುವ॑ನಾಯ ಜಾಯತೇ॒ ಯತ್‌ ಪ॒ರ್ಜನ್ಯಃ॑ ಪೃಥಿ॒ವೀಂ ರೇತ॒ಸಾವ॑ತಿ ||<span class='MantraNumbering'>{4/10}{4.4.27.4}{5.83.4}{5.6.11.4}{437, 4336}</span></td>
+<td class='VargaStyle1'>ಪ್ರ ವಾತಾ॒ ವಾಂತಿ॑ ಪ॒ತಯಂ᳚ತಿ ವಿ॒ದ್ಯುತ॒ ಉದೋಷ॑ಧೀ॒ರ್‌ಜಿಹ॑ತೇ॒ ಪಿನ್ವ॑ತೇ॒ ಸ್ವಃ॑ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ಪರ್ಜನ್ಯಃ | ಜಗತೀ}</span><p>ಇರಾ॒ ವಿಶ್ವ॑ಸ್ಮೈ॒ ಭುವ॑ನಾಯ ಜಾಯತೇ॒ ಯತ್‌ ಪ॒ರ್ಜನ್ಯಃ॑ ಪೃಥಿ॒ವೀಂ ರೇತ॒ಸಾವ॑ತಿ ||<span class='MantraNumbering'>{4/10}{4.4.27.4}{5.83.4}{5.6.11.4}{437, 4336}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಯಸ್ಯ᳚ ವ್ರ॒ತೇ ಪೃ॑ಥಿ॒ವೀ ನನ್ನ॑ಮೀತಿ॒ ಯಸ್ಯ᳚ ವ್ರ॒ತೇ ಶ॒ಫವ॒ಜ್ಜರ್ಭು॑ರೀತಿ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ಪರ್ಜನ್ಯಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಯಸ್ಯ᳚ ವ್ರ॒ತ ಓಷ॑ಧೀರ್‍ವಿ॒ಶ್ವರೂ᳚ಪಾಃ॒ ಸ ನಃ॑ ಪರ್ಜನ್ಯ॒ ಮಹಿ॒ ಶರ್ಮ॑ ಯಚ್ಛ ||<span class='MantraNumbering'>{5/10}{4.4.27.5}{5.83.5}{5.6.11.5}{437, 4337}</span></td>
@@ -2082,7 +2082,7 @@
 <td class='VargaStyle2'>ಯತ್‌ ಪ॑ರ್ಜನ್ಯ॒ ಕನಿ॑ಕ್ರದತ್‌ ಸ್ತ॒ನಯ॒ನ್‌ ಹಂಸಿ॑ ದು॒ಷ್ಕೃತಃ॑ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ಪರ್ಜನ್ಯಃ | ಅನುಷ್ಟುಪ್}</span><p>ಪ್ರತೀ॒ದಂ ವಿಶ್ವಂ᳚ ಮೋದತೇ॒ ಯತ್‌ ಕಿಂ ಚ॑ ಪೃಥಿ॒ವ್ಯಾಮಧಿ॑ ||<span class='MantraNumbering'>{9/10}{4.4.28.4}{5.83.9}{5.6.11.9}{437, 4341}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಅವ॑ರ್ಷೀರ್‍ವ॒ರ್ಷಮುದು॒ ಷೂ ಗೃ॑ಭಾ॒ಯಾಽಕ॒ರ್ಧನ್ವಾ॒ನ್ಯತ್ಯೇ᳚ತ॒ವಾ, ಉ॑ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ಪರ್ಜನ್ಯಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಅಜೀ᳚ಜನ॒ ಓಷ॑ಧೀ॒ರ್ಭೋಜ॑ನಾಯ॒ ಕಮು॒ತ ಪ್ರ॒ಜಾಭ್ಯೋ᳚ಽವಿದೋ ಮನೀ॒ಷಾಂ ||<span class='MantraNumbering'>{10/10}{4.4.28.5}{5.83.10}{5.6.11.10}{437, 4342}</span></td>
+<td class='VargaStyle2'>ಅವ॑ರ್ಷೀರ್‌ವ॒ರ್ಷಮುದು॒ ಷೂ ಗೃ॑ಭಾ॒ಯಾಽಕ॒ರ್ಧನ್ವಾ॒ನ್ಯತ್ಯೇ᳚ತ॒ವಾ, ಉ॑ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ಪರ್ಜನ್ಯಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಅಜೀ᳚ಜನ॒ ಓಷ॑ಧೀ॒ರ್‌ಭೋಜ॑ನಾಯ॒ ಕಮು॒ತ ಪ್ರ॒ಜಾಭ್ಯೋ᳚ಽವಿದೋ ಮನೀ॒ಷಾಂ ||<span class='MantraNumbering'>{10/10}{4.4.28.5}{5.83.10}{5.6.11.10}{437, 4342}</span></td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[76] ಬಳಿತ್ಥೇತಿ ತೃಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಭೌಮೋತ್ರಿಃಪೃಥಿವ್ಯನುಷ್ಟುಪ್ |</td>
@@ -2094,7 +2094,7 @@
 <td class='VargaStyle1'>ಸ್ತೋಮಾ᳚ಸಸ್ತ್ವಾ ವಿಚಾರಿಣಿ॒ ಪ್ರತಿ॑ ಷ್ಟೋಭಂತ್ಯ॒ಕ್ತುಭಿಃ॑ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ಪೃಥಿವೀ | ಅನುಷ್ಟುಪ್}</span><p>ಪ್ರ ಯಾ ವಾಜಂ॒ ನ ಹೇಷಂ᳚ತಂ ಪೇ॒ರುಮಸ್ಯ॑ಸ್ಯರ್ಜುನಿ ||<span class='MantraNumbering'>{2/3}{4.4.29.2}{5.84.2}{5.6.12.2}{438, 4344}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ದೃ॒ಳ್ಹಾ ಚಿ॒ದ್ಯಾ ವನ॒ಸ್ಪತೀ᳚ನ್‌ ಕ್ಷ್ಮ॒ಯಾ ದರ್ಧ॒ರ್ಷ್ಯೋಜ॑ಸಾ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ಪೃಥಿವೀ | ಅನುಷ್ಟುಪ್}</span><p>ಯತ್ತೇ᳚, ಅ॒ಭ್ರಸ್ಯ॑ ವಿ॒ದ್ಯುತೋ᳚ ದಿ॒ವೋ ವರ್ಷಂ᳚ತಿ ವೃ॒ಷ್ಟಯಃ॑ ||<span class='MantraNumbering'>{3/3}{4.4.29.3}{5.84.3}{5.6.12.3}{438, 4345}</span></td>
+<td class='VargaStyle1'>ದೃ॒ಳ್ಹಾ ಚಿ॒ದ್‌ ಯಾ ವನ॒ಸ್ಪತೀ᳚ನ್ ಕ್ಷ್ಮ॒ಯಾ ದರ್‌ಧ॒ರ್ಷ್ಯೋಜ॑ಸಾ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ಪೃಥಿವೀ | ಅನುಷ್ಟುಪ್}</span><p>ಯತ್ತೇ᳚, ಅ॒ಭ್ರಸ್ಯ॑ ವಿ॒ದ್ಯುತೋ᳚ ದಿ॒ವೋ ವರ್ಷಂ᳚ತಿ ವೃ॒ಷ್ಟಯಃ॑ ||<span class='MantraNumbering'>{3/3}{4.4.29.3}{5.84.3}{5.6.12.3}{438, 4345}</span></td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[77] ಪ್ರಸಮ್ರಾಜಇತ್ಯಷ್ಟರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಭೌಮೋತ್ರಿರ್ವರುಣತ್ರಿಷ್ಟುಪ್ |</td>
