--- a/Rigveda/SamhitaPatha/Kannada/Ashtaka/Format1/RVS-Kannada-F1-A08.html
+++ b/Rigveda/SamhitaPatha/Kannada/Ashtaka/Format1/RVS-Kannada-F1-A08.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ಶ್ರೀ॒ ಗು॒ರು॒ಭ್ಯೋ॒ ನ॒ಮಃ॒ ಹರಿಃ ಓಂ ||</h1>
 <h2 class='simpHtmlH1'>|| ಋಗ್ವೇದ ಸಂಹಿತಾ (ಅಷ್ಟಕ: 08) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಋಕ್ಸಂಹಿತ ಸೂಕ್ತ ಸಂಖ್ಯಾ,ಋಕ್ಸಂಹಿತ ಮಂತ್ರ ಸಂಖ್ಯಾ}<br> [Last updated on: 22-Jan-2025]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಋಕ್ಸಂಹಿತ ಸೂಕ್ತ ಸಂಖ್ಯಾ,ಋಕ್ಸಂಹಿತ ಮಂತ್ರ ಸಂಖ್ಯಾ}<br> [Last updated on: 24-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -2412,10 +2412,10 @@
 <td class='SuktaLabel'>[60] ಕದೇತ್ಯೇಕಾದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಕೌತ್ಸೋದುರ್ಮಿತ್ರ ಇಂದ್ರ ಉಷ್ಣಿಕ್ ಆದ್ಯಾಗಾಯತ್ರೀವಾ ದ್ವಿತೀಯಾಸಪ್ತಮ್ಯೌಪಿಪೀಲಿಕಮಧ್ಯೇಅಂತ್ಯಾತ್ರಿಷ್ಟುಪ್ |</td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಕ॒ದಾ ವ॑ಸೋ ಸ್ತೋ॒ತ್ರಂ ಹರ್‍ಯ॑ತ॒ ಆವ॑ ಶ್ಮ॒ಶಾ ರು॑ಧ॒ದ್ವಾಃ |<span class='RishiDevChandas'>{ಕೌತ್ಸೋ ದುರ್ಮಿತ್ರಃ | ಇಂದ್ರಃ | ಗಾಯತ್ರಿ}</span><p>ದೀ॒ರ್ಘಂ ಸು॒ತಂ ವಾ॒ತಾಪ್ಯಾ᳚ಯ ||<span class='MantraNumbering'>{1/11}{8.5.26.1}{10.105.1}{10.9.6.1}{942, 10012}</span></td>
+<td class='VargaStyle2'>ಕ॒ದಾ ವ॑ಸೋ ಸ್ತೋ॒ತ್ರಂ ಹರ್‍ಯ॑ತ॒ ಆವ॑ ಶ್ಮ॒ಶಾ ರು॑ಧ॒ದ್ವಾಃ |<span class='RishiDevChandas'>{ಕೌತ್ಸೋ ದುರ್ಮಿತ್ರಃ | ಇಂದ್ರಃ | ಗಾಯತ್ರೀ}</span><p>ದೀ॒ರ್ಘಂ ಸು॒ತಂ ವಾ॒ತಾಪ್ಯಾ᳚ಯ ||<span class='MantraNumbering'>{1/11}{8.5.26.1}{10.105.1}{10.9.6.1}{942, 10012}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಹರೀ॒ ಯಸ್ಯ॑ ಸು॒ಯುಜಾ॒ ವಿವ್ರ॑ತಾ॒ ವೇರರ್‍ವಂ॒ತಾನು॒ ಶೇಪಾ᳚ |<span class='RishiDevChandas'>{ಕೌತ್ಸೋ ದುರ್ಮಿತ್ರಃ | ಇಂದ್ರಃ | ಪಿಪೀಲಿಕಮಧ್ಯ}</span><p>ಉ॒ಭಾ ರ॒ಜೀ ನ ಕೇ॒ಶಿನಾ॒ ಪತಿ॒ರ್ದನ್ ||<span class='MantraNumbering'>{2/11}{8.5.26.2}{10.105.2}{10.9.6.2}{942, 10013}</span></td>
+<td class='VargaStyle2'>ಹರೀ॒ ಯಸ್ಯ॑ ಸು॒ಯುಜಾ॒ ವಿವ್ರ॑ತಾ॒ ವೇರರ್‍ವಂ॒ತಾನು॒ ಶೇಪಾ᳚ |<span class='RishiDevChandas'>{ಕೌತ್ಸೋ ದುರ್ಮಿತ್ರಃ | ಇಂದ್ರಃ | ಗಾಯತ್ರೀ}</span><p>ಉ॒ಭಾ ರ॒ಜೀ ನ ಕೇ॒ಶಿನಾ॒ ಪತಿ॒ರ್ದನ್ ||<span class='MantraNumbering'>{2/11}{8.5.26.2}{10.105.2}{10.9.6.2}{942, 10013}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಅಪ॒ ಯೋರಿಂದ್ರಃ॒ ಪಾಪ॑ಜ॒ ಆ ಮರ್‍ತೋ॒ ನ ಶ॑ಶ್ರಮಾ॒ಣೋ ಬಿ॑ಭೀ॒ವಾನ್ |<span class='RishiDevChandas'>{ಕೌತ್ಸೋ ದುರ್ಮಿತ್ರಃ | ಇಂದ್ರಃ | ಉಷ್ಣಿಕ್}</span><p>ಶು॒ಭೇ ಯದ್ಯು॑ಯು॒ಜೇ ತವಿ॑ಷೀವಾನ್ ||<span class='MantraNumbering'>{3/11}{8.5.26.3}{10.105.3}{10.9.6.3}{942, 10014}</span></td>
@@ -2430,7 +2430,7 @@
 <td class='VargaStyle1'>ಪ್ರಾಸ್ತೌ᳚ದೃ॒ಷ್ವೌಜಾ᳚ ಋ॒ಷ್ವೇಭಿ॑ಸ್ತ॒ತಕ್ಷ॒ ಶೂರಃ॒ ಶವ॑ಸಾ |<span class='RishiDevChandas'>{ಕೌತ್ಸೋ ದುರ್ಮಿತ್ರಃ | ಇಂದ್ರಃ | ಉಷ್ಣಿಕ್}</span><p>ಋ॒ಭುರ್‍ನ ಕ್ರತು॑ಭಿರ್ಮಾತ॒ರಿಶ್ವಾ᳚ ||<span class='MantraNumbering'>{6/11}{8.5.27.1}{10.105.6}{10.9.6.6}{942, 10017}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ವಜ್ರಂ॒ ಯಶ್ಚ॒ಕ್ರೇ ಸು॒ಹನಾ᳚ಯ॒ ದಸ್ಯ॑ವೇ ಹಿರೀಮ॒ಶೋ ಹಿರೀ᳚ಮಾನ್ |<span class='RishiDevChandas'>{ಕೌತ್ಸೋ ದುರ್ಮಿತ್ರಃ | ಇಂದ್ರಃ | ಪಿಪೀಲಿಕಮಧ್ಯ}</span><p>ಅರು॑ತಹನು॒ರದ್ಭು॑ತಂ॒ ನ ರಜಃ॑ ||<span class='MantraNumbering'>{7/11}{8.5.27.2}{10.105.7}{10.9.6.7}{942, 10018}</span></td>
+<td class='VargaStyle1'>ವಜ್ರಂ॒ ಯಶ್ಚ॒ಕ್ರೇ ಸು॒ಹನಾ᳚ಯ॒ ದಸ್ಯ॑ವೇ ಹಿರೀಮ॒ಶೋ ಹಿರೀ᳚ಮಾನ್ |<span class='RishiDevChandas'>{ಕೌತ್ಸೋ ದುರ್ಮಿತ್ರಃ | ಇಂದ್ರಃ | ಗಾಯತ್ರೀ}</span><p>ಅರು॑ತಹನು॒ರದ್ಭು॑ತಂ॒ ನ ರಜಃ॑ ||<span class='MantraNumbering'>{7/11}{8.5.27.2}{10.105.7}{10.9.6.7}{942, 10018}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಅವ॑ ನೋ ವೃಜಿ॒ನಾ ಶಿ॑ಶೀಹ್ಯೃ॒ಚಾ ವ॑ನೇಮಾ॒ನೃಚಃ॑ |<span class='RishiDevChandas'>{ಕೌತ್ಸೋ ದುರ್ಮಿತ್ರಃ | ಇಂದ್ರಃ | ಉಷ್ಣಿಕ್}</span><p>ನಾಬ್ರ᳚ಹ್ಮಾ ಯ॒ಜ್ಞ ಋಧ॒ಗ್ಜೋಷ॑ತಿ॒ ತ್ವೇ ||<span class='MantraNumbering'>{8/11}{8.5.27.3}{10.105.8}{10.9.6.8}{942, 10019}</span></td>
