--- a/Rigveda/SamhitaPatha/Kannada/Mandala/Format1/RVS-Kannada-F1-M01.html
+++ b/Rigveda/SamhitaPatha/Kannada/Mandala/Format1/RVS-Kannada-F1-M01.html
@@ -72,7 +72,7 @@
 <td class='VargaStyle2'>ಕ॒ವೀ ನೋ᳚ ಮಿ॒ತ್ರಾವರು॑ಣಾ ತುವಿಜಾ॒ತಾ, ಉ॑ರು॒ಕ್ಷಯಾ᳚ |<span class='RishiDevChandas'>{ವೈಶ್ವಾಮಿತ್ರೋ ಮಧುಚ್ಛಂದಾಃ | ಮಿತ್ರಾವರುಣೌ | ಗಾಯತ್ರೀ}</span><p>ದಕ್ಷಂ᳚ ದಧಾತೇ, ಅ॒ಪಸಂ᳚ ||<span class='MantraNumbering'>{9/9}{1.2.9}{1.1.2.9}{1.1.4.4}{2, 18}</span></td>
 </tr>
 <tr>
-<td class='SuktaLabel'>[3] ಅಶ್ವಿನಾಯಜ್ವರೀರಿತಿ ದ್ವಾದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ವೈಶ್ವಾಮಿತ್ರೋಮಧುಚ್ಛಂದಾಃ  ಆದ್ಯತೃಚಸ್ಯಾಶ್ವಿನೌ ದ್ವಿತೀಯತೃಚಸ್ಯೇಂದ್ರಃ ತೃತೀಯತೃಚಸ್ಯವಿಶ್ವೇದೇವಾಃ ಚತುರ್ಥತೃಚಸ್ಯ ಸರಸ್ವತೀ ಗಾಯತ್ರೀ |</td>
+<td class='SuktaLabel'>[3] ಅಶ್ವಿನಾಯಜ್ವರೀರಿತಿ ದ್ವಾದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ವೈಶ್ವಾಮಿತ್ರೋಮಧುಚ್ಛಂದಾಃ  ಆದ್ಯತೃಚಸ್ಯಾಶ್ವಿನೌ ದ್ವಿತೀಯತೃಚಸ್ಯೇಂದ್ರಃ ತೃತೀಯತೃಚಸ್ಯವಿಶ್ವೇದೇವಾಃ ಚತುರ್ಥತೃಚಸ್ಯಸರಸ್ವತೀಗಾಯತ್ರೀ |</td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಅಶ್ವಿ॑ನಾ॒ ಯಜ್ವ॑ರೀ॒ರಿಷೋ॒ ದ್ರವ॑ತ್ಪಾಣೀ॒ ಶುಭ॑ಸ್ಪತೀ |<span class='RishiDevChandas'>{ವೈಶ್ವಾಮಿತ್ರೋ ಮಧುಚ್ಛಂದಾಃ | ಅಶ್ವಿನೌ | ಗಾಯತ್ರೀ}</span><p>ಪುರು॑ಭುಜಾ ಚನ॒ಸ್ಯತಂ᳚ ||<span class='MantraNumbering'>{1/12}{1.3.1}{1.1.3.1}{1.1.5.1}{3, 19}</span></td>
@@ -111,7 +111,7 @@
 <td class='VargaStyle2'>ಮ॒ಹೋ, ಅರ್ಣಃ॒ ಸರ॑ಸ್ವತೀ॒ ಪ್ರ ಚೇ᳚ತಯತಿ ಕೇ॒ತುನಾ᳚ |<span class='RishiDevChandas'>{ವೈಶ್ವಾಮಿತ್ರೋ ಮಧುಚ್ಛಂದಾಃ | ಸರಸ್ವತೀ | ಗಾಯತ್ರೀ}</span><p>ಧಿಯೋ॒ ವಿಶ್ವಾ॒ ವಿ ರಾ᳚ಜತಿ ||<span class='MantraNumbering'>{12/12}{1.3.12}{1.1.3.12}{1.1.6.6}{3, 30}</span></td>
 </tr>
 <tr>
-<td class='SuktaLabel'>[4] ಸುರೂಪಕೃತ್ನುಮಿತಿ ದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ವೈಶ್ವಾಮಿತ್ರೋ ಮಧುಚ್ಛಂದ ಇಂದ್ರೋ ಗಾಯತ್ರೀ |</td>
+<td class='SuktaLabel'>[4] ಸುರೂಪಕೃತ್ನುಮಿತಿ ದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ವೈಶ್ವಾಮಿತ್ರೋಮಧುಚ್ಛಂದಾಇಂದ್ರೋಗಾಯತ್ರೀ |</td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಸು॒ರೂ॒ಪ॒ಕೃ॒ತ್ನುಮೂ॒ತಯೇ᳚ ಸು॒ದುಘಾ᳚ಮಿವ ಗೋ॒ದುಹೇ᳚ |<span class='RishiDevChandas'>{ವೈಶ್ವಾಮಿತ್ರೋ ಮಧುಚ್ಛಂದಾಃ | ಇಂದ್ರಃ | ಗಾಯತ್ರೀ}</span><p>ಜು॒ಹೂ॒ಮಸಿ॒ ದ್ಯವಿ॑ದ್ಯವಿ ||<span class='MantraNumbering'>{1/10}{1.4.1}{1.2.1.1}{1.1.7.1}{4, 31}</span></td>
@@ -144,7 +144,7 @@
 <td class='VargaStyle2'>ಯೋ ರಾ॒ಯೋ॒೩॑(ಓ॒)ವನಿ᳚ರ್ಮ॒ಹಾಂತ್ಸು॑ಪಾ॒ರಃ ಸು᳚ನ್ವ॒ತಃ ಸಖಾ᳚ |<span class='RishiDevChandas'>{ವೈಶ್ವಾಮಿತ್ರೋ ಮಧುಚ್ಛಂದಾಃ | ಇಂದ್ರಃ | ಗಾಯತ್ರೀ}</span><p>ತಸ್ಮಾ॒, ಇಂದ್ರಾ᳚ಯ ಗಾಯತ ||<span class='MantraNumbering'>{10/10}{1.4.10}{1.2.1.10}{1.1.8.5}{4, 40}</span></td>
 </tr>
 <tr>
-<td class='SuktaLabel'>[5] ಆತ್ವೇತೇತಿ ದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ವೈಶ್ವಾಮಿತ್ರೋ ಮಧುಚ್ಛಂದಾ ಇಂದ್ರೋಗಾಯತ್ರೀ |</td>
+<td class='SuktaLabel'>[5] ಆತ್ವೇತೇತಿ ದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ವೈಶ್ವಾಮಿತ್ರೋಮಧುಚ್ಛಂದಾಇಂದ್ರೋಗಾಯತ್ರೀ |</td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಆ ತ್ವೇತಾ॒ ನಿ ಷೀ᳚ದ॒ತೇಂದ್ರ॑ಮ॒ಭಿ ಪ್ರ ಗಾ᳚ಯತ |<span class='RishiDevChandas'>{ವೈಶ್ವಾಮಿತ್ರೋ ಮಧುಚ್ಛಂದಾಃ | ಇಂದ್ರಃ | ಗಾಯತ್ರೀ}</span><p>ಸಖಾ᳚ಯಃ॒ ಸ್ತೋಮ॑ವಾಹಸಃ ||<span class='MantraNumbering'>{1/10}{1.5.1}{1.2.2.1}{1.1.9.1}{5, 41}</span></td>
@@ -177,7 +177,7 @@
 <td class='VargaStyle2'>ಮಾ ನೋ॒ ಮರ್‍ತಾ᳚, ಅ॒ಭಿ ದ್ರು॑ಹನ್‌ ತ॒ನೂನಾ᳚ಮಿಂದ್ರ ಗಿರ್‍ವಣಃ |<span class='RishiDevChandas'>{ವೈಶ್ವಾಮಿತ್ರೋ ಮಧುಚ್ಛಂದಾಃ | ಇಂದ್ರಃ | ಗಾಯತ್ರೀ}</span><p>ಈಶಾ᳚ನೋ ಯವಯಾ ವ॒ಧಂ ||<span class='MantraNumbering'>{10/10}{1.5.10}{1.2.2.10}{1.1.10.5}{5, 50}</span></td>
 </tr>
 <tr>
-<td class='SuktaLabel'>[6] ಯುಂಜತೀತಿ ದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ವೈಶ್ವಾಮಿತ್ರೋ ಮಧುಚ್ಛಂದಾಃ ಆದ್ಯಾನಾಂತಿಸೃಣಾಮಿಂದ್ರಃ ತತಃಷಣ್ಣಾಂಮರುತಃ (ವೀಳುಚಿದಿಂದ್ರೇಣೇತಿದ್ವಯೋರಿಂದ್ರಶ್ಚವಾ) ದಶಮ್ಯಾ ಇಂದ್ರೋ ಗಾಯತ್ರೀ |</td>
+<td class='SuktaLabel'>[6] ಯುಂಜತೀತಿ ದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ವೈಶ್ವಾಮಿತ್ರೋಮಧುಚ್ಛಂದಾಃ ಆದ್ಯಾನಾಂತಿಸೃಣಾಮಿಂದ್ರಃ ತತಃಷಣ್ಣಾಂಮರುತಃ (ವೀಳುಚಿದಿಂದ್ರೇಣೇತಿದ್ವಯೋರಿಂದ್ರಶ್ಚವಾ) ದಶಮ್ಯಾಇಂದ್ರೋಗಾಯತ್ರೀ |</td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಯುಂ॒ಜಂತಿ॑ ಬ್ರ॒ಧ್ನಮ॑ರು॒ಷಂ ಚರಂ᳚ತಂ॒ ಪರಿ॑ ತ॒ಸ್ಥುಷಃ॑ |<span class='RishiDevChandas'>{ವೈಶ್ವಾಮಿತ್ರೋ ಮಧುಚ್ಛಂದಾಃ | ಇಂದ್ರಃ | ಗಾಯತ್ರೀ}</span><p>ರೋಚಂ᳚ತೇ ರೋಚ॒ನಾ ದಿ॒ವಿ ||<span class='MantraNumbering'>{1/10}{1.6.1}{1.2.3.1}{1.1.11.1}{6, 51}</span></td>
@@ -195,7 +195,7 @@
 <td class='VargaStyle1'>ವೀ॒ಳು ಚಿ॑ದಾರುಜ॒ತ್ನುಭಿ॒ರ್ಗುಹಾ᳚ ಚಿದಿಂದ್ರ॒ ವಹ್ನಿ॑ಭಿಃ |<span class='RishiDevChandas'>{ವೈಶ್ವಾಮಿತ್ರೋ ಮಧುಚ್ಛಂದಾಃ | ಮರುತ ಇಂದ್ರಶ್ಚ | ಗಾಯತ್ರೀ}</span><p>ಅವಿಂ᳚ದ ಉ॒ಸ್ರಿಯಾ॒, ಅನು॑ ||<span class='MantraNumbering'>{5/10}{1.6.5}{1.2.3.5}{1.1.11.5}{6, 55}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ದೇ॒ವ॒ಯಂತೋ॒ ಯಥಾ᳚ ಮ॒ತಿಮಚ್ಛಾ᳚ ವಿ॒ದದ್ವ॑ಸುಂ॒ ಗಿರಃ॑ |<span class='RishiDevChandas'>{ವೈಶ್ವಾಮಿತ್ರೋ ಮಧುಚ್ಛಂದಾಃ | ಇಂದ್ರಃ | ಗಾಯತ್ರೀ}</span><p>ಮ॒ಹಾಮ॑ನೂಷತ ಶ್ರು॒ತಂ ||<span class='MantraNumbering'>{6/10}{1.6.6}{1.2.3.6}{1.1.12.1}{6, 56}</span></td>
+<td class='VargaStyle2'>ದೇ॒ವ॒ಯಂತೋ॒ ಯಥಾ᳚ ಮ॒ತಿಮಚ್ಛಾ᳚ ವಿ॒ದದ್ವ॑ಸುಂ॒ ಗಿರಃ॑ |<span class='RishiDevChandas'>{ವೈಶ್ವಾಮಿತ್ರೋ ಮಧುಚ್ಛಂದಾಃ | ಮರುತಃ | ಗಾಯತ್ರೀ}</span><p>ಮ॒ಹಾಮ॑ನೂಷತ ಶ್ರು॒ತಂ ||<span class='MantraNumbering'>{6/10}{1.6.6}{1.2.3.6}{1.1.12.1}{6, 56}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಇಂದ್ರೇ᳚ಣ॒ ಸಂ ಹಿ ದೃಕ್ಷ॑ಸೇ ಸಂಜಗ್ಮಾ॒ನೋ, ಅಬಿ॑ಭ್ಯುಷಾ |<span class='RishiDevChandas'>{ವೈಶ್ವಾಮಿತ್ರೋ ಮಧುಚ್ಛಂದಾಃ | ಮರುತ ಇಂದ್ರಶ್ಚ | ಗಾಯತ್ರೀ}</span><p>ಮಂ॒ದೂ ಸ॑ಮಾ॒ನವ॑ರ್ಚಸಾ ||<span class='MantraNumbering'>{7/10}{1.6.7}{1.2.3.7}{1.1.12.2}{6, 57}</span></td>
@@ -210,7 +210,7 @@
 <td class='VargaStyle2'>ಇ॒ತೋ ವಾ᳚ ಸಾ॒ತಿಮೀಮ॑ಹೇ ದಿ॒ವೋ ವಾ॒ ಪಾರ್‍ಥಿ॑ವಾ॒ದಧಿ॑ |<span class='RishiDevChandas'>{ವೈಶ್ವಾಮಿತ್ರೋ ಮಧುಚ್ಛಂದಾಃ | ಇಂದ್ರಃ | ಗಾಯತ್ರೀ}</span><p>ಇಂದ್ರಂ᳚ ಮ॒ಹೋ ವಾ॒ ರಜ॑ಸಃ ||<span class='MantraNumbering'>{10/10}{1.6.10}{1.2.3.10}{1.1.12.5}{6, 60}</span></td>
 </tr>
 <tr>
-<td class='SuktaLabel'>[7] ಇಂದ್ರಮಿದಿತಿ ದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ವೈಶ್ವಾಮಿತ್ರೋ ಮಧುಚ್ಛಂದ ಇಂದ್ರೋ ಗಾಯತ್ರೀ |</td>
+<td class='SuktaLabel'>[7] ಇಂದ್ರಮಿದಿತಿ ದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ವೈಶ್ವಾಮಿತ್ರೋಮಧುಚ್ಛಂದಾಇಂದ್ರೋಗಾಯತ್ರೀ |</td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಇಂದ್ರ॒ಮಿದ್‌ಗಾ॒ಥಿನೋ᳚ ಬೃ॒ಹದಿಂದ್ರ॑ಮ॒ರ್ಕೇಭಿ॑ರ॒ರ್ಕಿಣಃ॑ |<span class='RishiDevChandas'>{ವೈಶ್ವಾಮಿತ್ರೋ ಮಧುಚ್ಛಂದಾಃ | ಇಂದ್ರಃ | ಗಾಯತ್ರೀ}</span><p>ಇಂದ್ರಂ॒ ವಾಣೀ᳚ರನೂಷತ ||<span class='MantraNumbering'>{1/10}{1.7.1}{1.2.4.1}{1.1.13.1}{7, 61}</span></td>
@@ -243,7 +243,7 @@
 <td class='VargaStyle2'>ಇಂದ್ರಂ᳚ ವೋ ವಿ॒ಶ್ವತ॒ಸ್ಪರಿ॒ ಹವಾ᳚ಮಹೇ॒ ಜನೇ᳚ಭ್ಯಃ |<span class='RishiDevChandas'>{ವೈಶ್ವಾಮಿತ್ರೋ ಮಧುಚ್ಛಂದಾಃ | ಇಂದ್ರಃ | ಗಾಯತ್ರೀ}</span><p>ಅ॒ಸ್ಮಾಕ॑ಮಸ್ತು॒ ಕೇವ॑ಲಃ ||<span class='MantraNumbering'>{10/10}{1.7.10}{1.2.4.10}{1.1.14.5}{7, 70}</span></td>
 </tr>
 <tr>
-<td class='SuktaLabel'>[8] ಏಂದ್ರೇತಿದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ವೈಶ್ವಾಮಿತ್ರೋ ಮಧುಚ್ಛಂದ ಇಂದ್ರೋಗಾಯತ್ರೀ |</td>
+<td class='SuktaLabel'>[8] ಏಂದ್ರೇತಿ ದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ವೈಶ್ವಾಮಿತ್ರೋಮಧುಚ್ಛಂದಾಇಂದ್ರೋಗಾಯತ್ರೀ |</td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಏಂದ್ರ॑ ಸಾನ॒ಸಿಂ ರ॒ಯಿಂ ಸ॒ಜಿತ್ವಾ᳚ನಂ ಸದಾ॒ಸಹಂ᳚ |<span class='RishiDevChandas'>{ವೈಶ್ವಾಮಿತ್ರೋ ಮಧುಚ್ಛಂದಾಃ | ಇಂದ್ರಃ | ಗಾಯತ್ರೀ}</span><p>ವರ್ಷಿ॑ಷ್ಠಮೂ॒ತಯೇ᳚ ಭರ ||<span class='MantraNumbering'>{1/10}{1.8.1}{1.3.1.1}{1.1.15.1}{8, 71}</span></td>
@@ -276,7 +276,7 @@
 <td class='VargaStyle2'>ಏ॒ವಾ ಹ್ಯ॑ಸ್ಯ॒ ಕಾಮ್ಯಾ॒ ಸ್ತೋಮ॑ ಉ॒ಕ್ಥಂ ಚ॒ ಶಂಸ್ಯಾ᳚ |<span class='RishiDevChandas'>{ವೈಶ್ವಾಮಿತ್ರೋ ಮಧುಚ್ಛಂದಾಃ | ಇಂದ್ರಃ | ವರ್ಧಮಾನಾ ಗಾಯತ್ರೀ}</span><p>ಇಂದ್ರಾ᳚ಯ॒ ಸೋಮ॑ಪೀತಯೇ ||<span class='MantraNumbering'>{10/10}{1.8.10}{1.3.1.10}{1.1.16.5}{8, 80}</span></td>
 </tr>
 <tr>
-<td class='SuktaLabel'>[9] ಇಂದ್ರೇಹೀತಿದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ವೈಶ್ವಾಮಿತ್ರೋ ಮಧುಚ್ಛಂದ ಇಂದ್ರೋಗಾಯತ್ರೀ |</td>
+<td class='SuktaLabel'>[9] ಇಂದ್ರೇಹೀತಿ ದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ವೈಶ್ವಾಮಿತ್ರೋಮಧುಚ್ಛಂದಾಇಂದ್ರೋಗಾಯತ್ರೀ |</td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಇಂದ್ರೇಹಿ॒ ಮತ್ಸ್ಯಂಧ॑ಸೋ॒ ವಿಶ್ವೇ᳚ಭಿಃ ಸೋಮ॒ಪರ್‍ವ॑ಭಿಃ |<span class='RishiDevChandas'>{ವೈಶ್ವಾಮಿತ್ರೋ ಮಧುಚ್ಛಂದಾಃ | ಇಂದ್ರಃ | ಗಾಯತ್ರೀ}</span><p>ಮ॒ಹಾಁ, ಅ॑ಭಿ॒ಷ್ಟಿರೋಜ॑ಸಾ ||<span class='MantraNumbering'>{1/10}{1.9.1}{1.3.2.1}{1.1.17.1}{9, 81}</span></td>
@@ -309,7 +309,7 @@
 <td class='VargaStyle2'>ಸು॒ತೇಸು॑ತೇ॒ ನ್ಯೋ᳚ಕಸೇ ಬೃ॒ಹದ್‌ ಬೃ॑ಹ॒ತ ಏದ॒ರಿಃ |<span class='RishiDevChandas'>{ವೈಶ್ವಾಮಿತ್ರೋ ಮಧುಚ್ಛಂದಾಃ | ಇಂದ್ರಃ | ಗಾಯತ್ರೀ}</span><p>ಇಂದ್ರಾ᳚ಯ ಶೂ॒ಷಮ॑ರ್ಚತಿ ||<span class='MantraNumbering'>{10/10}{1.9.10}{1.3.2.10}{1.1.18.5}{9, 90}</span></td>
 </tr>
 <tr>
-<td class='SuktaLabel'>[10] ಗಾಯಂತೀತಿದ್ವಾದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ವೈಶ್ವಾಮಿತ್ರೋ ಮಧುಚ್ಛಂದ ಈಂದ್ರೋನುಷ್ಟುಪ್ |</td>
+<td class='SuktaLabel'>[10] ಗಾಯಂತೀತಿ ದ್ವಾದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ವೈಶ್ವಾಮಿತ್ರೋಮಧುಚ್ಛಂದಾಇಂದ್ರೋನುಷ್ಟುಪ್ |</td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಗಾಯಂ᳚ತಿ ತ್ವಾ ಗಾಯ॒ತ್ರಿಣೋಽರ್ಚಂ᳚ತ್ಯ॒ರ್ಕಮ॒ರ್ಕಿಣಃ॑ |<span class='RishiDevChandas'>{ವೈಶ್ವಾಮಿತ್ರೋ ಮಧುಚ್ಛಂದಾಃ | ಇಂದ್ರಃ | ಅನುಷ್ಟುಪ್}</span><p>ಬ್ರ॒ಹ್ಮಾಣ॑ಸ್ತ್ವಾ ಶತಕ್ರತ॒ ಉದ್‌ ವಂ॒ಶಮಿ॑ವ ಯೇಮಿರೇ ||<span class='MantraNumbering'>{1/12}{1.10.1}{1.3.3.1}{1.1.19.1}{10, 91}</span></td>
@@ -348,34 +348,34 @@
 <td class='VargaStyle2'>ಪರಿ॑ ತ್ವಾ ಗಿರ್‍ವಣೋ॒ ಗಿರ॑ಇ॒ಮಾ ಭ॑ವಂತು ವಿ॒ಶ್ವತಃ॑ |<span class='RishiDevChandas'>{ವೈಶ್ವಾಮಿತ್ರೋ ಮಧುಚ್ಛಂದಾಃ | ಇಂದ್ರಃ | ಅನುಷ್ಟುಪ್}</span><p>ವೃ॒ದ್ಧಾಯು॒ಮನು॒ ವೃದ್ಧ॑ಯೋ॒ ಜುಷ್ಟಾ᳚ ಭವಂತು॒ ಜುಷ್ಟ॑ಯಃ ||<span class='MantraNumbering'>{12/12}{1.10.12}{1.3.3.12}{1.1.20.6}{10, 102}</span></td>
 </tr>
 <tr>
-<td class='SuktaLabel'>[11] ಇಂದ್ರಂವಿಶ್ವಾಇತ್ಯಷ್ಟರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಜೇತಾಮಾಧುಚ್ಛಂದಸ ಇಂದ್ರೋನುಷ್ಟುಪ್ |</td>
+<td class='SuktaLabel'>[11] ಇಂದ್ರಂವಿಶ್ವಾಇತ್ಯಷ್ಟರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಜೇತಾಮಾಧುಚ್ಛಂದಸ‌ಇಂದ್ರೋನುಷ್ಟುಪ್ |</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಇಂದ್ರಂ॒ ವಿಶ್ವಾ᳚, ಅವೀವೃಧಂತ್‌ ಸಮು॒ದ್ರವ್ಯ॑ಚಸಂ॒ ಗಿರಃ॑ |<span class='RishiDevChandas'>{ಮಾಧುಚ್ಛಂದಸೋ ಜೇತಾ | ಇಂದ್ರಃ | ಅನುಷ್ಟುಪ್}</span><p>ರ॒ಥೀತ॑ಮಂ ರ॒ಥೀನಾಂ॒ ವಾಜಾ᳚ನಾಂ॒ ಸತ್ಪ॑ತಿಂ॒ ಪತಿಂ᳚ ||<span class='MantraNumbering'>{1/8}{1.11.1}{1.3.4.1}{1.1.21.1}{11, 103}</span></td>
+<td class='VargaStyle1'>ಇಂದ್ರಂ॒ ವಿಶ್ವಾ᳚, ಅವೀವೃಧಂತ್‌ ಸಮು॒ದ್ರವ್ಯ॑ಚಸಂ॒ ಗಿರಃ॑ |<span class='RishiDevChandas'>{ಜೇತಾ ಮಾಧುಚ್ಛಂದಸಃ | ಇಂದ್ರಃ | ಅನುಷ್ಟುಪ್}</span><p>ರ॒ಥೀತ॑ಮಂ ರ॒ಥೀನಾಂ॒ ವಾಜಾ᳚ನಾಂ॒ ಸತ್ಪ॑ತಿಂ॒ ಪತಿಂ᳚ ||<span class='MantraNumbering'>{1/8}{1.11.1}{1.3.4.1}{1.1.21.1}{11, 103}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಸ॒ಖ್ಯೇ ತ॑ ಇಂದ್ರ ವಾ॒ಜಿನೋ॒ ಮಾ ಭೇ᳚ಮ ಶವಸಸ್ಪತೇ |<span class='RishiDevChandas'>{ಮಾಧುಚ್ಛಂದಸೋ ಜೇತಾ | ಇಂದ್ರಃ | ಅನುಷ್ಟುಪ್}</span><p>ತ್ವಾಮ॒ಭಿ ಪ್ರ ಣೋ᳚ನುಮೋ॒ ಜೇತಾ᳚ರ॒ಮಪ॑ರಾಜಿತಂ ||<span class='MantraNumbering'>{2/8}{1.11.2}{1.3.4.2}{1.1.21.2}{11, 104}</span></td>
+<td class='VargaStyle1'>ಸ॒ಖ್ಯೇ ತ॑ ಇಂದ್ರ ವಾ॒ಜಿನೋ॒ ಮಾ ಭೇ᳚ಮ ಶವಸಸ್ಪತೇ |<span class='RishiDevChandas'>{ಜೇತಾ ಮಾಧುಚ್ಛಂದಸಃ | ಇಂದ್ರಃ | ಅನುಷ್ಟುಪ್}</span><p>ತ್ವಾಮ॒ಭಿ ಪ್ರ ಣೋ᳚ನುಮೋ॒ ಜೇತಾ᳚ರ॒ಮಪ॑ರಾಜಿತಂ ||<span class='MantraNumbering'>{2/8}{1.11.2}{1.3.4.2}{1.1.21.2}{11, 104}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಪೂ॒ರ್‍ವೀರಿಂದ್ರ॑ಸ್ಯ ರಾ॒ತಯೋ॒ ನ ವಿ ದ॑ಸ್ಯನ್‌ ತ್ಯೂ॒ತಯಃ॑ |<span class='RishiDevChandas'>{ಮಾಧುಚ್ಛಂದಸೋ ಜೇತಾ | ಇಂದ್ರಃ | ಅನುಷ್ಟುಪ್}</span><p>ಯದೀ॒ ವಾಜ॑ಸ್ಯ॒ ಗೋಮ॑ತಃ ಸ್ತೋ॒ತೃಭ್ಯೋ॒ ಮಂಹ॑ತೇ ಮ॒ಘಂ ||<span class='MantraNumbering'>{3/8}{1.11.3}{1.3.4.3}{1.1.21.3}{11, 105}</span></td>
+<td class='VargaStyle1'>ಪೂ॒ರ್‍ವೀರಿಂದ್ರ॑ಸ್ಯ ರಾ॒ತಯೋ॒ ನ ವಿ ದ॑ಸ್ಯನ್‌ ತ್ಯೂ॒ತಯಃ॑ |<span class='RishiDevChandas'>{ಜೇತಾ ಮಾಧುಚ್ಛಂದಸಃ | ಇಂದ್ರಃ | ಅನುಷ್ಟುಪ್}</span><p>ಯದೀ॒ ವಾಜ॑ಸ್ಯ॒ ಗೋಮ॑ತಃ ಸ್ತೋ॒ತೃಭ್ಯೋ॒ ಮಂಹ॑ತೇ ಮ॒ಘಂ ||<span class='MantraNumbering'>{3/8}{1.11.3}{1.3.4.3}{1.1.21.3}{11, 105}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಪು॒ರಾಂ ಭಿಂ॒ದುರ್‍ಯುವಾ᳚ ಕ॒ವಿರಮಿ॑ತೌಜಾ, ಅಜಾಯತ |<span class='RishiDevChandas'>{ಮಾಧುಚ್ಛಂದಸೋ ಜೇತಾ | ಇಂದ್ರಃ | ಅನುಷ್ಟುಪ್}</span><p>ಇಂದ್ರೋ॒ ವಿಶ್ವ॑ಸ್ಯ॒ ಕರ್ಮ॑ಣೋ ಧ॒ರ್‍ತಾ ವ॒ಜ್ರೀ ಪು॑ರುಷ್ಟು॒ತಃ ||<span class='MantraNumbering'>{4/8}{1.11.4}{1.3.4.4}{1.1.21.4}{11, 106}</span></td>
+<td class='VargaStyle1'>ಪು॒ರಾಂ ಭಿಂ॒ದುರ್‍ಯುವಾ᳚ ಕ॒ವಿರಮಿ॑ತೌಜಾ, ಅಜಾಯತ |<span class='RishiDevChandas'>{ಜೇತಾ ಮಾಧುಚ್ಛಂದಸಃ | ಇಂದ್ರಃ | ಅನುಷ್ಟುಪ್}</span><p>ಇಂದ್ರೋ॒ ವಿಶ್ವ॑ಸ್ಯ॒ ಕರ್ಮ॑ಣೋ ಧ॒ರ್‍ತಾ ವ॒ಜ್ರೀ ಪು॑ರುಷ್ಟು॒ತಃ ||<span class='MantraNumbering'>{4/8}{1.11.4}{1.3.4.4}{1.1.21.4}{11, 106}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ತ್ವಂ ವ॒ಲಸ್ಯ॒ ಗೋಮ॒ತೋ ಽಪಾ᳚ವರದ್ರಿವೋ॒ ಬಿಲಂ᳚ |<span class='RishiDevChandas'>{ಮಾಧುಚ್ಛಂದಸೋ ಜೇತಾ | ಇಂದ್ರಃ | ಅನುಷ್ಟುಪ್}</span><p>ತ್ವಾಂ ದೇ॒ವಾ, ಅಬಿ॑ಭ್ಯುಷಸ್ ತು॒ಜ್ಯಮಾ᳚ನಾಸ ಆವಿಷುಃ ||<span class='MantraNumbering'>{5/8}{1.11.5}{1.3.4.5}{1.1.21.5}{11, 107}</span></td>
+<td class='VargaStyle1'>ತ್ವಂ ವ॒ಲಸ್ಯ॒ ಗೋಮ॒ತೋ ಽಪಾ᳚ವರದ್ರಿವೋ॒ ಬಿಲಂ᳚ |<span class='RishiDevChandas'>{ಜೇತಾ ಮಾಧುಚ್ಛಂದಸಃ | ಇಂದ್ರಃ | ಅನುಷ್ಟುಪ್}</span><p>ತ್ವಾಂ ದೇ॒ವಾ, ಅಬಿ॑ಭ್ಯುಷಸ್ ತು॒ಜ್ಯಮಾ᳚ನಾಸ ಆವಿಷುಃ ||<span class='MantraNumbering'>{5/8}{1.11.5}{1.3.4.5}{1.1.21.5}{11, 107}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ತವಾ॒ಹಂ ಶೂ᳚ರ ರಾ॒ತಿಭಿಃ॒ ಪ್ರತ್ಯಾ᳚ಯಂ॒ ಸಿಂಧು॑ಮಾ॒ವದ॑ನ್ |<span class='RishiDevChandas'>{ಮಾಧುಚ್ಛಂದಸೋ ಜೇತಾ | ಇಂದ್ರಃ | ಅನುಷ್ಟುಪ್}</span><p>ಉಪಾ᳚ತಿಷ್ಠಂತ ಗಿರ್‍ವಣೋ ವಿ॒ದುಷ್ಟೇ॒ ತಸ್ಯ॑ ಕಾ॒ರವಃ॑ ||<span class='MantraNumbering'>{6/8}{1.11.6}{1.3.4.6}{1.1.21.6}{11, 108}</span></td>
+<td class='VargaStyle1'>ತವಾ॒ಹಂ ಶೂ᳚ರ ರಾ॒ತಿಭಿಃ॒ ಪ್ರತ್ಯಾ᳚ಯಂ॒ ಸಿಂಧು॑ಮಾ॒ವದ॑ನ್ |<span class='RishiDevChandas'>{ಜೇತಾ ಮಾಧುಚ್ಛಂದಸಃ | ಇಂದ್ರಃ | ಅನುಷ್ಟುಪ್}</span><p>ಉಪಾ᳚ತಿಷ್ಠಂತ ಗಿರ್‍ವಣೋ ವಿ॒ದುಷ್ಟೇ॒ ತಸ್ಯ॑ ಕಾ॒ರವಃ॑ ||<span class='MantraNumbering'>{6/8}{1.11.6}{1.3.4.6}{1.1.21.6}{11, 108}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಮಾ॒ಯಾಭಿ॑ರಿಂದ್ರ ಮಾ॒ಯಿನಂ॒ ತ್ವಂ ಶುಷ್ಣ॒ಮವಾ᳚ತಿರಃ |<span class='RishiDevChandas'>{ಮಾಧುಚ್ಛಂದಸೋ ಜೇತಾ | ಇಂದ್ರಃ | ಅನುಷ್ಟುಪ್}</span><p>ವಿ॒ದುಷ್ಟೇ॒ ತಸ್ಯ॒ ಮೇಧಿ॑ರಾ॒ಸ್ ತೇಷಾಂ॒ ಶ್ರವಾಂ॒ಸ್ಯುತ್ತಿ॑ರ ||<span class='MantraNumbering'>{7/8}{1.11.7}{1.3.4.7}{1.1.21.7}{11, 109}</span></td>
+<td class='VargaStyle1'>ಮಾ॒ಯಾಭಿ॑ರಿಂದ್ರ ಮಾ॒ಯಿನಂ॒ ತ್ವಂ ಶುಷ್ಣ॒ಮವಾ᳚ತಿರಃ |<span class='RishiDevChandas'>{ಜೇತಾ ಮಾಧುಚ್ಛಂದಸಃ | ಇಂದ್ರಃ | ಅನುಷ್ಟುಪ್}</span><p>ವಿ॒ದುಷ್ಟೇ॒ ತಸ್ಯ॒ ಮೇಧಿ॑ರಾ॒ಸ್ ತೇಷಾಂ॒ ಶ್ರವಾಂ॒ಸ್ಯುತ್ತಿ॑ರ ||<span class='MantraNumbering'>{7/8}{1.11.7}{1.3.4.7}{1.1.21.7}{11, 109}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಇಂದ್ರ॒ಮೀಶಾ᳚ನ॒ಮೋಜ॑ಸಾ॒ಭಿ ಸ್ತೋಮಾ᳚, ಅನೂಷತ |<span class='RishiDevChandas'>{ಮಾಧುಚ್ಛಂದಸೋ ಜೇತಾ | ಇಂದ್ರಃ | ಅನುಷ್ಟುಪ್}</span><p>ಸ॒ಹಸ್ರಂ॒ ಯಸ್ಯ॑ ರಾ॒ತಯ॑ ಉ॒ತ ವಾ॒ ಸಂತಿ॒ ಭೂಯ॑ಸೀಃ ||<span class='MantraNumbering'>{8/8}{1.11.8}{1.3.4.8}{1.1.21.8}{11, 110}</span></td>
+<td class='VargaStyle1'>ಇಂದ್ರ॒ಮೀಶಾ᳚ನ॒ಮೋಜ॑ಸಾ॒ಭಿ ಸ್ತೋಮಾ᳚, ಅನೂಷತ |<span class='RishiDevChandas'>{ಜೇತಾ ಮಾಧುಚ್ಛಂದಸಃ | ಇಂದ್ರಃ | ಅನುಷ್ಟುಪ್}</span><p>ಸ॒ಹಸ್ರಂ॒ ಯಸ್ಯ॑ ರಾ॒ತಯ॑ ಉ॒ತ ವಾ॒ ಸಂತಿ॒ ಭೂಯ॑ಸೀಃ ||<span class='MantraNumbering'>{8/8}{1.11.8}{1.3.4.8}{1.1.21.8}{11, 110}</span></td>
 </tr>
 <tr>
-<td class='SuktaLabel'>[12] ಅಗ್ನಿಂದೂತಮಿತಿದ್ವಾದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಕಾಣ್ವೋಮೇಧಾತಿಥಿರಗ್ನಿರ್ಗಾಯತ್ರೀ ಅಗ್ನಿನಾಗ್ನಿರಿತ್ಯಸ್ಯ ನಿರ್ಮಥ್ಯಾಹವನೀಯಾವನೀದೇವತೇ |</td>
+<td class='SuktaLabel'>[12] ಅಗ್ನಿಂದೂತಮಿತಿ ದ್ವಾದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಕಾಣ್ವೋಮೇಧಾತಿಥಿರಗ್ನಿರ್ಗಾಯತ್ರೀ ಅಗ್ನಿನಾಗ್ನಿರಿತ್ಯಸ್ಯ ನಿರ್ಮಥ್ಯಾಹವನೀಯಾವನೀದೇವತೇ |</td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಅ॒ಗ್ನಿಂ ದೂ॒ತಂ ವೃ॑ಣೀಮಹೇ॒ ಹೋತಾ᳚ರಂ ವಿ॒ಶ್ವವೇ᳚ದಸಂ |<span class='RishiDevChandas'>{ಕಾಣ್ವೋ ಮೇಧಾತಿಥಿ | ಅಗ್ನಿಃ | ಗಾಯತ್ರೀ}</span><p>ಅ॒ಸ್ಯ ಯ॒ಜ್ಞಸ್ಯ॑ ಸು॒ಕ್ರತುಂ᳚ ||<span class='MantraNumbering'>{1/12}{1.12.1}{1.4.1.1}{1.1.22.1}{12, 111}</span></td>
@@ -414,7 +414,7 @@
 <td class='VargaStyle1'>ಅಗ್ನೇ᳚ ಶು॒ಕ್ರೇಣ॑ ಶೋ॒ಚಿಷಾ॒ ವಿಶ್ವಾ᳚ಭಿರ್‌ದೇ॒ವಹೂ᳚ತಿಭಿಃ |<span class='RishiDevChandas'>{ಕಾಣ್ವೋ ಮೇಧಾತಿಥಿ | ಅಗ್ನಿಃ | ಗಾಯತ್ರೀ}</span><p>ಇ॒ಮಂ ಸ್ತೋಮಂ᳚ ಜುಷಸ್ವ ನಃ ||<span class='MantraNumbering'>{12/12}{1.12.12}{1.4.1.12}{1.1.23.6}{12, 122}</span></td>
 </tr>
 <tr>
-<td class='SuktaLabel'>[13] ಸುಸಮಿದ್ಧ‌ಇತಿ ದ್ವಾದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಕಾಣ್ವೋಮೇಧಾತಿಥಿಃ ಪ್ರಥಮಾಯಾಇಧ್ಮಃ (ಸಮಿದ್ಧೋಗ್ನಿರ್ವಾ) ದ್ವಿತೀಯಾಯಾಸ್ತನೂನಪಾತ್‌ತೃತೀಯಾಯಾನರಾಶಂಸಃ ಚತುರ್ಥ್ಯಾಇಳಃ ಪಂಚಮ್ಯಾಬರ್ಹಿಃ ಷಷ್ಟ್ಯಾ ದೇವ್ಯೋದ್ವಾರಃ ಸಪ್ತಮ್ಯ ಉಪಾಸಾನಕ್ತಾ ಅಷ್ಟಮ್ಯಾದೈವ್ಯೌಹೋತಾರೌ (ಪ್ರಚೇತಸಾವಿತಿಗುಣಃ) ನವಮ್ಯಾಃ ಸರಸ್ವತೀಳಾ ಭಾರತ್ಯಃ ದಶಮ್ಯಾಸ್ತ್ವಷ್ಟಾ ಏಕಾದಶ್ಯಾವನಸ್ಪತಿಃ ದ್ವಾದಶ್ಯಾಃಸ್ವಾಹಾಕೃತಯೋದೇವತಾಃ ಗಾಯತ್ರೀ ಛಂದಃ (ಏತದಾಪ್ರೀಸೂಕ್ತಂ) |</td>
+<td class='SuktaLabel'>[13] ಸುಸಮಿದ್ಧ‌ಇತಿ ದ್ವಾದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಕಾಣ್ವೋಮೇಧಾತಿಥಿಃ ಪ್ರಥಮಾಯಾಇಧ್ಮಃ (ಸಮಿದ್ಧೋಗ್ನಿರ್ವಾ) ದ್ವಿತೀಯಾಯಾಸ್ತನೂನಪಾತ್‌ ತೃತೀಯಾಯಾನರಾಶಂಸಃ ಚತುರ್ಥ್ಯಾಇಳಃ ಪಂಚಮ್ಯಾಬರ್ಹಿಃ ಷಷ್ಟ್ಯಾದೇವ್ಯೋದ್ವಾರಃ ಸಪ್ತಮ್ಯಾಉಷಾಸಾನಕ್ತಾ ಅಷ್ಟಮ್ಯಾದೈವ್ಯೌಹೋತಾರೌ (ಪ್ರಚೇತಸಾವಿತಿಗುಣಃ) ನವಮ್ಯಾಃಸರಸ್ವತೀಳಾಭಾರತ್ಯಃ ದಶಮ್ಯಾಸ್ತ್ವಷ್ಟಾ ಏಕಾದಶ್ಯಾವನಸ್ಪತಿಃ ದ್ವಾದಶ್ಯಾಃಸ್ವಾಹಾಕೃತಯೋದೇವತಾಃ ಗಾಯತ್ರೀ ಛಂದಃ (ಏತದಾಪ್ರೀಸೂಕ್ತಂ) |</td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಸುಸ॑ಮಿದ್ಧೋ ನ॒ ಆ ವ॑ಹ ದೇ॒ವಾಁ, ಅ॑ಗ್ನೇ ಹ॒ವಿಷ್ಮ॑ತೇ |<span class='RishiDevChandas'>{ಕಾಣ್ವೋ ಮೇಧಾತಿಥಿ | ಇಧ್ಮಃ ಸಮಿದ್ಧೋಽಗ್ನಿರ್ವಾ | ಗಾಯತ್ರೀ}</span><p>ಹೋತಃ॑ ಪಾವಕ॒ ಯಕ್ಷಿ॑ ಚ ||<span class='MantraNumbering'>{1/12}{1.13.1}{1.4.2.1}{1.1.24.1}{13, 123}</span></td>
@@ -492,7 +492,7 @@
 <td class='VargaStyle1'>ಯು॒ಕ್ಷ್ವಾ ಹ್ಯರು॑ಷೀ॒ ರಥೇ᳚ ಹ॒ರಿತೋ᳚ ದೇವ ರೋ॒ಹಿತಃ॑ |<span class='RishiDevChandas'>{ಕಾಣ್ವೋ ಮೇಧಾತಿಥಿ | ವಿಶ್ವದೇವಾಃ | ಗಾಯತ್ರೀ}</span><p>ತಾಭಿ॑ರ್ದೇ॒ವಾಁ, ಇ॒ಹಾ ವ॑ಹ ||<span class='MantraNumbering'>{12/12}{1.14.12}{1.4.3.12}{1.1.27.6}{14, 146}</span></td>
 </tr>
 <tr>
-<td class='SuktaLabel'>[15] ಇಂದ್ರಸೋಮಮಿತಿದ್ವಾದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಕಾಣ್ವೋಮೇಧಾತಿಥಿಃ ಆದ್ಯಾನಾಂಷಣ್ಣಾಂಇಂದ್ರೋಮರುತಸ್ತ್ವಷ್ಟಾಗ್ನಿರಿಂದ್ರೋಮಿತ್ರಾವರುಣೌ ತತಶ್ಚತಸೃಣಾಂ ದ್ರವಿಣೋದಾ ಅಗ್ನಿಃ ಏಕಾದಶ್ಯಾಅಶ್ವಿನೌದ್ವಾದಶ್ಯಾಅಗ್ನಿರ್ಗಾಯತ್ರೀ (ಋತುದೇವತಾಏತಾಃ) |</td>
+<td class='SuktaLabel'>[15] ಇಂದ್ರಸೋಮಮಿತಿ ದ್ವಾದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಕಾಣ್ವೋಮೇಧಾತಿಥಿಃ ಆದ್ಯಾನಾಂಷಣ್ಣಾಂಇಂದ್ರೋಮರುತಸ್ತ್ವಷ್ಟಾಗ್ನಿರಿಂದ್ರೋಮಿತ್ರಾವರುಣೌ ತತಶ್ಚತಸೃಣಾಂ ದ್ರವಿಣೋದಾ ಅಗ್ನಿಃ ಏಕಾದಶ್ಯಾಅಶ್ವಿನೌದ್ವಾದಶ್ಯಾಅಗ್ನಿರ್ಗಾಯತ್ರೀ (ಋತುದೇವತಾಏತಾಃ) |</td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಇಂದ್ರ॒ ಸೋಮಂ॒ ಪಿಬ॑ ಋ॒ತುನಾ ಽಽ ತ್ವಾ᳚ ವಿಶಂ॒ತ್ವಿಂದ॑ವಃ |<span class='RishiDevChandas'>{ಕಾಣ್ವೋ ಮೇಧಾತಿಥಿ | ಇಂದ್ರಃ | ಗಾಯತ್ರೀ}</span><p>ಮ॒ತ್ಸ॒ರಾಸ॒ಸ್ತದೋ᳚ಕಸಃ ||<span class='MantraNumbering'>{1/12}{1.15.1}{1.4.4.1}{1.1.28.1}{15, 147}</span></td>
@@ -561,7 +561,7 @@
 <td class='VargaStyle1'>ಸೇಮಂ ನಃ॒ ಕಾಮ॒ಮಾ ಪೃ॑ಣ॒ ಗೋಭಿ॒ರಶ್ವೈಃ᳚ ಶತಕ್ರತೋ |<span class='RishiDevChandas'>{ಕಾಣ್ವೋ ಮೇಧಾತಿಥಿ | ಇಂದ್ರಃ | ಗಾಯತ್ರೀ}</span><p>ಸ್ತವಾ᳚ಮ ತ್ವಾ ಸ್ವಾ॒ಧ್ಯಃ॑ ||<span class='MantraNumbering'>{9/9}{1.16.9}{1.4.5.9}{1.1.31.4}{16, 167}</span></td>
 </tr>
 <tr>
-<td class='SuktaLabel'>[17] ಇಂದ್ರಾವರುಣಯೋರಿತಿನವರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಕಾಣ್ವೋಮೇಧಾತಿಥಿರಿಂದ್ರಾವರುಣೌಗಾಯತ್ರೀ | ಯುವಾಕುಹಿದ್ವೃಚೌಪಾದನಿಚೂತೌ (ಇಂದ್ರಃ ಸಹಸ್ರೇತಿಹ್ರಸೀಯಸೀ ವಾ}</td>
+<td class='SuktaLabel'>[17] ಇಂದ್ರಾವರುಣಯೋರಿತಿ ನವರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಕಾಣ್ವೋಮೇಧಾತಿಥಿರಿಂದ್ರಾವರುಣೌಗಾಯತ್ರೀ | ಯುವಾಕುಹಿದ್ವೃಚೌಪಾದನಿಚೂತೌ (ಇಂದ್ರಃ ಸಹಸ್ರೇತಿಹ್ರಸೀಯಸೀ ವಾ}</td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಇಂದ್ರಾ॒ವರು॑ಣಯೋರ॒ಹಂ ಸ॒ಮ್ರಾಜೋ॒ರವ॒ ಆ ವೃ॑ಣೇ |<span class='RishiDevChandas'>{ಕಾಣ್ವೋ ಮೇಧಾತಿಥಿ | ಇಂದ್ರಾವರುಣೌ | ಗಾಯತ್ರೀ}</span><p>ತಾ ನೋ᳚ ಮೃಳಾತ ಈ॒ದೃಶೇ᳚ ||<span class='MantraNumbering'>{1/9}{1.17.1}{1.4.6.1}{1.1.32.1}{17, 168}</span></td>
@@ -591,7 +591,7 @@
 <td class='VargaStyle1'>ಪ್ರ ವಾ᳚ಮಶ್ನೋತು ಸುಷ್ಟು॒ತಿರಿಂದ್ರಾ᳚ವರುಣ॒ ಯಾಂ ಹು॒ವೇ |<span class='RishiDevChandas'>{ಕಾಣ್ವೋ ಮೇಧಾತಿಥಿ | ಇಂದ್ರಾವರುಣೌ | ಗಾಯತ್ರೀ}</span><p>ಯಾಮೃ॒ಧಾಥೇ᳚ ಸ॒ಧಸ್ತು॑ತಿಂ ||<span class='MantraNumbering'>{9/9}{1.17.9}{1.4.6.9}{1.1.33.4}{17, 176}</span></td>
 </tr>
 <tr>
-<td class='SuktaLabel'>[18] ಸೋಮಾನಮಿತಿನವರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಕಾಣ್ವೋ ಮೇಧಾತಿಥಿಃ ಆದ್ಯಾನಾಂತಿಸೃಣಾಂಬ್ರಹ್ಮಣಸ್ಪತಿಃ ಚತುರ್ಥ್ಯಾಇಂದ್ರಸೋಮಬ್ರಹ್ಮಣಸ್ಪತಯಃ ಪಂಚಮ್ಯಾಇಂದ್ರ ಸೋಮ ಬ್ರಹ್ಮಣಸ್ಪತಯೋದಕ್ಷಿಣಾಚ ತತಶ್ಚತಸೃಣಾಂಸದಸಸ್ಪತಿಃ (ಅಂತ್ಯಾಯಾನರಾಶಂಸೋವಾ) ಗಾಯತ್ರೀ |</td>
+<td class='SuktaLabel'>[18] ಸೋಮಾನಮಿತಿ ನವರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಕಾಣ್ವೋ ಮೇಧಾತಿಥಿಃ ಆದ್ಯಾನಾಂತಿಸೃಣಾಂಬ್ರಹ್ಮಣಸ್ಪತಿಃ ಚತುರ್ಥ್ಯಾಇಂದ್ರಸೋಮಬ್ರಹ್ಮಣಸ್ಪತಯಃ ಪಂಚಮ್ಯಾಇಂದ್ರ ಸೋಮ ಬ್ರಹ್ಮಣಸ್ಪತಯೋದಕ್ಷಿಣಾಚ ತತಶ್ಚತಸೃಣಾಂಸದಸಸ್ಪತಿಃ (ಅಂತ್ಯಾಯಾನರಾಶಂಸೋವಾ) ಗಾಯತ್ರೀ |</td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಸೋ॒ಮಾನಂ॒ ಸ್ವರ॑ಣಂ ಕೃಣು॒ಹಿ ಬ್ರ᳚ಹ್ಮಣಸ್ಪತೇ |<span class='RishiDevChandas'>{ಕಾಣ್ವೋ ಮೇಧಾತಿಥಿ | ಬ್ರಹ್ಮಣಸ್ಪತಿಃ | ಗಾಯತ್ರೀ}</span><p>ಕ॒ಕ್ಷೀವಂ᳚ತಂ॒ ಯ ಔ᳚ಶಿ॒ಜಃ ||<span class='MantraNumbering'>{1/9}{1.18.1}{1.5.1.1}{1.1.34.1}{18, 177}</span></td>
@@ -621,7 +621,7 @@
 <td class='VargaStyle1'>ನರಾ॒ಶಂಸಂ᳚ ಸು॒ಧೃಷ್ಟ॑ಮ॒ಮಪ॑ಶ್ಯಂ ಸ॒ಪ್ರಥ॑ಸ್ತಮಂ |<span class='RishiDevChandas'>{ಕಾಣ್ವೋ ಮೇಧಾತಿಥಿ | ನರಾಶಂಸಃ | ಗಾಯತ್ರೀ}</span><p>ದಿ॒ವೋ ನ ಸದ್ಮ॑ಮಖಸಂ ||<span class='MantraNumbering'>{9/9}{1.18.9}{1.5.1.9}{1.1.35.4}{18, 185}</span></td>
 </tr>
 <tr>
-<td class='SuktaLabel'>[19] ಪ್ರತಿತ್ಯಮಿತಿನವರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಕಾಣ್ವೋಮೇಧಾತಿಥಿರಗ್ನಾಮರುತೋಗಾಯತ್ರೀ |</td>
+<td class='SuktaLabel'>[19] ಪ್ರತಿತ್ಯಮಿತಿ ನವರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಕಾಣ್ವೋಮೇಧಾತಿಥಿರಗ್ನಾಮರುತೋಗಾಯತ್ರೀ |</td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಪ್ರತಿ॒ ತ್ಯಂ ಚಾರು॑ಮಧ್ವ॒ರಂ ಗೋ᳚ಪೀ॒ಥಾಯ॒ ಪ್ರ ಹೂ᳚ಯಸೇ |<span class='RishiDevChandas'>{ಕಾಣ್ವೋ ಮೇಧಾತಿಥಿ | ಅಗ್ನಿರ್ಮರುತಶ್ಚ | ಗಾಯತ್ರೀ}</span><p>ಮ॒ರುದ್ಭಿ॑ರಗ್ನ॒ ಆ ಗ॑ಹಿ ||<span class='MantraNumbering'>{1/9}{1.19.1}{1.5.2.1}{1.1.36.1}{19, 186}</span></td>
@@ -678,7 +678,7 @@
 <td class='VargaStyle2'>ಅಧಾ᳚ರಯಂತ॒ ವಹ್ನ॒ಯೋ ಽಭ॑ಜಂತ ಸುಕೃ॒ತ್ಯಯಾ᳚ |<span class='RishiDevChandas'>{ಕಾಣ್ವೋ ಮೇಧಾತಿಥಿ | ಋಭವಃ | ಗಾಯತ್ರೀ}</span><p>ಭಾ॒ಗಂ ದೇ॒ವೇಷು॑ ಯ॒ಜ್ಞಿಯಂ᳚ ||<span class='MantraNumbering'>{8/8}{1.20.8}{1.5.3.8}{1.2.2.3}{20, 202}</span></td>
 </tr>
 <tr>
-<td class='SuktaLabel'>[21] ಇಹೇಂದ್ರಾಗ್ನೀಇತಿಷಳರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಕಾಣ್ವೋಮೇಧಾತಿಥಿರಿಂದ್ರಾಗ್ನೀಗಾಯತ್ರೀ |</td>
+<td class='SuktaLabel'>[21] ಇಹೇಂದ್ರಾಗ್ನೀಇತಿ ಷಳರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಕಾಣ್ವೋಮೇಧಾತಿಥಿರಿಂದ್ರಾಗ್ನೀಗಾಯತ್ರೀ |</td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಇ॒ಹೇಂದ್ರಾ॒ಗ್ನೀ, ಉಪ॑ ಹ್ವಯೇ॒ ತಯೋ॒ರಿತ್‌ ಸ್ತೋಮ॑ಮುಶ್ಮಸಿ |<span class='RishiDevChandas'>{ಕಾಣ್ವೋ ಮೇಧಾತಿಥಿ | ಇಂದ್ರಾಗ್ನೀ | ಗಾಯತ್ರೀ}</span><p>ತಾ ಸೋಮಂ᳚ ಸೋಮ॒ಪಾತ॑ಮಾ ||<span class='MantraNumbering'>{1/6}{1.21.1}{1.5.4.1}{1.2.3.1}{21, 203}</span></td>
