--- a/Rigveda/SamhitaPatha/Kannada/Mandala/Format2/RVS-Kannada-F2-M10.html
+++ b/Rigveda/SamhitaPatha/Kannada/Mandala/Format2/RVS-Kannada-F2-M10.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ಶ್ರೀ॒ ಗು॒ರು॒ಭ್ಯೋ॒ ನ॒ಮಃ॒ ಹರಿಃ ಓಂ ||</h1>
 <h2 class='simpHtmlH1'>|| ಋಗ್ವೇದ ಸಂಹಿತಾ (ಮಂಡಲ: 10) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}{ಋಕ್ಸಂಹಿತ ಸೂಕ್ತ ಸಂಖ್ಯಾ,ಋಕ್ಸಂಹಿತ ಮಂತ್ರ ಸಂಖ್ಯಾ}<br> [Last updated on: 22-Jan-2025]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}{ಋಕ್ಸಂಹಿತ ಸೂಕ್ತ ಸಂಖ್ಯಾ,ಋಕ್ಸಂಹಿತ ಮಂತ್ರ ಸಂಖ್ಯಾ}<br> [Last updated on: 24-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -3966,10 +3966,10 @@
 <td class='SuktaLabel'>[105] ಕದೇತ್ಯೇಕಾದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಕೌತ್ಸೋದುರ್ಮಿತ್ರ ಇಂದ್ರ ಉಷ್ಣಿಕ್ ಆದ್ಯಾಗಾಯತ್ರೀವಾ ದ್ವಿತೀಯಾಸಪ್ತಮ್ಯೌಪಿಪೀಲಿಕಮಧ್ಯೇಅಂತ್ಯಾತ್ರಿಷ್ಟುಪ್ |</td>
 </tr>
 <tr>
-<td class='VargaStyle2'><span class='style1'>ಕ॒ದಾ</span><span class='style2'>ವ॑ಸೋ</span><span class='style1'>ಸ್ತೋ॒ತ್ರಂ</span><span class='style2'>ಹರ್‍ಯ॑ತ॒</span><span class='style1'>ಆವ॑</span><span class='style2'>ಶ್ಮ॒ಶಾ</span><span class='style1'>ರು॑ಧ॒ದ್ವಾಃ</span> |<span class='RishiDevChandas'>{ಕೌತ್ಸೋ ದುರ್ಮಿತ್ರಃ | ಇಂದ್ರಃ | ಗಾಯತ್ರಿ}</span><p><span class='style1'>ದೀ॒ರ್ಘಂ</span><span class='style2'>ಸು॒ತಂ</span><span class='style1'>ವಾ॒ತಾಪ್ಯಾ᳚ಯ</span> || <span class='MantraNumbering'>{1/11}{10.105.1}{10.9.6.1}{8.5.26.1}{942, 10012}</span></td>
+<td class='VargaStyle2'><span class='style1'>ಕ॒ದಾ</span><span class='style2'>ವ॑ಸೋ</span><span class='style1'>ಸ್ತೋ॒ತ್ರಂ</span><span class='style2'>ಹರ್‍ಯ॑ತ॒</span><span class='style1'>ಆವ॑</span><span class='style2'>ಶ್ಮ॒ಶಾ</span><span class='style1'>ರು॑ಧ॒ದ್ವಾಃ</span> |<span class='RishiDevChandas'>{ಕೌತ್ಸೋ ದುರ್ಮಿತ್ರಃ | ಇಂದ್ರಃ | ಗಾಯತ್ರೀ}</span><p><span class='style1'>ದೀ॒ರ್ಘಂ</span><span class='style2'>ಸು॒ತಂ</span><span class='style1'>ವಾ॒ತಾಪ್ಯಾ᳚ಯ</span> || <span class='MantraNumbering'>{1/11}{10.105.1}{10.9.6.1}{8.5.26.1}{942, 10012}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'><span class='style1'>ಹರೀ॒</span><span class='style2'>ಯಸ್ಯ॑</span><span class='style1'>ಸು॒ಯುಜಾ॒</span><span class='style2'>ವಿವ್ರ॑ತಾ॒</span><span class='style1'>ವೇರರ್‍ವಂ॒ತಾನು॒</span><span class='style2'>ಶೇಪಾ᳚</span> |<span class='RishiDevChandas'>{ಕೌತ್ಸೋ ದುರ್ಮಿತ್ರಃ | ಇಂದ್ರಃ | ಪಿಪೀಲಿಕಮಧ್ಯ}</span><p><span class='style1'>ಉ॒ಭಾ</span><span class='style2'>ರ॒ಜೀ</span><span class='style1'>ನ</span><span class='style2'>ಕೇ॒ಶಿನಾ॒</span><span class='style1'>ಪತಿ॒ರ್ದನ್</span> || <span class='MantraNumbering'>{2/11}{10.105.2}{10.9.6.2}{8.5.26.2}{942, 10013}</span></td>
+<td class='VargaStyle2'><span class='style1'>ಹರೀ॒</span><span class='style2'>ಯಸ್ಯ॑</span><span class='style1'>ಸು॒ಯುಜಾ॒</span><span class='style2'>ವಿವ್ರ॑ತಾ॒</span><span class='style1'>ವೇರರ್‍ವಂ॒ತಾನು॒</span><span class='style2'>ಶೇಪಾ᳚</span> |<span class='RishiDevChandas'>{ಕೌತ್ಸೋ ದುರ್ಮಿತ್ರಃ | ಇಂದ್ರಃ | ಗಾಯತ್ರೀ}</span><p><span class='style1'>ಉ॒ಭಾ</span><span class='style2'>ರ॒ಜೀ</span><span class='style1'>ನ</span><span class='style2'>ಕೇ॒ಶಿನಾ॒</span><span class='style1'>ಪತಿ॒ರ್ದನ್</span> || <span class='MantraNumbering'>{2/11}{10.105.2}{10.9.6.2}{8.5.26.2}{942, 10013}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'><span class='style1'>ಅಪ॒</span><span class='style2'>ಯೋರಿಂದ್ರಃ॒</span><span class='style1'>ಪಾಪ॑ಜ॒</span><span class='style2'>ಆ</span><span class='style1'>ಮರ್‍ತೋ॒</span><span class='style2'>ನ</span><span class='style1'>ಶ॑ಶ್ರಮಾ॒ಣೋ</span><span class='style2'>ಬಿ॑ಭೀ॒ವಾನ್</span> |<span class='RishiDevChandas'>{ಕೌತ್ಸೋ ದುರ್ಮಿತ್ರಃ | ಇಂದ್ರಃ | ಉಷ್ಣಿಕ್}</span><p><span class='style1'>ಶು॒ಭೇ</span><span class='style2'>ಯದ್ಯು॑ಯು॒ಜೇ</span><span class='style1'>ತವಿ॑ಷೀವಾನ್</span> || <span class='MantraNumbering'>{3/11}{10.105.3}{10.9.6.3}{8.5.26.3}{942, 10014}</span></td>
@@ -3984,7 +3984,7 @@
 <td class='VargaStyle1'><span class='style1'>ಪ್ರಾಸ್ತೌ᳚ದೃ॒ಷ್ವೌಜಾ᳚</span><span class='style2'>ಋ॒ಷ್ವೇಭಿ॑ಸ್ತ॒ತಕ್ಷ॒</span><span class='style1'>ಶೂರಃ॒</span><span class='style2'>ಶವ॑ಸಾ</span> |<span class='RishiDevChandas'>{ಕೌತ್ಸೋ ದುರ್ಮಿತ್ರಃ | ಇಂದ್ರಃ | ಉಷ್ಣಿಕ್}</span><p><span class='style1'>ಋ॒ಭುರ್‍ನ</span><span class='style2'>ಕ್ರತು॑ಭಿರ್ಮಾತ॒ರಿಶ್ವಾ᳚</span> || <span class='MantraNumbering'>{6/11}{10.105.6}{10.9.6.6}{8.5.27.1}{942, 10017}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'><span class='style1'>ವಜ್ರಂ॒</span><span class='style2'>ಯಶ್ಚ॒ಕ್ರೇ</span><span class='style1'>ಸು॒ಹನಾ᳚ಯ॒</span><span class='style2'>ದಸ್ಯ॑ವೇ</span><span class='style1'>ಹಿರೀಮ॒ಶೋ</span><span class='style2'>ಹಿರೀ᳚ಮಾನ್</span> |<span class='RishiDevChandas'>{ಕೌತ್ಸೋ ದುರ್ಮಿತ್ರಃ | ಇಂದ್ರಃ | ಪಿಪೀಲಿಕಮಧ್ಯ}</span><p><span class='style1'>ಅರು॑ತಹನು॒ರದ್ಭು॑ತಂ॒</span><span class='style2'>ನ</span><span class='style1'>ರಜಃ॑</span> || <span class='MantraNumbering'>{7/11}{10.105.7}{10.9.6.7}{8.5.27.2}{942, 10018}</span></td>
+<td class='VargaStyle1'><span class='style1'>ವಜ್ರಂ॒</span><span class='style2'>ಯಶ್ಚ॒ಕ್ರೇ</span><span class='style1'>ಸು॒ಹನಾ᳚ಯ॒</span><span class='style2'>ದಸ್ಯ॑ವೇ</span><span class='style1'>ಹಿರೀಮ॒ಶೋ</span><span class='style2'>ಹಿರೀ᳚ಮಾನ್</span> |<span class='RishiDevChandas'>{ಕೌತ್ಸೋ ದುರ್ಮಿತ್ರಃ | ಇಂದ್ರಃ | ಗಾಯತ್ರೀ}</span><p><span class='style1'>ಅರು॑ತಹನು॒ರದ್ಭು॑ತಂ॒</span><span class='style2'>ನ</span><span class='style1'>ರಜಃ॑</span> || <span class='MantraNumbering'>{7/11}{10.105.7}{10.9.6.7}{8.5.27.2}{942, 10018}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'><span class='style1'>ಅವ॑</span><span class='style2'>ನೋ</span><span class='style1'>ವೃಜಿ॒ನಾ</span><span class='style2'>ಶಿ॑ಶೀಹ್ಯೃ॒ಚಾ</span><span class='style1'>ವ॑ನೇಮಾ॒ನೃಚಃ॑</span> |<span class='RishiDevChandas'>{ಕೌತ್ಸೋ ದುರ್ಮಿತ್ರಃ | ಇಂದ್ರಃ | ಉಷ್ಣಿಕ್}</span><p><span class='style1'>ನಾಬ್ರ᳚ಹ್ಮಾ</span><span class='style2'>ಯ॒ಜ್ಞ</span><span class='style1'>ಋಧ॒ಗ್ಜೋಷ॑ತಿ॒</span><span class='style2'>ತ್ವೇ</span> || <span class='MantraNumbering'>{8/11}{10.105.8}{10.9.6.8}{8.5.27.3}{942, 10019}</span></td>
