--- a/Rigveda/SamhitaPatha/Malayalam/Ashtaka/Format3/RVS-Malayalam-F3-A04.html
+++ b/Rigveda/SamhitaPatha/Malayalam/Ashtaka/Format3/RVS-Malayalam-F3-A04.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ഋഗ്വേദ സംഹിതാ (അഷ്ടക: 04) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 22-Jan-2025]</h6>
+<br> [Last updated on: 01-Feb-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1967,13 +1967,13 @@
 <td class='VargaStyle1'>അ॒ഭിയേത്വാ᳚വിഭാവരി॒സ്തോമൈ᳚ർഗൃ॒ണന്തി॒വഹ്ന॑യഃ |<p>മ॒ഘൈർമ॑ഘോനിസു॒ശ്രിയോ॒ദാമ᳚ന്വന്തഃസുരാ॒തയഃ॒സുജാ᳚തേ॒,അശ്വ॑സൂനൃതേ || 4 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>യച്ചി॒ദ്ധിതേ᳚ഗ॒ണാ,ഇ॒മേഛ॒ദയ᳚ന്തിമ॒ഘത്ത॑യേ |<p>പരി॑ചി॒ദ്വഷ്ട॑യോദധു॒ർദദ॑തോ॒രാധോ॒,അഹ്ര॑യം॒സുജാ᳚തേ॒,അശ്വ॑സൂനൃതേ || 5 || </td>
+<td class='VargaStyle1'>യച്ചി॒ദ്ധിതേ᳚ഗ॒ണാ,ഇ॒മേഛ॒ദയ᳚ന്തിമ॒ഘത്ത॑യേ |<p>പരി॑ചി॒ദ്‌വഷ്ട॑യോദധു॒ർദദ॑തോ॒രാധോ॒,അഹ്ര॑യം॒സുജാ᳚തേ॒,അശ്വ॑സൂനൃതേ || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ഐഷു॑ധാവീ॒രവ॒ദ്യശ॒ഉഷോ᳚മഘോനിസൂ॒രിഷു॑ |<p>യേനോ॒രാധാം॒സ്യഹ്ര॑യാമ॒ഘവാ᳚നോ॒,അരാ᳚സത॒സുജാ᳚തേ॒,അശ്വ॑സൂനൃതേ || 6 || <span class='MantraNumbering'>വർഗ:22</span></td>
+<td class='VargaStyle2'>ഐഷു॑ധാവീ॒രവ॒ദ്‌യശ॒ഉഷോ᳚മഘോനിസൂ॒രിഷു॑ |<p>യേനോ॒രാധാം॒സ്യഹ്ര॑യാമ॒ഘവാ᳚നോ॒,അരാ᳚സത॒സുജാ᳚തേ॒,അശ്വ॑സൂനൃതേ || 6 || <span class='MantraNumbering'>വർഗ:22</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>തേഭ്യോ᳚ദ്യു॒മ്നംബൃ॒ഹദ്യശ॒ഉഷോ᳚മഘോ॒ന്യാവ॑ഹ |<p>യേനോ॒രാധാം॒സ്യശ്വ്യാ᳚ഗ॒വ്യാഭജ᳚ന്തസൂ॒രയഃ॒സുജാ᳚തേ॒,അശ്വ॑സൂനൃതേ || 7 || </td>
+<td class='VargaStyle2'>തേഭ്യോ᳚ദ്യു॒മ്നംബൃ॒ഹദ്‌യശ॒ഉഷോ᳚മഘോ॒ന്യാവ॑ഹ |<p>യേനോ॒രാധാം॒സ്യശ്വ്യാ᳚ഗ॒വ്യാഭജ᳚ന്തസൂ॒രയഃ॒സുജാ᳚തേ॒,അശ്വ॑സൂനൃതേ || 7 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ഉ॒തനോ॒ഗോമ॑തീ॒രിഷ॒ആവ॑ഹാദുഹിതർദിവഃ |<p>സാ॒കംസൂര്യ॑സ്യര॒ശ്മിഭിഃ॑ശു॒ക്രൈഃശോച॑ദ്ഭിര॒ർചിഭിഃ॒സുജാ᳚തേ॒,അശ്വ॑സൂനൃതേ || 8 || </td>
@@ -1982,7 +1982,7 @@
 <td class='VargaStyle2'>വ്യു॑ച്ഛാദുഹിതർദിവോ॒മാചി॒രംത॑നുഥാ॒,അപഃ॑ |<p>നേത്‌ത്വാ᳚സ്തേ॒നംയഥാ᳚രി॒പുംതപാ᳚തി॒സൂരോ᳚,അ॒ർചിഷാ॒സുജാ᳚തേ॒,അശ്വ॑സൂനൃതേ || 9 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ഏ॒താവ॒ദ്വേദു॑ഷ॒സ്ത്വംഭൂയോ᳚വാ॒ദാതു॑മർഹസി |<p>യാസ്തോ॒തൃഭ്യോ᳚വിഭാവര്യു॒ച്ഛന്തീ॒നപ്ര॒മീയ॑സേ॒സുജാ᳚തേ॒,അശ്വ॑സൂനൃതേ || 10 || </td>
+<td class='VargaStyle2'>ഏ॒താവ॒ദ്‌വേദു॑ഷ॒സ്ത്വംഭൂയോ᳚വാ॒ദാതു॑മർഹസി |<p>യാസ്തോ॒തൃഭ്യോ᳚വിഭാവര്യു॒ച്ഛന്തീ॒നപ്ര॒മീയ॑സേ॒സുജാ᳚തേ॒,അശ്വ॑സൂനൃതേ || 10 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[72] ദ്യുതദ്യാമാനമിതി ഷഡൃചസ്യ സൂക്തസ്യാത്രേയഃസത്യശ്രവാഉഷാസ്ത്രിഷ്ടുപ് |<span class='MantraNumbering'>{അഷ്ടക:4, അധ്യായ:4}{മണ്ഡല:5, സൂക്ത:80}{അനുവാക:6, സൂക്ത:8}</td>
@@ -1994,7 +1994,7 @@
 <td class='VargaStyle1'>ഏ॒ഷാജനം᳚ദർശ॒താബോ॒ധയ᳚ന്തീസു॒ഗാൻ‌പ॒ഥഃകൃ᳚ണ്വ॒തീയാ॒ത്യഗ്രേ᳚ |<p>ബൃ॒ഹ॒ദ്ര॒ഥാബൃ॑ഹ॒തീവി॑ശ്വമി॒ന്വോഷാജ്യോതി᳚ര്യച്ഛ॒ത്യഗ്രേ॒,അഹ്നാം᳚ || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ഏ॒ഷാഗോഭി॑രരു॒ണേഭി᳚ര്യുജാ॒നാസ്രേ᳚ധന്തീര॒യിമപ്രാ᳚യുചക്രേ |<p>പ॒ഥോരദ᳚ന്തീസുവി॒തായ॑ദേ॒വീപു॑രുഷ്ടു॒താവി॒ശ്വവാ᳚രാ॒വിഭാ᳚തി || 3 || </td>
+<td class='VargaStyle1'>ഏ॒ഷാഗോഭി॑രരു॒ണേഭി᳚ര്യുജാ॒നാഽസ്രേ᳚ധന്തീര॒യിമപ്രാ᳚യുചക്രേ |<p>പ॒ഥോരദ᳚ന്തീസുവി॒തായ॑ദേ॒വീപു॑രുഷ്ടു॒താവി॒ശ്വവാ᳚രാ॒വിഭാ᳚തി || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ഏ॒ഷാവ്യേ᳚നീഭവതിദ്വി॒ബർഹാ᳚,ആവിഷ്കൃണ്വാ॒നാത॒ന്വം᳚പു॒രസ്താ᳚ത് |<p>ഋ॒തസ്യ॒പന്ഥാ॒മന്വേ᳚തിസാ॒ധുപ്ര॑ജാന॒തീവ॒നദിശോ᳚മിനാതി || 4 || </td>
@@ -2003,7 +2003,7 @@
 <td class='VargaStyle1'>ഏ॒ഷാശു॒ഭ്രാനത॒ന്വോ᳚വിദാ॒നോർധ്വേവ॑സ്നാ॒തീദൃ॒ശയേ᳚നോ,അസ്ഥാത് |<p>അപ॒ദ്വേഷോ॒ബാധ॑മാനാ॒തമാം᳚സ്യു॒ഷാദി॒വോദു॑ഹി॒താജ്യോതി॒ഷാഗാ᳚ത് || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ഏ॒ഷാപ്ര॑തീ॒ചീദു॑ഹി॒താദി॒വോനൄന്യോഷേ᳚വഭ॒ദ്രാനിരി॑ണീതേ॒,അപ്സഃ॑ |<p>വ്യൂ॒ർണ്വ॒തീദാ॒ശുഷേ॒വാര്യാ᳚ണി॒പുന॒ർജ്യോതി᳚ര്യുവ॒തിഃപൂ॒ർവഥാ᳚കഃ || 6 || </td>
+<td class='VargaStyle1'>ഏ॒ഷാപ്ര॑തീ॒ചീദു॑ഹി॒താദി॒വോനൄൻയോഷേ᳚വഭ॒ദ്രാനിരി॑ണീതേ॒,അപ്സഃ॑ |<p>വ്യൂ॒ർണ്വ॒തീദാ॒ശുഷേ॒വാര്യാ᳚ണി॒പുന॒ർജ്യോതി᳚ര്യുവ॒തിഃപൂ॒ർവഥാ᳚കഃ || 6 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[73] യുഞ്ജതേമനഇതി പഞ്ചർചസ്യ സൂക്തസ്യാത്രേയഃ ശ്യാവാശ്വഃ സവിതാജഗതീ |<span class='MantraNumbering'>{അഷ്ടക:4, അധ്യായ:4}{മണ്ഡല:5, സൂക്ത:81}{അനുവാക:6, സൂക്ത:9}</td>
@@ -2012,10 +2012,10 @@
 <td class='VargaStyle2'>യു॒ഞ്ജതേ॒മന॑ഉ॒തയു᳚ഞ്ജതേ॒ധിയോ॒വിപ്രാ॒വിപ്ര॑സ്യബൃഹ॒തോവി॑പ॒ശ്ചിതഃ॑ |<p>വിഹോത്രാ᳚ദധേവയുനാ॒വിദേക॒ഇന്മ॒ഹീദേ॒വസ്യ॑സവി॒തുഃപരി॑ഷ്ടുതിഃ || 1 || <span class='MantraNumbering'>വർഗ:24</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>വിശ്വാ᳚രൂ॒പാണി॒പ്രതി॑മുഞ്ചതേക॒വിഃപ്രാസാ᳚വീദ്ഭ॒ദ്രംദ്വി॒പദേ॒ചതു॑ഷ്പദേ |<p>വിനാക॑മഖ്യത്സവി॒താവരേ॒ണ്യോഽനു॑പ്ര॒യാണ॑മു॒ഷസോ॒വിരാ᳚ജതി || 2 || </td>
+<td class='VargaStyle2'>വിശ്വാ᳚രൂ॒പാണി॒പ്രതി॑മുഞ്ചതേക॒വിഃപ്രാസാ᳚വീദ്‌ഭ॒ദ്രംദ്വി॒പദേ॒ചതു॑ഷ്പദേ |<p>വിനാക॑മഖ്യത്‌സവി॒താവരേ॒ണ്യോഽനു॑പ്ര॒യാണ॑മു॒ഷസോ॒വിരാ᳚ജതി || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>യസ്യ॑പ്ര॒യാണ॒മന്വ॒ന്യഇദ്യ॒യുർദേ॒വാദേ॒വസ്യ॑മഹി॒മാന॒മോജ॑സാ |<p>യഃപാർഥി॑വാനിവിമ॒മേസഏത॑ശോ॒രജാം᳚സിദേ॒വഃസ॑വി॒താമ॑ഹിത്വ॒നാ || 3 || </td>
+<td class='VargaStyle2'>യസ്യ॑പ്ര॒യാണ॒മന്വ॒ന്യഇദ്‌യ॒യുർദേ॒വാദേ॒വസ്യ॑മഹി॒മാന॒മോജ॑സാ |<p>യഃപാർഥി॑വാനിവിമ॒മേസഏത॑ശോ॒രജാം᳚സിദേ॒വഃസ॑വി॒താമ॑ഹിത്വ॒നാ || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ഉ॒തയാ᳚സിസവിത॒സ്ത്രീണി॑രോച॒നോതസൂര്യ॑സ്യര॒ശ്മിഭിഃ॒സമു॑ച്യസി |<p>ഉ॒തരാത്രീ᳚മുഭ॒യതഃ॒പരീ᳚യസഉ॒തമി॒ത്രോഭ॑വസിദേവ॒ധർമ॑ഭിഃ || 4 || </td>
@@ -2027,7 +2027,7 @@
 <td class='SuktaLabel'>[74] തത്സവിതുരിതി നവർചസ്യ സൂക്തസ്യാത്രേയഃശ്യാവാശ്വഃ സവിതാഗായത്രീ ആദ്യാനുഷ്ടുപ് |<span class='MantraNumbering'>{അഷ്ടക:4, അധ്യായ:4}{മണ്ഡല:5, സൂക്ത:82}{അനുവാക:6, സൂക്ത:10}</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>തത്സ॑വി॒തുർവൃ॑ണീമഹേവ॒യംദേ॒വസ്യ॒ഭോജ॑നം | ശ്രേഷ്ഠം᳚സർവ॒ധാത॑മം॒തുരം॒ഭഗ॑സ്യധീമഹി || 1 || <span class='MantraNumbering'>വർഗ:25</span></td>
+<td class='VargaStyle1'>തത്‌സ॑വി॒തുർവൃ॑ണീമഹേവ॒യംദേ॒വസ്യ॒ഭോജ॑നം | ശ്രേഷ്ഠം᳚സർവ॒ധാത॑മം॒തുരം॒ഭഗ॑സ്യധീമഹി || 1 || <span class='MantraNumbering'>വർഗ:25</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>അസ്യ॒ഹിസ്വയ॑ശസ്തരംസവി॒തുഃകച്ച॒നപ്രി॒യം | നമി॒നന്തി॑സ്വ॒രാജ്യം᳚ || 2 || </td>
@@ -2036,10 +2036,10 @@
 <td class='VargaStyle1'>സഹിരത്നാ᳚നിദാ॒ശുഷേ᳚സു॒വാതി॑സവി॒താഭഗഃ॑ | തംഭാ॒ഗംചി॒ത്രമീ᳚മഹേ || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>അ॒ദ്യാനോ᳚ദേവസവിതഃപ്ര॒ജാവ॑ത്സാവീഃ॒സൗഭ॑ഗം | പരാ᳚ദു॒ഷ്ഷ്വപ്ന്യം᳚സുവ || 4 || </td>
+<td class='VargaStyle1'>അ॒ദ്യാനോ᳚ദേവസവിതഃപ്ര॒ജാവ॑ത്‌സാവീഃ॒സൗഭ॑ഗം | പരാ᳚ദു॒ഷ്ഷ്വപ്ന്യം᳚സുവ || 4 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>വിശ്വാ᳚നിദേവസവിതർദുരി॒താനി॒പരാ᳚സുവ | യദ്ഭ॒ദ്രംതന്ന॒ആസു॑വ || 5 || </td>
+<td class='VargaStyle1'>വിശ്വാ᳚നിദേവസവിതർദുരി॒താനി॒പരാ᳚സുവ | യദ്‌ഭ॒ദ്രംതന്ന॒ആസു॑വ || 5 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>അനാ᳚ഗസോ॒,അദി॑തയേദേ॒വസ്യ॑സവി॒തുഃസ॒വേ | വിശ്വാ᳚വാ॒മാനി॑ധീമഹി || 6 || <span class='MantraNumbering'>വർഗ:26</span></td>
@@ -2066,7 +2066,7 @@
 <td class='VargaStyle1'>ര॒ഥീവ॒കശ॒യാശ്വാഁ᳚,അഭിക്ഷി॒പന്നാ॒വിർദൂ॒താൻ‌കൃ॑ണുതേവ॒ർഷ്യാ॒3॑(ആഁ॒)അഹ॑ |<p>ദൂ॒രാത്‌സിം॒ഹസ്യ॑സ്ത॒നഥാ॒,ഉദീ᳚രതേ॒യത്‌പ॒ർജന്യഃ॑കൃണു॒തേവ॒ർഷ്യ1॑(അം॒)നഭഃ॑ || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>പ്രവാതാ॒വാൻ‌തി॑പ॒തയ᳚ന്തിവി॒ദ്യുത॒ഉദോഷ॑ധീ॒ർജിഹ॑തേ॒പിന്വ॑തേ॒സ്വഃ॑ |<p>ഇരാ॒വിശ്വ॑സ്മൈ॒ഭുവ॑നായജായതേ॒യത്‌പ॒ർജന്യഃ॑പൃഥി॒വീംരേത॒സാവ॑തി || 4 || </td>
+<td class='VargaStyle1'>പ്രവാതാ॒വാന്തി॑പ॒തയ᳚ന്തിവി॒ദ്യുത॒ഉദോഷ॑ധീ॒ർജിഹ॑തേ॒പിന്വ॑തേ॒സ്വഃ॑ |<p>ഇരാ॒വിശ്വ॑സ്മൈ॒ഭുവ॑നായജായതേ॒യത്‌പ॒ർജന്യഃ॑പൃഥി॒വീംരേത॒സാവ॑തി || 4 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>യസ്യ᳚വ്ര॒തേപൃ॑ഥി॒വീനന്ന॑മീതി॒യസ്യ᳚വ്ര॒തേശ॒ഫവ॒ജ്ജർഭു॑രീതി |<p>യസ്യ᳚വ്ര॒തഓഷ॑ധീർവി॒ശ്വരൂ᳚പാഃ॒സനഃ॑പർജന്യ॒മഹി॒ശർമ॑യച്ഛ || 5 || </td>
@@ -2096,7 +2096,7 @@
 <td class='VargaStyle1'>സ്തോമാ᳚സസ്ത്വാവിചാരിണി॒പ്രതി॑ഷ്ടോഭന്ത്യ॒ക്തുഭിഃ॑ | പ്രയാവാജം॒നഹേഷ᳚ന്തംപേ॒രുമസ്യ॑സ്യർജുനി || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ദൃ॒ൾഹാചി॒ദ്യാവന॒സ്പതീ᳚ൻ‌ക്ഷ്മ॒യാദർധ॒ർഷ്യോജ॑സാ | യത്തേ᳚,അ॒ഭ്രസ്യ॑വി॒ദ്യുതോ᳚ദി॒വോവർഷ᳚ന്തിവൃ॒ഷ്ടയഃ॑ || 3 || </td>
+<td class='VargaStyle1'>ദൃ॒ൾഹാചി॒ദ്‌യാവന॒സ്പതീ᳚ൻക്ഷ്മ॒യാദർധ॒ർഷ്യോജ॑സാ | യത്തേ᳚,അ॒ഭ്രസ്യ॑വി॒ദ്യുതോ᳚ദി॒വോവർഷ᳚ന്തിവൃ॒ഷ്ടയഃ॑ || 3 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[77] പ്രസമ്രാജഇത്യഷ്ടർചസ്യ സൂക്തസ്യ ഭൗമോത്രിർവരുണത്രിഷ്ടുപ് |<span class='MantraNumbering'>{അഷ്ടക:4, അധ്യായ:4}{മണ്ഡല:5, സൂക്ത:85}{അനുവാക:6, സൂക്ത:13}</td>
