--- a/Rigveda/SamhitaPatha/Tamil/Ashtaka/Format4/RVS-Tamil-F4-A04.html
+++ b/Rigveda/SamhitaPatha/Tamil/Ashtaka/Format4/RVS-Tamil-F4-A04.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ருʼக்³வேத³ ஸம்ʼஹிதா (அஷ்டக: 04) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 22-Jan-2025]</h6>
+<br> [Last updated on: 01-Feb-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1967,13 +1967,13 @@
 <td class='VargaStyle1'>அ॒பி⁴யேத்வா᳚விபா⁴வரி॒ஸ்தோமை᳚ர்க்³ரு॒ʼணந்தி॒வஹ்ன॑ய꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸத்யஶ்ரவா꞉ | உஷா꞉ | பங்க்தி꞉}</span><p>ம॒கை⁴ர்ம॑கோ⁴னிஸு॒ஶ்ரியோ॒தா³ம᳚ன்வந்த꞉ஸுரா॒தய॒꞉ஸுஜா᳚தே॒,அஶ்வ॑ஸூந்ருʼதே॒(ஸ்வாஹா᳚) || 4 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>யச்சி॒த்³தி⁴தே᳚க³॒ணா,இ॒மேச²॒த³ய᳚ந்திம॒க⁴த்த॑யே |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸத்யஶ்ரவா꞉ | உஷா꞉ | பங்க்தி꞉}</span><p>பரி॑சி॒த்³வஷ்ட॑யோத³து⁴॒ர்த³த³॑தோ॒ராதோ⁴॒,அஹ்ர॑யம்॒ʼஸுஜா᳚தே॒,அஶ்வ॑ஸூந்ருʼதே॒(ஸ்வாஹா᳚) || 5 || </td>
+<td class='VargaStyle1'>யச்சி॒த்³தி⁴தே᳚க³॒ணா,இ॒மேச²॒த³ய᳚ந்திம॒க⁴த்த॑யே |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸத்யஶ்ரவா꞉ | உஷா꞉ | பங்க்தி꞉}</span><p>பரி॑சி॒த்³‌வஷ்ட॑யோத³து⁴॒ர்த³த³॑தோ॒ராதோ⁴॒,அஹ்ர॑யம்॒ʼஸுஜா᳚தே॒,அஶ்வ॑ஸூந்ருʼதே॒(ஸ்வாஹா᳚) || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ஐஷு॑தா⁴வீ॒ரவ॒த்³யஶ॒உஷோ᳚மகோ⁴னிஸூ॒ரிஷு॑ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸத்யஶ்ரவா꞉ | உஷா꞉ | பங்க்தி꞉}</span><p>யேநோ॒ராதா⁴ம்॒ʼஸ்யஹ்ர॑யாம॒க⁴வா᳚னோ॒,அரா᳚ஸத॒ஸுஜா᳚தே॒,அஶ்வ॑ஸூந்ருʼதே॒(ஸ்வாஹா᳚) || 6 || <span class='MantraNumbering'>வர்க³:22</span></td>
+<td class='VargaStyle2'>ஐஷு॑தா⁴வீ॒ரவ॒த்³‌யஶ॒உஷோ᳚மகோ⁴னிஸூ॒ரிஷு॑ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸத்யஶ்ரவா꞉ | உஷா꞉ | பங்க்தி꞉}</span><p>யேநோ॒ராதா⁴ம்॒ʼஸ்யஹ்ர॑யாம॒க⁴வா᳚னோ॒,அரா᳚ஸத॒ஸுஜா᳚தே॒,அஶ்வ॑ஸூந்ருʼதே॒(ஸ்வாஹா᳚) || 6 || <span class='MantraNumbering'>வர்க³:22</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>தேப்⁴யோ᳚த்³யு॒ம்னம்ʼப்³ரு॒ʼஹத்³யஶ॒உஷோ᳚மகோ⁴॒ன்யாவ॑ஹ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸத்யஶ்ரவா꞉ | உஷா꞉ | பங்க்தி꞉}</span><p>யேநோ॒ராதா⁴ம்॒ʼஸ்யஶ்வ்யா᳚க³॒வ்யாப⁴ஜ᳚ந்தஸூ॒ரய॒꞉ஸுஜா᳚தே॒,அஶ்வ॑ஸூந்ருʼதே॒(ஸ்வாஹா᳚) || 7 || </td>
+<td class='VargaStyle2'>தேப்⁴யோ᳚த்³யு॒ம்னம்ʼப்³ரு॒ʼஹத்³‌யஶ॒உஷோ᳚மகோ⁴॒ன்யாவ॑ஹ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸத்யஶ்ரவா꞉ | உஷா꞉ | பங்க்தி꞉}</span><p>யேநோ॒ராதா⁴ம்॒ʼஸ்யஶ்வ்யா᳚க³॒வ்யாப⁴ஜ᳚ந்தஸூ॒ரய॒꞉ஸுஜா᳚தே॒,அஶ்வ॑ஸூந்ருʼதே॒(ஸ்வாஹா᳚) || 7 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>உ॒தநோ॒கோ³ம॑தீ॒ரிஷ॒ஆவ॑ஹாது³ஹிதர்தி³வ꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸத்யஶ்ரவா꞉ | உஷா꞉ | பங்க்தி꞉}</span><p>ஸா॒கம்ʼஸூர்ய॑ஸ்யர॒ஶ்மிபி⁴॑꞉ஶு॒க்ரை꞉ஶோச॑த்³பி⁴ர॒ர்சிபி⁴॒꞉ஸுஜா᳚தே॒,அஶ்வ॑ஸூந்ருʼதே॒(ஸ்வாஹா᳚) || 8 || </td>
@@ -1982,7 +1982,7 @@
 <td class='VargaStyle2'>வ்யு॑ச்சா²து³ஹிதர்தி³வோ॒மாசி॒ரம்ʼத॑னுதா²॒,அப॑꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸத்யஶ்ரவா꞉ | உஷா꞉ | பங்க்தி꞉}</span><p>நேத்‌த்வா᳚ஸ்தே॒னம்ʼயதா²᳚ரி॒பும்ʼதபா᳚தி॒ஸூரோ᳚,அ॒ர்சிஷா॒ஸுஜா᳚தே॒,அஶ்வ॑ஸூந்ருʼதே॒(ஸ்வாஹா᳚) || 9 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ஏ॒தாவ॒த்³வேது³॑ஷ॒ஸ்த்வம்ʼபூ⁴யோ᳚வா॒தா³து॑மர்ஹஸி |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸத்யஶ்ரவா꞉ | உஷா꞉ | பங்க்தி꞉}</span><p>யாஸ்தோ॒த்ருʼப்⁴யோ᳚விபா⁴வர்யு॒ச்ச²ந்தீ॒நப்ர॒மீய॑ஸே॒ஸுஜா᳚தே॒,அஶ்வ॑ஸூந்ருʼதே॒(ஸ்வாஹா᳚) || 10 || </td>
+<td class='VargaStyle2'>ஏ॒தாவ॒த்³‌வேது³॑ஷ॒ஸ்த்வம்ʼபூ⁴யோ᳚வா॒தா³து॑மர்ஹஸி |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸத்யஶ்ரவா꞉ | உஷா꞉ | பங்க்தி꞉}</span><p>யாஸ்தோ॒த்ருʼப்⁴யோ᳚விபா⁴வர்யு॒ச்ச²ந்தீ॒நப்ர॒மீய॑ஸே॒ஸுஜா᳚தே॒,அஶ்வ॑ஸூந்ருʼதே॒(ஸ்வாஹா᳚) || 10 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[72] த்³யுதத்³யாமானமிதி ஷட்³ருʼசஸ்ய ஸூக்தஸ்யாத்ரேய꞉ஸத்யஶ்ரவாஉஷாஸ்த்ரிஷ்டுப் |<span class='MantraNumbering'>{அஷ்டக:4, அத்⁴யாய:4}{மண்ட³ல:5, ஸூக்த:80}{அனுவாக:6, ஸூக்த:8}</td>
@@ -1994,7 +1994,7 @@
 <td class='VargaStyle1'>ஏ॒ஷாஜனம்᳚ʼத³ர்ஶ॒தாபோ³॒த⁴ய᳚ந்தீஸு॒கா³ன்‌ப॒த²꞉க்ரு᳚ʼண்வ॒தீயா॒த்யக்³ரே᳚ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸத்யஶ்ரவா꞉ | உஷா꞉ | த்ரிஷ்டுப்}</span><p>ப்³ரு॒ʼஹ॒த்³ர॒தா²ப்³ரு॑ʼஹ॒தீவி॑ஶ்வமி॒ன்வோஷாஜ்யோதி᳚ர்யச்ச²॒த்யக்³ரே॒,அஹ்னா॒‌ம்(ஸ்வாஹா᳚) || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ஏ॒ஷாகோ³பி⁴॑ரரு॒ணேபி⁴᳚ர்யுஜா॒னாஸ்ரே᳚த⁴ந்தீர॒யிமப்ரா᳚யுசக்ரே |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸத்யஶ்ரவா꞉ | உஷா꞉ | த்ரிஷ்டுப்}</span><p>ப॒தோ²ரத³᳚ந்தீஸுவி॒தாய॑தே³॒வீபு॑ருஷ்டு॒தாவி॒ஶ்வவா᳚ரா॒விபா⁴᳚தி॒(ஸ்வாஹா᳚) || 3 || </td>
+<td class='VargaStyle1'>ஏ॒ஷாகோ³பி⁴॑ரரு॒ணேபி⁴᳚ர்யுஜா॒னா(அ)ஸ்ரே᳚த⁴ந்தீர॒யிமப்ரா᳚யுசக்ரே |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸத்யஶ்ரவா꞉ | உஷா꞉ | த்ரிஷ்டுப்}</span><p>ப॒தோ²ரத³᳚ந்தீஸுவி॒தாய॑தே³॒வீபு॑ருஷ்டு॒தாவி॒ஶ்வவா᳚ரா॒விபா⁴᳚தி॒(ஸ்வாஹா᳚) || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ஏ॒ஷாவ்யே᳚னீப⁴வதித்³வி॒ப³ர்ஹா᳚,ஆவிஷ்க்ருʼண்வா॒னாத॒ன்வம்᳚ʼபு॒ரஸ்தா᳚த் |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸத்யஶ்ரவா꞉ | உஷா꞉ | த்ரிஷ்டுப்}</span><p>ரு॒ʼதஸ்ய॒பந்தா²॒மன்வே᳚திஸா॒து⁴ப்ர॑ஜான॒தீவ॒நதி³ஶோ᳚மினாதி॒(ஸ்வாஹா᳚) || 4 || </td>
@@ -2012,10 +2012,10 @@
 <td class='VargaStyle2'>யு॒ஞ்ஜதே॒மன॑உ॒தயு᳚ஞ்ஜதே॒தி⁴யோ॒விப்ரா॒விப்ர॑ஸ்யப்³ருʼஹ॒தோவி॑ப॒ஶ்சித॑꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | ஸவிதா | ஜக³தீ}</span><p>விஹோத்ரா᳚த³தே⁴வயுனா॒விதே³க॒இன்ம॒ஹீதே³॒வஸ்ய॑ஸவி॒து꞉பரி॑ஷ்டுதி॒꞉(ஸ்வாஹா᳚) || 1 || <span class='MantraNumbering'>வர்க³:24</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>விஶ்வா᳚ரூ॒பாணி॒ப்ரதி॑முஞ்சதேக॒வி꞉ப்ராஸா᳚வீத்³ப⁴॒த்³ரம்ʼத்³வி॒பதே³॒சது॑ஷ்பதே³ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | ஸவிதா | ஜக³தீ}</span><p>விநாக॑மக்²யத்ஸவி॒தாவரே॒ண்யோ(அ)னு॑ப்ர॒யாண॑மு॒ஷஸோ॒விரா᳚ஜதி॒(ஸ்வாஹா᳚) || 2 || </td>
+<td class='VargaStyle2'>விஶ்வா᳚ரூ॒பாணி॒ப்ரதி॑முஞ்சதேக॒வி꞉ப்ராஸா᳚வீத்³‌ப⁴॒த்³ரம்ʼத்³வி॒பதே³॒சது॑ஷ்பதே³ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | ஸவிதா | ஜக³தீ}</span><p>விநாக॑மக்²யத்‌ஸவி॒தாவரே॒ண்யோ(அ)னு॑ப்ர॒யாண॑மு॒ஷஸோ॒விரா᳚ஜதி॒(ஸ்வாஹா᳚) || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>யஸ்ய॑ப்ர॒யாண॒மன்வ॒ன்யஇத்³ய॒யுர்தே³॒வாதே³॒வஸ்ய॑மஹி॒மான॒மோஜ॑ஸா |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | ஸவிதா | ஜக³தீ}</span><p>ய꞉பார்தி²॑வானிவிம॒மேஸஏத॑ஶோ॒ரஜாம்᳚ʼஸிதே³॒வ꞉ஸ॑வி॒தாம॑ஹித்வ॒னா(ஸ்வாஹா᳚) || 3 || </td>
+<td class='VargaStyle2'>யஸ்ய॑ப்ர॒யாண॒மன்வ॒ன்யஇத்³‌ய॒யுர்தே³॒வாதே³॒வஸ்ய॑மஹி॒மான॒மோஜ॑ஸா |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | ஸவிதா | ஜக³தீ}</span><p>ய꞉பார்தி²॑வானிவிம॒மேஸஏத॑ஶோ॒ரஜாம்᳚ʼஸிதே³॒வ꞉ஸ॑வி॒தாம॑ஹித்வ॒னா(ஸ்வாஹா᳚) || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>உ॒தயா᳚ஸிஸவித॒ஸ்த்ரீணி॑ரோச॒னோதஸூர்ய॑ஸ்யர॒ஶ்மிபி⁴॒꞉ஸமு॑ச்யஸி |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | ஸவிதா | ஜக³தீ}</span><p>உ॒தராத்ரீ᳚முப⁴॒யத॒꞉பரீ᳚யஸஉ॒தமி॒த்ரோப⁴॑வஸிதே³வ॒த⁴ர்ம॑பி⁴॒꞉(ஸ்வாஹா᳚) || 4 || </td>
@@ -2027,7 +2027,7 @@
 <td class='SuktaLabel'>[74] தத்ஸவிதுரிதி நவர்சஸ்ய ஸூக்தஸ்யாத்ரேய꞉ஶ்யாவாஶ்வ꞉ ஸவிதாகா³யத்ரீ ஆத்³யானுஷ்டுப் |<span class='MantraNumbering'>{அஷ்டக:4, அத்⁴யாய:4}{மண்ட³ல:5, ஸூக்த:82}{அனுவாக:6, ஸூக்த:10}</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>தத்ஸ॑வி॒துர்வ்ரு॑ʼணீமஹேவ॒யம்ʼதே³॒வஸ்ய॒போ⁴ஜ॑னம் |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | ஸவிதா | அனுஷ்டுப்}</span><p>ஶ்ரேஷ்ட²ம்᳚ʼஸர்வ॒தா⁴த॑மம்॒ʼதுரம்॒ʼப⁴க³॑ஸ்யதீ⁴மஹி॒(ஸ்வாஹா᳚) || 1 || <span class='MantraNumbering'>வர்க³:25</span></td>
+<td class='VargaStyle1'>தத்‌ஸ॑வி॒துர்வ்ரு॑ʼணீமஹேவ॒யம்ʼதே³॒வஸ்ய॒போ⁴ஜ॑னம் |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | ஸவிதா | அனுஷ்டுப்}</span><p>ஶ்ரேஷ்ட²ம்᳚ʼஸர்வ॒தா⁴த॑மம்॒ʼதுரம்॒ʼப⁴க³॑ஸ்யதீ⁴மஹி॒(ஸ்வாஹா᳚) || 1 || <span class='MantraNumbering'>வர்க³:25</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>அஸ்ய॒ஹிஸ்வய॑ஶஸ்தரம்ʼஸவி॒து꞉கச்ச॒னப்ரி॒யம் |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | ஸவிதா | கா³யத்ரீ}</span><p>நமி॒னந்தி॑ஸ்வ॒ராஜ்ய॒‌ம்(ஸ்வாஹா᳚) || 2 || </td>
@@ -2036,10 +2036,10 @@
 <td class='VargaStyle1'>ஸஹிரத்னா᳚னிதா³॒ஶுஷே᳚ஸு॒வாதி॑ஸவி॒தாப⁴க³॑꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | ஸவிதா | கா³யத்ரீ}</span><p>தம்ʼபா⁴॒க³ம்ʼசி॒த்ரமீ᳚மஹே॒(ஸ்வாஹா᳚) || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>அ॒த்³யாநோ᳚தே³வஸவித꞉ப்ர॒ஜாவ॑த்ஸாவீ॒꞉ஸௌப⁴॑க³ம் |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | ஸவிதா | கா³யத்ரீ}</span><p>பரா᳚து³॒ஷ்ஷ்வப்ன்யம்᳚ʼஸுவ॒(ஸ்வாஹா᳚) || 4 || </td>
+<td class='VargaStyle1'>அ॒த்³யாநோ᳚தே³வஸவித꞉ப்ர॒ஜாவ॑த்‌ஸாவீ॒꞉ஸௌப⁴॑க³ம் |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | ஸவிதா | கா³யத்ரீ}</span><p>பரா᳚து³॒ஷ்ஷ்வப்ன்யம்᳚ʼஸுவ॒(ஸ்வாஹா᳚) || 4 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>விஶ்வா᳚னிதே³வஸவிதர்து³ரி॒தானி॒பரா᳚ஸுவ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | ஸவிதா | கா³யத்ரீ}</span><p>யத்³ப⁴॒த்³ரம்ʼதன்ன॒ஆஸு॑வ॒(ஸ்வாஹா᳚) || 5 || </td>
+<td class='VargaStyle1'>விஶ்வா᳚னிதே³வஸவிதர்து³ரி॒தானி॒பரா᳚ஸுவ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | ஸவிதா | கா³யத்ரீ}</span><p>யத்³‌ப⁴॒த்³ரம்ʼதன்ன॒ஆஸு॑வ॒(ஸ்வாஹா᳚) || 5 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>அனா᳚க³ஸோ॒,அதி³॑தயேதே³॒வஸ்ய॑ஸவி॒து꞉ஸ॒வே |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | ஸவிதா | கா³யத்ரீ}</span><p>விஶ்வா᳚வா॒மானி॑தீ⁴மஹி॒(ஸ்வாஹா᳚) || 6 || <span class='MantraNumbering'>வர்க³:26</span></td>
@@ -2066,7 +2066,7 @@
 <td class='VargaStyle1'>ர॒தீ²வ॒கஶ॒யாஶ்வாம்᳚ˮ,அபி⁴க்ஷி॒பன்னா॒விர்தூ³॒தான்‌க்ரு॑ʼணுதேவ॒ர்ஷ்யா॒3॑(ஆம்॒ˮ)அஹ॑ |<span class='RishiDevChandas'>{பௌ⁴மோத்ரி꞉ | பர்ஜன்ய꞉ | ஜக³தீ}</span><p>தூ³॒ராத்‌ஸிம்॒ʼஹஸ்ய॑ஸ்த॒னதா²॒,உதீ³᳚ரதே॒யத்‌ப॒ர்ஜன்ய॑꞉க்ருʼணு॒தேவ॒ர்ஷ்ய1॑(அம்॒ʼ)நப⁴॒꞉(ஸ்வாஹா᳚) || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ப்ரவாதா॒வான்‌தி॑ப॒தய᳚ந்திவி॒த்³யுத॒உதோ³ஷ॑தீ⁴॒ர்ஜிஹ॑தே॒பின்வ॑தே॒ஸ்வ॑꞉ |<span class='RishiDevChandas'>{பௌ⁴மோத்ரி꞉ | பர்ஜன்ய꞉ | ஜக³தீ}</span><p>இரா॒விஶ்வ॑ஸ்மை॒பு⁴வ॑னாயஜாயதே॒யத்‌ப॒ர்ஜன்ய॑꞉ப்ருʼதி²॒வீம்ʼரேத॒ஸாவ॑தி॒(ஸ்வாஹா᳚) || 4 || </td>
+<td class='VargaStyle1'>ப்ரவாதா॒வாந்தி॑ப॒தய᳚ந்திவி॒த்³யுத॒உதோ³ஷ॑தீ⁴॒ர்ஜிஹ॑தே॒பின்வ॑தே॒ஸ்வ॑꞉ |<span class='RishiDevChandas'>{பௌ⁴மோத்ரி꞉ | பர்ஜன்ய꞉ | ஜக³தீ}</span><p>இரா॒விஶ்வ॑ஸ்மை॒பு⁴வ॑னாயஜாயதே॒யத்‌ப॒ர்ஜன்ய॑꞉ப்ருʼதி²॒வீம்ʼரேத॒ஸாவ॑தி॒(ஸ்வாஹா᳚) || 4 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>யஸ்ய᳚வ்ர॒தேப்ரு॑ʼதி²॒வீநன்ன॑மீதி॒யஸ்ய᳚வ்ர॒தேஶ॒ப²வ॒ஜ்ஜர்பு⁴॑ரீதி |<span class='RishiDevChandas'>{பௌ⁴மோத்ரி꞉ | பர்ஜன்ய꞉ | த்ரிஷ்டுப்}</span><p>யஸ்ய᳚வ்ர॒தஓஷ॑தீ⁴ர்வி॒ஶ்வரூ᳚பா॒꞉ஸந॑꞉பர்ஜன்ய॒மஹி॒ஶர்ம॑யச்ச²॒(ஸ்வாஹா᳚) || 5 || </td>
@@ -2096,7 +2096,7 @@
 <td class='VargaStyle1'>ஸ்தோமா᳚ஸஸ்த்வாவிசாரிணி॒ப்ரதி॑ஷ்டோப⁴ந்த்ய॒க்துபி⁴॑꞉ |<span class='RishiDevChandas'>{பௌ⁴மோத்ரி꞉ | ப்ருʼதி²வீ | அனுஷ்டுப்}</span><p>ப்ரயாவாஜம்॒ʼநஹேஷ᳚ந்தம்ʼபே॒ருமஸ்ய॑ஸ்யர்ஜுனி॒(ஸ்வாஹா᳚) || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>த்³ரு॒ʼள்ஹாசி॒த்³யாவன॒ஸ்பதீ᳚ன்‌க்ஷ்ம॒யாத³ர்த⁴॒ர்ஷ்யோஜ॑ஸா |<span class='RishiDevChandas'>{பௌ⁴மோத்ரி꞉ | ப்ருʼதி²வீ | அனுஷ்டுப்}</span><p>யத்தே᳚,அ॒ப்⁴ரஸ்ய॑வி॒த்³யுதோ᳚தி³॒வோவர்ஷ᳚ந்திவ்ரு॒ʼஷ்டய॒꞉(ஸ்வாஹா᳚) || 3 || </td>
+<td class='VargaStyle1'>த்³ரு॒ʼள்ஹாசி॒த்³‌யாவன॒ஸ்பதீ᳚ன்க்ஷ்ம॒யாத³ர்த⁴॒ர்ஷ்யோஜ॑ஸா |<span class='RishiDevChandas'>{பௌ⁴மோத்ரி꞉ | ப்ருʼதி²வீ | அனுஷ்டுப்}</span><p>யத்தே᳚,அ॒ப்⁴ரஸ்ய॑வி॒த்³யுதோ᳚தி³॒வோவர்ஷ᳚ந்திவ்ரு॒ʼஷ்டய॒꞉(ஸ்வாஹா᳚) || 3 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[77] ப்ரஸம்ராஜஇத்யஷ்டர்சஸ்ய ஸூக்தஸ்ய பௌ⁴மோத்ரிர்வருணத்ரிஷ்டுப் |<span class='MantraNumbering'>{அஷ்டக:4, அத்⁴யாய:4}{மண்ட³ல:5, ஸூக்த:85}{அனுவாக:6, ஸூக்த:13}</td>
