--- a/Rigveda/SamhitaPatha/Tamil/Mandala/Format1/RVS-Tamil-F1-M05.html
+++ b/Rigveda/SamhitaPatha/Tamil/Mandala/Format1/RVS-Tamil-F1-M05.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ஶ்ரீ॒ கு³॒ரு॒ப்⁴யோ॒ ந॒ம॒꞉ ஹரி꞉ ௐ ||</h1>
 <h2 class='simpHtmlH1'>|| ருʼக்³வேத³ ஸம்ʼஹிதா (மண்ட³ல: 05) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{மண்ட³ல,ஸூக்த,மந்த்ர}{மண்ட³ல,அனுவாக,ஸூக்த,மந்த்ர}{அஷ்டக,அத்⁴யாய,வர்க³,மந்த்ர}{ருʼக்ஸம்ʼஹித ஸூக்த ஸங்க்²யா,ருʼக்ஸம்ʼஹித மந்த்ர ஸங்க்²யா}<br> [Last updated on: 22-Jan-2025]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{மண்ட³ல,ஸூக்த,மந்த்ர}{மண்ட³ல,அனுவாக,ஸூக்த,மந்த்ர}{அஷ்டக,அத்⁴யாய,வர்க³,மந்த்ர}{ருʼக்ஸம்ʼஹித ஸூக்த ஸங்க்²யா,ருʼக்ஸம்ʼஹித மந்த்ர ஸங்க்²யா}<br> [Last updated on: 01-Feb-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -2244,13 +2244,13 @@
 <td class='VargaStyle1'>அ॒பி⁴ யே த்வா᳚ விபா⁴வரி॒ ஸ்தோமை᳚ர்க்³ரு॒ʼணந்தி॒ வஹ்ன॑ய꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸத்யஶ்ரவா꞉ | உஷா꞉ | பங்க்தி꞉}</span><p>ம॒கை⁴ர்ம॑கோ⁴னி ஸு॒ஶ்ரியோ॒ தா³ம᳚ன்வந்த꞉ ஸுரா॒தய॒꞉ ஸுஜா᳚தே॒, அஶ்வ॑ஸூந்ருʼதே ||<span class='MantraNumbering'>{4/10}{5.79.4}{5.6.7.4}{4.4.21.4}{433, 4306}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>யச்சி॒த்³தி⁴ தே᳚ க³॒ணா, இ॒மே ச²॒த³ய᳚ந்தி ம॒க⁴த்த॑யே |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸத்யஶ்ரவா꞉ | உஷா꞉ | பங்க்தி꞉}</span><p>பரி॑ சி॒த்³வஷ்ட॑யோ த³து⁴॒ர்த³த³॑தோ॒ ராதோ⁴॒, அஹ்ர॑யம்॒ʼ ஸுஜா᳚தே॒, அஶ்வ॑ஸூந்ருʼதே ||<span class='MantraNumbering'>{5/10}{5.79.5}{5.6.7.5}{4.4.21.5}{433, 4307}</span></td>
+<td class='VargaStyle1'>யச்சி॒த்³தி⁴ தே᳚ க³॒ணா, இ॒மே ச²॒த³ய᳚ந்தி ம॒க⁴த்த॑யே |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸத்யஶ்ரவா꞉ | உஷா꞉ | பங்க்தி꞉}</span><p>பரி॑ சி॒த்³‌ வஷ்ட॑யோ த³து⁴॒ர்த³த³॑தோ॒ ராதோ⁴॒, அஹ்ர॑யம்॒ʼ ஸுஜா᳚தே॒, அஶ்வ॑ஸூந்ருʼதே ||<span class='MantraNumbering'>{5/10}{5.79.5}{5.6.7.5}{4.4.21.5}{433, 4307}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ஐஷு॑ தா⁴ வீ॒ரவ॒த்³யஶ॒ உஷோ᳚ மகோ⁴னி ஸூ॒ரிஷு॑ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸத்யஶ்ரவா꞉ | உஷா꞉ | பங்க்தி꞉}</span><p>யே நோ॒ ராதா⁴ம்॒ʼஸ்யஹ்ர॑யா ம॒க⁴வா᳚னோ॒, அரா᳚ஸத॒ ஸுஜா᳚தே॒, அஶ்வ॑ஸூந்ருʼதே ||<span class='MantraNumbering'>{6/10}{5.79.6}{5.6.7.6}{4.4.22.1}{433, 4308}</span></td>
+<td class='VargaStyle2'>ஐஷு॑ தா⁴ வீ॒ரவ॒த்³‌ யஶ॒ உஷோ᳚ மகோ⁴னி ஸூ॒ரிஷு॑ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸத்யஶ்ரவா꞉ | உஷா꞉ | பங்க்தி꞉}</span><p>யே நோ॒ ராதா⁴ம்॒ʼஸ்யஹ்ர॑யா ம॒க⁴வா᳚னோ॒, அரா᳚ஸத॒ ஸுஜா᳚தே॒, அஶ்வ॑ஸூந்ருʼதே ||<span class='MantraNumbering'>{6/10}{5.79.6}{5.6.7.6}{4.4.22.1}{433, 4308}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>தேப்⁴யோ᳚ த்³யு॒ம்னம்ʼ ப்³ரு॒ʼஹத்³யஶ॒ உஷோ᳚ மகோ⁴॒ன்யா வ॑ஹ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸத்யஶ்ரவா꞉ | உஷா꞉ | பங்க்தி꞉}</span><p>யே நோ॒ ராதா⁴ம்॒ʼஸ்யஶ்வ்யா᳚ க³॒வ்யா ப⁴ஜ᳚ந்த ஸூ॒ரய॒꞉ ஸுஜா᳚தே॒, அஶ்வ॑ஸூந்ருʼதே ||<span class='MantraNumbering'>{7/10}{5.79.7}{5.6.7.7}{4.4.22.2}{433, 4309}</span></td>
+<td class='VargaStyle2'>தேப்⁴யோ᳚ த்³யு॒ம்னம்ʼ ப்³ரு॒ʼஹத்³‌ யஶ॒ உஷோ᳚ மகோ⁴॒ன்யா வ॑ஹ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸத்யஶ்ரவா꞉ | உஷா꞉ | பங்க்தி꞉}</span><p>யே நோ॒ ராதா⁴ம்॒ʼஸ்யஶ்வ்யா᳚ க³॒வ்யா ப⁴ஜ᳚ந்த ஸூ॒ரய॒꞉ ஸுஜா᳚தே॒, அஶ்வ॑ஸூந்ருʼதே ||<span class='MantraNumbering'>{7/10}{5.79.7}{5.6.7.7}{4.4.22.2}{433, 4309}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>உ॒த நோ॒ கோ³ம॑தீ॒ரிஷ॒ ஆ வ॑ஹா து³ஹிதர்தி³வ꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸத்யஶ்ரவா꞉ | உஷா꞉ | பங்க்தி꞉}</span><p>ஸா॒கம்ʼ ஸூர்ய॑ஸ்ய ர॒ஶ்மிபி⁴॑꞉ ஶு॒க்ரை꞉ ஶோச॑த்³பி⁴ர॒ர்சிபி⁴॒꞉ ஸுஜா᳚தே॒, அஶ்வ॑ஸூந்ருʼதே ||<span class='MantraNumbering'>{8/10}{5.79.8}{5.6.7.8}{4.4.22.3}{433, 4310}</span></td>
@@ -2259,7 +2259,7 @@
 <td class='VargaStyle2'>வ்யு॑ச்சா² து³ஹிதர்தி³வோ॒ மா சி॒ரம்ʼ த॑னுதா²॒, அப॑꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸத்யஶ்ரவா꞉ | உஷா꞉ | பங்க்தி꞉}</span><p>நேத்‌ த்வா᳚ ஸ்தே॒னம்ʼ யதா²᳚ ரி॒பும்ʼ தபா᳚தி॒ ஸூரோ᳚, அ॒ர்சிஷா॒ ஸுஜா᳚தே॒, அஶ்வ॑ஸூந்ருʼதே ||<span class='MantraNumbering'>{9/10}{5.79.9}{5.6.7.9}{4.4.22.4}{433, 4311}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ஏ॒தாவ॒த்³வேது³॑ஷ॒ஸ்த்வம்ʼ பூ⁴யோ᳚ வா॒ தா³து॑மர்ஹஸி |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸத்யஶ்ரவா꞉ | உஷா꞉ | பங்க்தி꞉}</span><p>யா ஸ்தோ॒த்ருʼப்⁴யோ᳚ விபா⁴வர்யு॒ச்ச²ந்தீ॒ ந ப்ர॒மீய॑ஸே॒ ஸுஜா᳚தே॒, அஶ்வ॑ஸூந்ருʼதே ||<span class='MantraNumbering'>{10/10}{5.79.10}{5.6.7.10}{4.4.22.5}{433, 4312}</span></td>
+<td class='VargaStyle2'>ஏ॒தாவ॒த்³‌ வேது³॑ஷ॒ஸ்த்வம்ʼ பூ⁴யோ᳚ வா॒ தா³து॑மர்ஹஸி |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸத்யஶ்ரவா꞉ | உஷா꞉ | பங்க்தி꞉}</span><p>யா ஸ்தோ॒த்ருʼப்⁴யோ᳚ விபா⁴வர்யு॒ச்ச²ந்தீ॒ ந ப்ர॒மீய॑ஸே॒ ஸுஜா᳚தே॒, அஶ்வ॑ஸூந்ருʼதே ||<span class='MantraNumbering'>{10/10}{5.79.10}{5.6.7.10}{4.4.22.5}{433, 4312}</span></td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[80] த்³யுதத்³யாமானமிதி ஷட்³ருʼசஸ்ய ஸூக்தஸ்யாத்ரேய꞉ஸத்யஶ்ரவாஉஷாஸ்த்ரிஷ்டுப் |</td>
@@ -2271,7 +2271,7 @@
 <td class='VargaStyle1'>ஏ॒ஷா ஜனம்᳚ʼ த³ர்ஶ॒தா போ³॒த⁴ய᳚ந்தீ ஸு॒கா³ன்‌ ப॒த²꞉ க்ரு᳚ʼண்வ॒தீ யா॒த்யக்³ரே᳚ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸத்யஶ்ரவா꞉ | உஷா꞉ | த்ரிஷ்டுப்}</span><p>ப்³ரு॒ʼஹ॒த்³ர॒தா² ப்³ரு॑ʼஹ॒தீ வி॑ஶ்வமி॒ன்வோஷா ஜ்யோதி᳚ர்யச்ச²॒த்யக்³ரே॒, அஹ்னா᳚ம் ||<span class='MantraNumbering'>{2/6}{5.80.2}{5.6.8.2}{4.4.23.2}{434, 4314}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ஏ॒ஷா கோ³பி⁴॑ரரு॒ணேபி⁴᳚ர்யுஜா॒னாஸ்ரே᳚த⁴ந்தீ ர॒யிமப்ரா᳚யு சக்ரே |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸத்யஶ்ரவா꞉ | உஷா꞉ | த்ரிஷ்டுப்}</span><p>ப॒தோ² ரத³᳚ந்தீ ஸுவி॒தாய॑ தே³॒வீ பு॑ருஷ்டு॒தா வி॒ஶ்வவா᳚ரா॒ வி பா⁴᳚தி ||<span class='MantraNumbering'>{3/6}{5.80.3}{5.6.8.3}{4.4.23.3}{434, 4315}</span></td>
+<td class='VargaStyle1'>ஏ॒ஷா கோ³பி⁴॑ரரு॒ணேபி⁴᳚ர்யுஜா॒னா (அ)ஸ்ரே᳚த⁴ந்தீ ர॒யிமப்ரா᳚யு சக்ரே |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸத்யஶ்ரவா꞉ | உஷா꞉ | த்ரிஷ்டுப்}</span><p>ப॒தோ² ரத³᳚ந்தீ ஸுவி॒தாய॑ தே³॒வீ பு॑ருஷ்டு॒தா வி॒ஶ்வவா᳚ரா॒ வி பா⁴᳚தி ||<span class='MantraNumbering'>{3/6}{5.80.3}{5.6.8.3}{4.4.23.3}{434, 4315}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ஏ॒ஷா வ்யே᳚னீ ப⁴வதி த்³வி॒ப³ர்ஹா᳚, ஆவிஷ்க்ருʼண்வா॒னா த॒ன்வம்᳚ʼ பு॒ரஸ்தா᳚த் |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸத்யஶ்ரவா꞉ | உஷா꞉ | த்ரிஷ்டுப்}</span><p>ரு॒ʼதஸ்ய॒ பந்தா²॒மன்வே᳚தி ஸா॒து⁴ ப்ர॑ஜான॒தீவ॒ ந தி³ஶோ᳚ மினாதி ||<span class='MantraNumbering'>{4/6}{5.80.4}{5.6.8.4}{4.4.23.4}{434, 4316}</span></td>
@@ -2280,7 +2280,7 @@
 <td class='VargaStyle1'>ஏ॒ஷா ஶு॒ப்⁴ரா ந த॒ன்வோ᳚ விதா³॒னோர்த்⁴வேவ॑ ஸ்னா॒தீ த்³ரு॒ʼஶயே᳚ நோ, அஸ்தா²த் |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸத்யஶ்ரவா꞉ | உஷா꞉ | த்ரிஷ்டுப்}</span><p>அப॒ த்³வேஷோ॒ பா³த⁴॑மானா॒ தமாம்᳚ʼஸ்யு॒ஷா தி³॒வோ து³॑ஹி॒தா ஜ்யோதி॒ஷாகா³᳚த் ||<span class='MantraNumbering'>{5/6}{5.80.5}{5.6.8.5}{4.4.23.5}{434, 4317}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ஏ॒ஷா ப்ர॑தீ॒சீ து³॑ஹி॒தா தி³॒வோ ந்ரூʼன்யோஷே᳚வ ப⁴॒த்³ரா நி ரி॑ணீதே॒, அப்ஸ॑꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸத்யஶ்ரவா꞉ | உஷா꞉ | த்ரிஷ்டுப்}</span><p>வ்யூ॒ர்ண்வ॒தீ தா³॒ஶுஷே॒ வார்யா᳚ணி॒ புன॒ர்ஜ்யோதி᳚ர்யுவ॒தி꞉ பூ॒ர்வதா²᳚க꞉ ||<span class='MantraNumbering'>{6/6}{5.80.6}{5.6.8.6}{4.4.23.6}{434, 4318}</span></td>
+<td class='VargaStyle1'>ஏ॒ஷா ப்ர॑தீ॒சீ து³॑ஹி॒தா தி³॒வோ ந்ரூʼன் யோஷே᳚வ ப⁴॒த்³ரா நி ரி॑ணீதே॒, அப்ஸ॑꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஸத்யஶ்ரவா꞉ | உஷா꞉ | த்ரிஷ்டுப்}</span><p>வ்யூ॒ர்ண்வ॒தீ தா³॒ஶுஷே॒ வார்யா᳚ணி॒ புன॒ர்ஜ்யோதி᳚ர்யுவ॒தி꞉ பூ॒ர்வதா²᳚க꞉ ||<span class='MantraNumbering'>{6/6}{5.80.6}{5.6.8.6}{4.4.23.6}{434, 4318}</span></td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[81] யுஞ்ஜதேமனஇதி பஞ்சர்சஸ்ய ஸூக்தஸ்யாத்ரேய꞉ ஶ்யாவாஶ்வ꞉ ஸவிதாஜக³தீ |</td>
@@ -2289,10 +2289,10 @@
 <td class='VargaStyle2'>யு॒ஞ்ஜதே॒ மன॑ உ॒த யு᳚ஞ்ஜதே॒ தி⁴யோ॒ விப்ரா॒ விப்ர॑ஸ்ய ப்³ருʼஹ॒தோ வி॑ப॒ஶ்சித॑꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | ஸவிதா | ஜக³தீ}</span><p>வி ஹோத்ரா᳚ த³தே⁴ வயுனா॒விதே³க॒ இன்ம॒ஹீ தே³॒வஸ்ய॑ ஸவி॒து꞉ பரி॑ஷ்டுதி꞉ ||<span class='MantraNumbering'>{1/5}{5.81.1}{5.6.9.1}{4.4.24.1}{435, 4319}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>விஶ்வா᳚ ரூ॒பாணி॒ ப்ரதி॑ முஞ்சதே க॒வி꞉ ப்ராஸா᳚வீத்³ப⁴॒த்³ரம்ʼ த்³வி॒பதே³॒ சது॑ஷ்பதே³ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | ஸவிதா | ஜக³தீ}</span><p>வி நாக॑மக்²யத்ஸவி॒தா வரே॒ண்யோ(அ)னு॑ ப்ர॒யாண॑மு॒ஷஸோ॒ வி ரா᳚ஜதி ||<span class='MantraNumbering'>{2/5}{5.81.2}{5.6.9.2}{4.4.24.2}{435, 4320}</span></td>
+<td class='VargaStyle2'>விஶ்வா᳚ ரூ॒பாணி॒ ப்ரதி॑ முஞ்சதே க॒வி꞉ ப்ராஸா᳚வீத்³‌ ப⁴॒த்³ரம்ʼ த்³வி॒பதே³॒ சது॑ஷ்பதே³ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | ஸவிதா | ஜக³தீ}</span><p>வி நாக॑மக்²யத்‌ ஸவி॒தா வரே॒ண்யோ(அ)னு॑ ப்ர॒யாண॑மு॒ஷஸோ॒ வி ரா᳚ஜதி ||<span class='MantraNumbering'>{2/5}{5.81.2}{5.6.9.2}{4.4.24.2}{435, 4320}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>யஸ்ய॑ ப்ர॒யாண॒மன்வ॒ன்ய இத்³ய॒யுர்தே³॒வா தே³॒வஸ்ய॑ மஹி॒மான॒மோஜ॑ஸா |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | ஸவிதா | ஜக³தீ}</span><p>ய꞉ பார்தி²॑வானி விம॒மே ஸ ஏத॑ஶோ॒ ரஜாம்᳚ʼஸி தே³॒வ꞉ ஸ॑வி॒தா ம॑ஹித்வ॒னா ||<span class='MantraNumbering'>{3/5}{5.81.3}{5.6.9.3}{4.4.24.3}{435, 4321}</span></td>
+<td class='VargaStyle2'>யஸ்ய॑ ப்ர॒யாண॒மன்வ॒ன்ய இத்³‌ ய॒யுர்தே³॒வா தே³॒வஸ்ய॑ மஹி॒மான॒மோஜ॑ஸா |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | ஸவிதா | ஜக³தீ}</span><p>ய꞉ பார்தி²॑வானி விம॒மே ஸ ஏத॑ஶோ॒ ரஜாம்᳚ʼஸி தே³॒வ꞉ ஸ॑வி॒தா ம॑ஹித்வ॒னா ||<span class='MantraNumbering'>{3/5}{5.81.3}{5.6.9.3}{4.4.24.3}{435, 4321}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>உ॒த யா᳚ஸி ஸவித॒ஸ்த்ரீணி॑ ரோச॒னோத ஸூர்ய॑ஸ்ய ர॒ஶ்மிபி⁴॒꞉ ஸமு॑ச்யஸி |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | ஸவிதா | ஜக³தீ}</span><p>உ॒த ராத்ரீ᳚முப⁴॒யத॒꞉ பரீ᳚யஸ உ॒த மி॒த்ரோ ப⁴॑வஸி தே³வ॒ த⁴ர்ம॑பி⁴꞉ ||<span class='MantraNumbering'>{4/5}{5.81.4}{5.6.9.4}{4.4.24.4}{435, 4322}</span></td>
@@ -2304,7 +2304,7 @@
 <td class='SuktaLabel'>[82] தத்ஸவிதுரிதி நவர்சஸ்ய ஸூக்தஸ்யாத்ரேய꞉ஶ்யாவாஶ்வ꞉ ஸவிதாகா³யத்ரீ ஆத்³யானுஷ்டுப் |</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>தத்ஸ॑வி॒துர்வ்ரு॑ʼணீமஹே வ॒யம்ʼ தே³॒வஸ்ய॒ போ⁴ஜ॑னம் |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | ஸவிதா | அனுஷ்டுப்}</span><p>ஶ்ரேஷ்ட²ம்᳚ʼ ஸர்வ॒தா⁴த॑மம்॒ʼ துரம்॒ʼ ப⁴க³॑ஸ்ய தீ⁴மஹி ||<span class='MantraNumbering'>{1/9}{5.82.1}{5.6.10.1}{4.4.25.1}{436, 4324}</span></td>
+<td class='VargaStyle1'>தத்‌ ஸ॑வி॒துர்வ்ரு॑ʼணீமஹே வ॒யம்ʼ தே³॒வஸ்ய॒ போ⁴ஜ॑னம் |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | ஸவிதா | அனுஷ்டுப்}</span><p>ஶ்ரேஷ்ட²ம்᳚ʼ ஸர்வ॒தா⁴த॑மம்॒ʼ துரம்॒ʼ ப⁴க³॑ஸ்ய தீ⁴மஹி ||<span class='MantraNumbering'>{1/9}{5.82.1}{5.6.10.1}{4.4.25.1}{436, 4324}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>அஸ்ய॒ ஹி ஸ்வய॑ஶஸ்தரம்ʼ ஸவி॒து꞉ கச்ச॒ன ப்ரி॒யம் |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | ஸவிதா | கா³யத்ரீ}</span><p>ந மி॒னந்தி॑ ஸ்வ॒ராஜ்ய᳚ம் ||<span class='MantraNumbering'>{2/9}{5.82.2}{5.6.10.2}{4.4.25.2}{436, 4325}</span></td>
@@ -2313,10 +2313,10 @@
 <td class='VargaStyle1'>ஸ ஹி ரத்னா᳚னி தா³॒ஶுஷே᳚ ஸு॒வாதி॑ ஸவி॒தா ப⁴க³॑꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | ஸவிதா | கா³யத்ரீ}</span><p>தம்ʼ பா⁴॒க³ம்ʼ சி॒த்ரமீ᳚மஹே ||<span class='MantraNumbering'>{3/9}{5.82.3}{5.6.10.3}{4.4.25.3}{436, 4326}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>அ॒த்³யா நோ᳚ தே³வ ஸவித꞉ ப்ர॒ஜாவ॑த்ஸாவீ॒꞉ ஸௌப⁴॑க³ம் |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | ஸவிதா | கா³யத்ரீ}</span><p>பரா᳚ து³॒ஷ்ஷ்வப்ன்யம்᳚ʼ ஸுவ ||<span class='MantraNumbering'>{4/9}{5.82.4}{5.6.10.4}{4.4.25.4}{436, 4327}</span></td>
+<td class='VargaStyle1'>அ॒த்³யா நோ᳚ தே³வ ஸவித꞉ ப்ர॒ஜாவ॑த்‌ ஸாவீ॒꞉ ஸௌப⁴॑க³ம் |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | ஸவிதா | கா³யத்ரீ}</span><p>பரா᳚ து³॒ஷ்ஷ்வப்ன்யம்᳚ʼ ஸுவ ||<span class='MantraNumbering'>{4/9}{5.82.4}{5.6.10.4}{4.4.25.4}{436, 4327}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>விஶ்வா᳚னி தே³வ ஸவிதர்து³ரி॒தானி॒ பரா᳚ ஸுவ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | ஸவிதா | கா³யத்ரீ}</span><p>யத்³ப⁴॒த்³ரம்ʼ தன்ன॒ ஆ ஸு॑வ ||<span class='MantraNumbering'>{5/9}{5.82.5}{5.6.10.5}{4.4.25.5}{436, 4328}</span></td>
+<td class='VargaStyle1'>விஶ்வா᳚னி தே³வ ஸவிதர்து³ரி॒தானி॒ பரா᳚ ஸுவ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | ஸவிதா | கா³யத்ரீ}</span><p>யத்³‌ ப⁴॒த்³ரம்ʼ தன்ன॒ ஆ ஸு॑வ ||<span class='MantraNumbering'>{5/9}{5.82.5}{5.6.10.5}{4.4.25.5}{436, 4328}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>அனா᳚க³ஸோ॒, அதி³॑தயே தே³॒வஸ்ய॑ ஸவி॒து꞉ ஸ॒வே |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | ஸவிதா | கா³யத்ரீ}</span><p>விஶ்வா᳚ வா॒மானி॑ தீ⁴மஹி ||<span class='MantraNumbering'>{6/9}{5.82.6}{5.6.10.6}{4.4.26.1}{436, 4329}</span></td>
@@ -2343,7 +2343,7 @@
 <td class='VargaStyle1'>ர॒தீ²வ॒ கஶ॒யாஶ்வாம்᳚ˮ, அபி⁴க்ஷி॒பன்னா॒விர்தூ³॒தான்‌ க்ரு॑ʼணுதே வ॒ர்ஷ்யா॒3॑(ஆம்॒ˮ) அஹ॑ |<span class='RishiDevChandas'>{பௌ⁴மோத்ரி꞉ | பர்ஜன்ய꞉ | ஜக³தீ}</span><p>தூ³॒ராத்‌ ஸிம்॒ʼஹஸ்ய॑ ஸ்த॒னதா²॒, உதீ³᳚ரதே॒ யத்‌ ப॒ர்ஜன்ய॑꞉ க்ருʼணு॒தே வ॒ர்ஷ்ய1॑(அம்॒ʼ) நப⁴॑꞉ ||<span class='MantraNumbering'>{3/10}{5.83.3}{5.6.11.3}{4.4.27.3}{437, 4335}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ப்ர வாதா॒ வான்‌ தி॑ ப॒தய᳚ந்தி வி॒த்³யுத॒ உதோ³ஷ॑தீ⁴॒ர்ஜிஹ॑தே॒ பின்வ॑தே॒ ஸ்வ॑꞉ |<span class='RishiDevChandas'>{பௌ⁴மோத்ரி꞉ | பர்ஜன்ய꞉ | ஜக³தீ}</span><p>இரா॒ விஶ்வ॑ஸ்மை॒ பு⁴வ॑னாய ஜாயதே॒ யத்‌ ப॒ர்ஜன்ய॑꞉ ப்ருʼதி²॒வீம்ʼ ரேத॒ஸாவ॑தி ||<span class='MantraNumbering'>{4/10}{5.83.4}{5.6.11.4}{4.4.27.4}{437, 4336}</span></td>
+<td class='VargaStyle1'>ப்ர வாதா॒ வாந்தி॑ ப॒தய᳚ந்தி வி॒த்³யுத॒ உதோ³ஷ॑தீ⁴॒ர்ஜிஹ॑தே॒ பின்வ॑தே॒ ஸ்வ॑꞉ |<span class='RishiDevChandas'>{பௌ⁴மோத்ரி꞉ | பர்ஜன்ய꞉ | ஜக³தீ}</span><p>இரா॒ விஶ்வ॑ஸ்மை॒ பு⁴வ॑னாய ஜாயதே॒ யத்‌ ப॒ர்ஜன்ய॑꞉ ப்ருʼதி²॒வீம்ʼ ரேத॒ஸாவ॑தி ||<span class='MantraNumbering'>{4/10}{5.83.4}{5.6.11.4}{4.4.27.4}{437, 4336}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>யஸ்ய᳚ வ்ர॒தே ப்ரு॑ʼதி²॒வீ நன்ன॑மீதி॒ யஸ்ய᳚ வ்ர॒தே ஶ॒ப²வ॒ஜ்ஜர்பு⁴॑ரீதி |<span class='RishiDevChandas'>{பௌ⁴மோத்ரி꞉ | பர்ஜன்ய꞉ | த்ரிஷ்டுப்}</span><p>யஸ்ய᳚ வ்ர॒த ஓஷ॑தீ⁴ர்வி॒ஶ்வரூ᳚பா॒꞉ ஸ ந॑꞉ பர்ஜன்ய॒ மஹி॒ ஶர்ம॑ யச்ச² ||<span class='MantraNumbering'>{5/10}{5.83.5}{5.6.11.5}{4.4.27.5}{437, 4337}</span></td>
@@ -2373,7 +2373,7 @@
 <td class='VargaStyle1'>ஸ்தோமா᳚ஸஸ்த்வா விசாரிணி॒ ப்ரதி॑ ஷ்டோப⁴ந்த்ய॒க்துபி⁴॑꞉ |<span class='RishiDevChandas'>{பௌ⁴மோத்ரி꞉ | ப்ருʼதி²வீ | அனுஷ்டுப்}</span><p>ப்ர யா வாஜம்॒ʼ ந ஹேஷ᳚ந்தம்ʼ பே॒ருமஸ்ய॑ஸ்யர்ஜுனி ||<span class='MantraNumbering'>{2/3}{5.84.2}{5.6.12.2}{4.4.29.2}{438, 4344}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>த்³ரு॒ʼள்ஹா சி॒த்³யா வன॒ஸ்பதீ᳚ன்‌ க்ஷ்ம॒யா த³ர்த⁴॒ர்ஷ்யோஜ॑ஸா |<span class='RishiDevChandas'>{பௌ⁴மோத்ரி꞉ | ப்ருʼதி²வீ | அனுஷ்டுப்}</span><p>யத்தே᳚, அ॒ப்⁴ரஸ்ய॑ வி॒த்³யுதோ᳚ தி³॒வோ வர்ஷ᳚ந்தி வ்ரு॒ʼஷ்டய॑꞉ ||<span class='MantraNumbering'>{3/3}{5.84.3}{5.6.12.3}{4.4.29.3}{438, 4345}</span></td>
+<td class='VargaStyle1'>த்³ரு॒ʼள்ஹா சி॒த்³‌ யா வன॒ஸ்பதீ᳚ன் க்ஷ்ம॒யா த³ர்த⁴॒ர்ஷ்யோஜ॑ஸா |<span class='RishiDevChandas'>{பௌ⁴மோத்ரி꞉ | ப்ருʼதி²வீ | அனுஷ்டுப்}</span><p>யத்தே᳚, அ॒ப்⁴ரஸ்ய॑ வி॒த்³யுதோ᳚ தி³॒வோ வர்ஷ᳚ந்தி வ்ரு॒ʼஷ்டய॑꞉ ||<span class='MantraNumbering'>{3/3}{5.84.3}{5.6.12.3}{4.4.29.3}{438, 4345}</span></td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[85] ப்ரஸம்ராஜஇத்யஷ்டர்சஸ்ய ஸூக்தஸ்ய பௌ⁴மோத்ரிர்வருணத்ரிஷ்டுப் |</td>
