--- a/Rigveda/SamhitaPatha/Telugu/Mandala/Format1/RVS-Telugu-F1-M05.html
+++ b/Rigveda/SamhitaPatha/Telugu/Mandala/Format1/RVS-Telugu-F1-M05.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| శ్రీ॒ గు॒రు॒భ్యో॒ న॒మః॒ హరిః ఓం ||</h1>
 <h2 class='simpHtmlH1'>|| ఋగ్వేద సంహితా (మండల: 05) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{మండల,సూక్త,మంత్ర}{మండల,అనువాక,సూక్త,మంత్ర}{అష్టక,అధ్యాయ,వర్గ,మంత్ర}{ఋక్సంహిత సూక్త సంఖ్యా,ఋక్సంహిత మంత్ర సంఖ్యా}<br> [Last updated on: 22-Jan-2025]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{మండల,సూక్త,మంత్ర}{మండల,అనువాక,సూక్త,మంత్ర}{అష్టక,అధ్యాయ,వర్గ,మంత్ర}{ఋక్సంహిత సూక్త సంఖ్యా,ఋక్సంహిత మంత్ర సంఖ్యా}<br> [Last updated on: 01-Feb-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -2244,13 +2244,13 @@
 <td class='VargaStyle1'>అ॒భి యే త్వా᳚ విభావరి॒ స్తోమై᳚ర్గృ॒ణంతి॒ వహ్న॑యః |<span class='RishiDevChandas'>{ఆత్రేయః సత్యశ్రవాః | ఉషాః | పంక్తిః}</span><p>మ॒ఘైర్మ॑ఘోని సు॒శ్రియో॒ దామ᳚న్వంతః సురా॒తయః॒ సుజా᳚తే॒, అశ్వ॑సూనృతే ||<span class='MantraNumbering'>{4/10}{5.79.4}{5.6.7.4}{4.4.21.4}{433, 4306}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>యచ్చి॒ద్ధి తే᳚ గ॒ణా, ఇ॒మే ఛ॒దయం᳚తి మ॒ఘత్త॑యే |<span class='RishiDevChandas'>{ఆత్రేయః సత్యశ్రవాః | ఉషాః | పంక్తిః}</span><p>పరి॑ చి॒ద్వష్ట॑యో దధు॒ర్దద॑తో॒ రాధో॒, అహ్ర॑యం॒ సుజా᳚తే॒, అశ్వ॑సూనృతే ||<span class='MantraNumbering'>{5/10}{5.79.5}{5.6.7.5}{4.4.21.5}{433, 4307}</span></td>
+<td class='VargaStyle1'>యచ్చి॒ద్ధి తే᳚ గ॒ణా, ఇ॒మే ఛ॒దయం᳚తి మ॒ఘత్త॑యే |<span class='RishiDevChandas'>{ఆత్రేయః సత్యశ్రవాః | ఉషాః | పంక్తిః}</span><p>పరి॑ చి॒ద్‌ వష్ట॑యో దధు॒ర్దద॑తో॒ రాధో॒, అహ్ర॑యం॒ సుజా᳚తే॒, అశ్వ॑సూనృతే ||<span class='MantraNumbering'>{5/10}{5.79.5}{5.6.7.5}{4.4.21.5}{433, 4307}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ఐషు॑ ధా వీ॒రవ॒ద్యశ॒ ఉషో᳚ మఘోని సూ॒రిషు॑ |<span class='RishiDevChandas'>{ఆత్రేయః సత్యశ్రవాః | ఉషాః | పంక్తిః}</span><p>యే నో॒ రాధాం॒స్యహ్ర॑యా మ॒ఘవా᳚నో॒, అరా᳚సత॒ సుజా᳚తే॒, అశ్వ॑సూనృతే ||<span class='MantraNumbering'>{6/10}{5.79.6}{5.6.7.6}{4.4.22.1}{433, 4308}</span></td>
+<td class='VargaStyle2'>ఐషు॑ ధా వీ॒రవ॒ద్‌ యశ॒ ఉషో᳚ మఘోని సూ॒రిషు॑ |<span class='RishiDevChandas'>{ఆత్రేయః సత్యశ్రవాః | ఉషాః | పంక్తిః}</span><p>యే నో॒ రాధాం॒స్యహ్ర॑యా మ॒ఘవా᳚నో॒, అరా᳚సత॒ సుజా᳚తే॒, అశ్వ॑సూనృతే ||<span class='MantraNumbering'>{6/10}{5.79.6}{5.6.7.6}{4.4.22.1}{433, 4308}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>తేభ్యో᳚ ద్యు॒మ్నం బృ॒హద్యశ॒ ఉషో᳚ మఘో॒న్యా వ॑హ |<span class='RishiDevChandas'>{ఆత్రేయః సత్యశ్రవాః | ఉషాః | పంక్తిః}</span><p>యే నో॒ రాధాం॒స్యశ్వ్యా᳚ గ॒వ్యా భజం᳚త సూ॒రయః॒ సుజా᳚తే॒, అశ్వ॑సూనృతే ||<span class='MantraNumbering'>{7/10}{5.79.7}{5.6.7.7}{4.4.22.2}{433, 4309}</span></td>
+<td class='VargaStyle2'>తేభ్యో᳚ ద్యు॒మ్నం బృ॒హద్‌ యశ॒ ఉషో᳚ మఘో॒న్యా వ॑హ |<span class='RishiDevChandas'>{ఆత్రేయః సత్యశ్రవాః | ఉషాః | పంక్తిః}</span><p>యే నో॒ రాధాం॒స్యశ్వ్యా᳚ గ॒వ్యా భజం᳚త సూ॒రయః॒ సుజా᳚తే॒, అశ్వ॑సూనృతే ||<span class='MantraNumbering'>{7/10}{5.79.7}{5.6.7.7}{4.4.22.2}{433, 4309}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ఉ॒త నో॒ గోమ॑తీ॒రిష॒ ఆ వ॑హా దుహితర్దివః |<span class='RishiDevChandas'>{ఆత్రేయః సత్యశ్రవాః | ఉషాః | పంక్తిః}</span><p>సా॒కం సూర్య॑స్య ర॒శ్మిభిః॑ శు॒క్రైః శోచ॑ద్భిర॒ర్చిభిః॒ సుజా᳚తే॒, అశ్వ॑సూనృతే ||<span class='MantraNumbering'>{8/10}{5.79.8}{5.6.7.8}{4.4.22.3}{433, 4310}</span></td>
@@ -2259,7 +2259,7 @@
 <td class='VargaStyle2'>వ్యు॑చ్ఛా దుహితర్దివో॒ మా చి॒రం త॑నుథా॒, అపః॑ |<span class='RishiDevChandas'>{ఆత్రేయః సత్యశ్రవాః | ఉషాః | పంక్తిః}</span><p>నేత్‌ త్వా᳚ స్తే॒నం యథా᳚ రి॒పుం తపా᳚తి॒ సూరో᳚, అ॒ర్చిషా॒ సుజా᳚తే॒, అశ్వ॑సూనృతే ||<span class='MantraNumbering'>{9/10}{5.79.9}{5.6.7.9}{4.4.22.4}{433, 4311}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ఏ॒తావ॒ద్వేదు॑ష॒స్త్వం భూయో᳚ వా॒ దాతు॑మర్హసి |<span class='RishiDevChandas'>{ఆత్రేయః సత్యశ్రవాః | ఉషాః | పంక్తిః}</span><p>యా స్తో॒తృభ్యో᳚ విభావర్యు॒చ్ఛంతీ॒ న ప్ర॒మీయ॑సే॒ సుజా᳚తే॒, అశ్వ॑సూనృతే ||<span class='MantraNumbering'>{10/10}{5.79.10}{5.6.7.10}{4.4.22.5}{433, 4312}</span></td>
+<td class='VargaStyle2'>ఏ॒తావ॒ద్‌ వేదు॑ష॒స్త్వం భూయో᳚ వా॒ దాతు॑మర్హసి |<span class='RishiDevChandas'>{ఆత్రేయః సత్యశ్రవాః | ఉషాః | పంక్తిః}</span><p>యా స్తో॒తృభ్యో᳚ విభావర్యు॒చ్ఛంతీ॒ న ప్ర॒మీయ॑సే॒ సుజా᳚తే॒, అశ్వ॑సూనృతే ||<span class='MantraNumbering'>{10/10}{5.79.10}{5.6.7.10}{4.4.22.5}{433, 4312}</span></td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[80] ద్యుతద్యామానమితి షడృచస్య సూక్తస్యాత్రేయఃసత్యశ్రవాఉషాస్త్రిష్టుప్ |</td>
@@ -2271,7 +2271,7 @@
 <td class='VargaStyle1'>ఏ॒షా జనం᳚ దర్శ॒తా బో॒ధయం᳚తీ సు॒గాన్‌ ప॒థః కృ᳚ణ్వ॒తీ యా॒త్యగ్రే᳚ |<span class='RishiDevChandas'>{ఆత్రేయః సత్యశ్రవాః | ఉషాః | త్రిష్టుప్}</span><p>బృ॒హ॒ద్ర॒థా బృ॑హ॒తీ వి॑శ్వమి॒న్వోషా జ్యోతి᳚ర్యచ్ఛ॒త్యగ్రే॒, అహ్నాం᳚ ||<span class='MantraNumbering'>{2/6}{5.80.2}{5.6.8.2}{4.4.23.2}{434, 4314}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ఏ॒షా గోభి॑రరు॒ణేభి᳚ర్యుజా॒నాస్రే᳚ధంతీ ర॒యిమప్రా᳚యు చక్రే |<span class='RishiDevChandas'>{ఆత్రేయః సత్యశ్రవాః | ఉషాః | త్రిష్టుప్}</span><p>ప॒థో రదం᳚తీ సువి॒తాయ॑ దే॒వీ పు॑రుష్టు॒తా వి॒శ్వవా᳚రా॒ వి భా᳚తి ||<span class='MantraNumbering'>{3/6}{5.80.3}{5.6.8.3}{4.4.23.3}{434, 4315}</span></td>
+<td class='VargaStyle1'>ఏ॒షా గోభి॑రరు॒ణేభి᳚ర్యుజా॒నా ఽస్రే᳚ధంతీ ర॒యిమప్రా᳚యు చక్రే |<span class='RishiDevChandas'>{ఆత్రేయః సత్యశ్రవాః | ఉషాః | త్రిష్టుప్}</span><p>ప॒థో రదం᳚తీ సువి॒తాయ॑ దే॒వీ పు॑రుష్టు॒తా వి॒శ్వవా᳚రా॒ వి భా᳚తి ||<span class='MantraNumbering'>{3/6}{5.80.3}{5.6.8.3}{4.4.23.3}{434, 4315}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ఏ॒షా వ్యే᳚నీ భవతి ద్వి॒బర్హా᳚, ఆవిష్కృణ్వా॒నా త॒న్వం᳚ పు॒రస్తా᳚త్ |<span class='RishiDevChandas'>{ఆత్రేయః సత్యశ్రవాః | ఉషాః | త్రిష్టుప్}</span><p>ఋ॒తస్య॒ పంథా॒మన్వే᳚తి సా॒ధు ప్ర॑జాన॒తీవ॒ న దిశో᳚ మినాతి ||<span class='MantraNumbering'>{4/6}{5.80.4}{5.6.8.4}{4.4.23.4}{434, 4316}</span></td>
@@ -2280,7 +2280,7 @@
 <td class='VargaStyle1'>ఏ॒షా శు॒భ్రా న త॒న్వో᳚ విదా॒నోర్ధ్వేవ॑ స్నా॒తీ దృ॒శయే᳚ నో, అస్థాత్ |<span class='RishiDevChandas'>{ఆత్రేయః సత్యశ్రవాః | ఉషాః | త్రిష్టుప్}</span><p>అప॒ ద్వేషో॒ బాధ॑మానా॒ తమాం᳚స్యు॒షా ది॒వో దు॑హి॒తా జ్యోతి॒షాగా᳚త్ ||<span class='MantraNumbering'>{5/6}{5.80.5}{5.6.8.5}{4.4.23.5}{434, 4317}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ఏ॒షా ప్ర॑తీ॒చీ దు॑హి॒తా ది॒వో నౄన్యోషే᳚వ భ॒ద్రా ని రి॑ణీతే॒, అప్సః॑ |<span class='RishiDevChandas'>{ఆత్రేయః సత్యశ్రవాః | ఉషాః | త్రిష్టుప్}</span><p>వ్యూ॒ర్ణ్వ॒తీ దా॒శుషే॒ వార్యా᳚ణి॒ పున॒ర్జ్యోతి᳚ర్యువ॒తిః పూ॒ర్వథా᳚కః ||<span class='MantraNumbering'>{6/6}{5.80.6}{5.6.8.6}{4.4.23.6}{434, 4318}</span></td>
+<td class='VargaStyle1'>ఏ॒షా ప్ర॑తీ॒చీ దు॑హి॒తా ది॒వో నౄన్ యోషే᳚వ భ॒ద్రా ని రి॑ణీతే॒, అప్సః॑ |<span class='RishiDevChandas'>{ఆత్రేయః సత్యశ్రవాః | ఉషాః | త్రిష్టుప్}</span><p>వ్యూ॒ర్ణ్వ॒తీ దా॒శుషే॒ వార్యా᳚ణి॒ పున॒ర్జ్యోతి᳚ర్యువ॒తిః పూ॒ర్వథా᳚కః ||<span class='MantraNumbering'>{6/6}{5.80.6}{5.6.8.6}{4.4.23.6}{434, 4318}</span></td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[81] యుంజతేమనఇతి పంచర్చస్య సూక్తస్యాత్రేయః శ్యావాశ్వః సవితాజగతీ |</td>
@@ -2289,10 +2289,10 @@
 <td class='VargaStyle2'>యుం॒జతే॒ మన॑ ఉ॒త యుం᳚జతే॒ ధియో॒ విప్రా॒ విప్ర॑స్య బృహ॒తో వి॑ప॒శ్చితః॑ |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | సవితా | జగతీ}</span><p>వి హోత్రా᳚ దధే వయునా॒విదేక॒ ఇన్మ॒హీ దే॒వస్య॑ సవి॒తుః పరి॑ష్టుతిః ||<span class='MantraNumbering'>{1/5}{5.81.1}{5.6.9.1}{4.4.24.1}{435, 4319}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>విశ్వా᳚ రూ॒పాణి॒ ప్రతి॑ ముంచతే క॒విః ప్రాసా᳚వీద్భ॒ద్రం ద్వి॒పదే॒ చతు॑ష్పదే |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | సవితా | జగతీ}</span><p>వి నాక॑మఖ్యత్సవి॒తా వరే॒ణ్యోఽను॑ ప్ర॒యాణ॑ము॒షసో॒ వి రా᳚జతి ||<span class='MantraNumbering'>{2/5}{5.81.2}{5.6.9.2}{4.4.24.2}{435, 4320}</span></td>
+<td class='VargaStyle2'>విశ్వా᳚ రూ॒పాణి॒ ప్రతి॑ ముంచతే క॒విః ప్రాసా᳚వీద్‌ భ॒ద్రం ద్వి॒పదే॒ చతు॑ష్పదే |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | సవితా | జగతీ}</span><p>వి నాక॑మఖ్యత్‌ సవి॒తా వరే॒ణ్యోఽను॑ ప్ర॒యాణ॑ము॒షసో॒ వి రా᳚జతి ||<span class='MantraNumbering'>{2/5}{5.81.2}{5.6.9.2}{4.4.24.2}{435, 4320}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>యస్య॑ ప్ర॒యాణ॒మన్వ॒న్య ఇద్య॒యుర్దే॒వా దే॒వస్య॑ మహి॒మాన॒మోజ॑సా |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | సవితా | జగతీ}</span><p>యః పార్థి॑వాని విమ॒మే స ఏత॑శో॒ రజాం᳚సి దే॒వః స॑వి॒తా మ॑హిత్వ॒నా ||<span class='MantraNumbering'>{3/5}{5.81.3}{5.6.9.3}{4.4.24.3}{435, 4321}</span></td>
+<td class='VargaStyle2'>యస్య॑ ప్ర॒యాణ॒మన్వ॒న్య ఇద్‌ య॒యుర్దే॒వా దే॒వస్య॑ మహి॒మాన॒మోజ॑సా |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | సవితా | జగతీ}</span><p>యః పార్థి॑వాని విమ॒మే స ఏత॑శో॒ రజాం᳚సి దే॒వః స॑వి॒తా మ॑హిత్వ॒నా ||<span class='MantraNumbering'>{3/5}{5.81.3}{5.6.9.3}{4.4.24.3}{435, 4321}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ఉ॒త యా᳚సి సవిత॒స్త్రీణి॑ రోచ॒నోత సూర్య॑స్య ర॒శ్మిభిః॒ సము॑చ్యసి |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | సవితా | జగతీ}</span><p>ఉ॒త రాత్రీ᳚ముభ॒యతః॒ పరీ᳚యస ఉ॒త మి॒త్రో భ॑వసి దేవ॒ ధర్మ॑భిః ||<span class='MantraNumbering'>{4/5}{5.81.4}{5.6.9.4}{4.4.24.4}{435, 4322}</span></td>
@@ -2304,7 +2304,7 @@
 <td class='SuktaLabel'>[82] తత్సవితురితి నవర్చస్య సూక్తస్యాత్రేయఃశ్యావాశ్వః సవితాగాయత్రీ ఆద్యానుష్టుప్ |</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>తత్స॑వి॒తుర్వృ॑ణీమహే వ॒యం దే॒వస్య॒ భోజ॑నం |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | సవితా | అనుష్టుప్}</span><p>శ్రేష్ఠం᳚ సర్వ॒ధాత॑మం॒ తురం॒ భగ॑స్య ధీమహి ||<span class='MantraNumbering'>{1/9}{5.82.1}{5.6.10.1}{4.4.25.1}{436, 4324}</span></td>
+<td class='VargaStyle1'>తత్‌ స॑వి॒తుర్వృ॑ణీమహే వ॒యం దే॒వస్య॒ భోజ॑నం |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | సవితా | అనుష్టుప్}</span><p>శ్రేష్ఠం᳚ సర్వ॒ధాత॑మం॒ తురం॒ భగ॑స్య ధీమహి ||<span class='MantraNumbering'>{1/9}{5.82.1}{5.6.10.1}{4.4.25.1}{436, 4324}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>అస్య॒ హి స్వయ॑శస్తరం సవి॒తుః కచ్చ॒న ప్రి॒యం |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | సవితా | గాయత్రీ}</span><p>న మి॒నంతి॑ స్వ॒రాజ్యం᳚ ||<span class='MantraNumbering'>{2/9}{5.82.2}{5.6.10.2}{4.4.25.2}{436, 4325}</span></td>
@@ -2313,10 +2313,10 @@
 <td class='VargaStyle1'>స హి రత్నా᳚ని దా॒శుషే᳚ సు॒వాతి॑ సవి॒తా భగః॑ |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | సవితా | గాయత్రీ}</span><p>తం భా॒గం చి॒త్రమీ᳚మహే ||<span class='MantraNumbering'>{3/9}{5.82.3}{5.6.10.3}{4.4.25.3}{436, 4326}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>అ॒ద్యా నో᳚ దేవ సవితః ప్ర॒జావ॑త్సావీః॒ సౌభ॑గం |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | సవితా | గాయత్రీ}</span><p>పరా᳚ దు॒ష్ష్వప్న్యం᳚ సువ ||<span class='MantraNumbering'>{4/9}{5.82.4}{5.6.10.4}{4.4.25.4}{436, 4327}</span></td>
+<td class='VargaStyle1'>అ॒ద్యా నో᳚ దేవ సవితః ప్ర॒జావ॑త్‌ సావీః॒ సౌభ॑గం |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | సవితా | గాయత్రీ}</span><p>పరా᳚ దు॒ష్ష్వప్న్యం᳚ సువ ||<span class='MantraNumbering'>{4/9}{5.82.4}{5.6.10.4}{4.4.25.4}{436, 4327}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>విశ్వా᳚ని దేవ సవితర్దురి॒తాని॒ పరా᳚ సువ |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | సవితా | గాయత్రీ}</span><p>యద్భ॒ద్రం తన్న॒ ఆ సు॑వ ||<span class='MantraNumbering'>{5/9}{5.82.5}{5.6.10.5}{4.4.25.5}{436, 4328}</span></td>
+<td class='VargaStyle1'>విశ్వా᳚ని దేవ సవితర్దురి॒తాని॒ పరా᳚ సువ |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | సవితా | గాయత్రీ}</span><p>యద్‌ భ॒ద్రం తన్న॒ ఆ సు॑వ ||<span class='MantraNumbering'>{5/9}{5.82.5}{5.6.10.5}{4.4.25.5}{436, 4328}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>అనా᳚గసో॒, అది॑తయే దే॒వస్య॑ సవి॒తుః స॒వే |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | సవితా | గాయత్రీ}</span><p>విశ్వా᳚ వా॒మాని॑ ధీమహి ||<span class='MantraNumbering'>{6/9}{5.82.6}{5.6.10.6}{4.4.26.1}{436, 4329}</span></td>
@@ -2343,7 +2343,7 @@
 <td class='VargaStyle1'>ర॒థీవ॒ కశ॒యాశ్వాఀ᳚, అభిక్షి॒పన్నా॒విర్దూ॒తాన్‌ కృ॑ణుతే వ॒ర్ష్యా॒3॑(ఆఀ॒) అహ॑ |<span class='RishiDevChandas'>{భౌమోత్రిః | పర్జన్యః | జగతీ}</span><p>దూ॒రాత్‌ సిం॒హస్య॑ స్త॒నథా॒, ఉదీ᳚రతే॒ యత్‌ ప॒ర్జన్యః॑ కృణు॒తే వ॒ర్ష్య1॑(అం॒) నభః॑ ||<span class='MantraNumbering'>{3/10}{5.83.3}{5.6.11.3}{4.4.27.3}{437, 4335}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ప్ర వాతా॒ వాన్‌ తి॑ ప॒తయం᳚తి వి॒ద్యుత॒ ఉదోష॑ధీ॒ర్జిహ॑తే॒ పిన్వ॑తే॒ స్వః॑ |<span class='RishiDevChandas'>{భౌమోత్రిః | పర్జన్యః | జగతీ}</span><p>ఇరా॒ విశ్వ॑స్మై॒ భువ॑నాయ జాయతే॒ యత్‌ ప॒ర్జన్యః॑ పృథి॒వీం రేత॒సావ॑తి ||<span class='MantraNumbering'>{4/10}{5.83.4}{5.6.11.4}{4.4.27.4}{437, 4336}</span></td>
+<td class='VargaStyle1'>ప్ర వాతా॒ వాంతి॑ ప॒తయం᳚తి వి॒ద్యుత॒ ఉదోష॑ధీ॒ర్జిహ॑తే॒ పిన్వ॑తే॒ స్వః॑ |<span class='RishiDevChandas'>{భౌమోత్రిః | పర్జన్యః | జగతీ}</span><p>ఇరా॒ విశ్వ॑స్మై॒ భువ॑నాయ జాయతే॒ యత్‌ ప॒ర్జన్యః॑ పృథి॒వీం రేత॒సావ॑తి ||<span class='MantraNumbering'>{4/10}{5.83.4}{5.6.11.4}{4.4.27.4}{437, 4336}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>యస్య᳚ వ్ర॒తే పృ॑థి॒వీ నన్న॑మీతి॒ యస్య᳚ వ్ర॒తే శ॒ఫవ॒జ్జర్భు॑రీతి |<span class='RishiDevChandas'>{భౌమోత్రిః | పర్జన్యః | త్రిష్టుప్}</span><p>యస్య᳚ వ్ర॒త ఓష॑ధీర్వి॒శ్వరూ᳚పాః॒ స నః॑ పర్జన్య॒ మహి॒ శర్మ॑ యచ్ఛ ||<span class='MantraNumbering'>{5/10}{5.83.5}{5.6.11.5}{4.4.27.5}{437, 4337}</span></td>
@@ -2373,7 +2373,7 @@
 <td class='VargaStyle1'>స్తోమా᳚సస్త్వా విచారిణి॒ ప్రతి॑ ష్టోభంత్య॒క్తుభిః॑ |<span class='RishiDevChandas'>{భౌమోత్రిః | పృథివీ | అనుష్టుప్}</span><p>ప్ర యా వాజం॒ న హేషం᳚తం పే॒రుమస్య॑స్యర్జుని ||<span class='MantraNumbering'>{2/3}{5.84.2}{5.6.12.2}{4.4.29.2}{438, 4344}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>దృ॒ళ్హా చి॒ద్యా వన॒స్పతీ᳚న్‌ క్ష్మ॒యా దర్ధ॒ర్ష్యోజ॑సా |<span class='RishiDevChandas'>{భౌమోత్రిః | పృథివీ | అనుష్టుప్}</span><p>యత్తే᳚, అ॒భ్రస్య॑ వి॒ద్యుతో᳚ ది॒వో వర్షం᳚తి వృ॒ష్టయః॑ ||<span class='MantraNumbering'>{3/3}{5.84.3}{5.6.12.3}{4.4.29.3}{438, 4345}</span></td>
+<td class='VargaStyle1'>దృ॒ళ్హా చి॒ద్‌ యా వన॒స్పతీ᳚న్ క్ష్మ॒యా దర్ధ॒ర్ష్యోజ॑సా |<span class='RishiDevChandas'>{భౌమోత్రిః | పృథివీ | అనుష్టుప్}</span><p>యత్తే᳚, అ॒భ్రస్య॑ వి॒ద్యుతో᳚ ది॒వో వర్షం᳚తి వృ॒ష్టయః॑ ||<span class='MantraNumbering'>{3/3}{5.84.3}{5.6.12.3}{4.4.29.3}{438, 4345}</span></td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[85] ప్రసమ్రాజఇత్యష్టర్చస్య సూక్తస్య భౌమోత్రిర్వరుణత్రిష్టుప్ |</td>
