--- a/Rigveda/SamhitaPatha/Devanagari/Ashtaka/Format1/RVS-Devanagari-F1-A04.html
+++ b/Rigveda/SamhitaPatha/Devanagari/Ashtaka/Format1/RVS-Devanagari-F1-A04.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| श्री॒ गु॒रु॒भ्यो॒ न॒मः॒ हरिः ॐ ||</h1>
 <h2 class='simpHtmlH1'>|| ऋग्वेद संहिता (अष्टक: 04) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{अष्टक,अध्याय,वर्ग,मंत्र}{मंडल,सूक्त,मंत्र}{मंडल,अनुवाक,सूक्त,मंत्र}{ऋक्संहित सूक्त संख्या,ऋक्संहित मन्त्र संख्या}<br> [Last updated on: 22-Jan-2025]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{अष्टक,अध्याय,वर्ग,मंत्र}{मंडल,सूक्त,मंत्र}{मंडल,अनुवाक,सूक्त,मंत्र}{ऋक्संहित सूक्त संख्या,ऋक्संहित मन्त्र संख्या}<br> [Last updated on: 01-Feb-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1965,13 +1965,13 @@
 <td class='VargaStyle1'>अ॒भि ये त्वा᳚ विभावरि॒ स्तोमै᳚र्गृ॒णन्ति॒ वह्न॑यः |<span class='RishiDevChandas'>{आत्रेयः सत्यश्रवाः | उषाः | पङ्क्तिः}</span><p>म॒घैर्म॑घोनि सु॒श्रियो॒ दाम᳚न्वन्तः सुरा॒तयः॒ सुजा᳚ते॒, अश्व॑सूनृते ||<span class='MantraNumbering'>{4/10}{4.4.21.4}{5.79.4}{5.6.7.4}{433, 4306}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>यच्चि॒द्धि ते᳚ ग॒णा, इ॒मे छ॒दय᳚न्ति म॒घत्त॑ये |<span class='RishiDevChandas'>{आत्रेयः सत्यश्रवाः | उषाः | पङ्क्तिः}</span><p>परि॑ चि॒द्वष्ट॑यो दधु॒र्दद॑तो॒ राधो॒, अह्र॑यं॒ सुजा᳚ते॒, अश्व॑सूनृते ||<span class='MantraNumbering'>{5/10}{4.4.21.5}{5.79.5}{5.6.7.5}{433, 4307}</span></td>
+<td class='VargaStyle1'>यच्चि॒द्धि ते᳚ ग॒णा, इ॒मे छ॒दय᳚न्ति म॒घत्त॑ये |<span class='RishiDevChandas'>{आत्रेयः सत्यश्रवाः | उषाः | पङ्क्तिः}</span><p>परि॑ चि॒द्‌ वष्ट॑यो दधु॒र्दद॑तो॒ राधो॒, अह्र॑यं॒ सुजा᳚ते॒, अश्व॑सूनृते ||<span class='MantraNumbering'>{5/10}{4.4.21.5}{5.79.5}{5.6.7.5}{433, 4307}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ऐषु॑ धा वी॒रव॒द्यश॒ उषो᳚ मघोनि सू॒रिषु॑ |<span class='RishiDevChandas'>{आत्रेयः सत्यश्रवाः | उषाः | पङ्क्तिः}</span><p>ये नो॒ राधां॒स्यह्र॑या म॒घवा᳚नो॒, अरा᳚सत॒ सुजा᳚ते॒, अश्व॑सूनृते ||<span class='MantraNumbering'>{6/10}{4.4.22.1}{5.79.6}{5.6.7.6}{433, 4308}</span></td>
+<td class='VargaStyle2'>ऐषु॑ धा वी॒रव॒द्‌ यश॒ उषो᳚ मघोनि सू॒रिषु॑ |<span class='RishiDevChandas'>{आत्रेयः सत्यश्रवाः | उषाः | पङ्क्तिः}</span><p>ये नो॒ राधां॒स्यह्र॑या म॒घवा᳚नो॒, अरा᳚सत॒ सुजा᳚ते॒, अश्व॑सूनृते ||<span class='MantraNumbering'>{6/10}{4.4.22.1}{5.79.6}{5.6.7.6}{433, 4308}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>तेभ्यो᳚ द्यु॒म्नं बृ॒हद्यश॒ उषो᳚ मघो॒न्या व॑ह |<span class='RishiDevChandas'>{आत्रेयः सत्यश्रवाः | उषाः | पङ्क्तिः}</span><p>ये नो॒ राधां॒स्यश्व्या᳚ ग॒व्या भज᳚न्त सू॒रयः॒ सुजा᳚ते॒, अश्व॑सूनृते ||<span class='MantraNumbering'>{7/10}{4.4.22.2}{5.79.7}{5.6.7.7}{433, 4309}</span></td>
+<td class='VargaStyle2'>तेभ्यो᳚ द्यु॒म्नं बृ॒हद्‌ यश॒ उषो᳚ मघो॒न्या व॑ह |<span class='RishiDevChandas'>{आत्रेयः सत्यश्रवाः | उषाः | पङ्क्तिः}</span><p>ये नो॒ राधां॒स्यश्व्या᳚ ग॒व्या भज᳚न्त सू॒रयः॒ सुजा᳚ते॒, अश्व॑सूनृते ||<span class='MantraNumbering'>{7/10}{4.4.22.2}{5.79.7}{5.6.7.7}{433, 4309}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>उ॒त नो॒ गोम॑ती॒रिष॒ आ व॑हा दुहितर्दिवः |<span class='RishiDevChandas'>{आत्रेयः सत्यश्रवाः | उषाः | पङ्क्तिः}</span><p>सा॒कं सूर्य॑स्य र॒श्मिभिः॑ शु॒क्रैः शोच॑द्भिर॒र्चिभिः॒ सुजा᳚ते॒, अश्व॑सूनृते ||<span class='MantraNumbering'>{8/10}{4.4.22.3}{5.79.8}{5.6.7.8}{433, 4310}</span></td>
@@ -1980,7 +1980,7 @@
 <td class='VargaStyle2'>व्यु॑च्छा दुहितर्दिवो॒ मा चि॒रं त॑नुथा॒, अपः॑ |<span class='RishiDevChandas'>{आत्रेयः सत्यश्रवाः | उषाः | पङ्क्तिः}</span><p>नेत्‌ त्वा᳚ स्ते॒नं यथा᳚ रि॒पुं तपा᳚ति॒ सूरो᳚, अ॒र्चिषा॒ सुजा᳚ते॒, अश्व॑सूनृते ||<span class='MantraNumbering'>{9/10}{4.4.22.4}{5.79.9}{5.6.7.9}{433, 4311}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ए॒ताव॒द्वेदु॑ष॒स्त्वं भूयो᳚ वा॒ दातु॑मर्हसि |<span class='RishiDevChandas'>{आत्रेयः सत्यश्रवाः | उषाः | पङ्क्तिः}</span><p>या स्तो॒तृभ्यो᳚ विभावर्यु॒च्छन्ती॒ न प्र॒मीय॑से॒ सुजा᳚ते॒, अश्व॑सूनृते ||<span class='MantraNumbering'>{10/10}{4.4.22.5}{5.79.10}{5.6.7.10}{433, 4312}</span></td>
+<td class='VargaStyle2'>ए॒ताव॒द्‌ वेदु॑ष॒स्त्वं भूयो᳚ वा॒ दातु॑मर्हसि |<span class='RishiDevChandas'>{आत्रेयः सत्यश्रवाः | उषाः | पङ्क्तिः}</span><p>या स्तो॒तृभ्यो᳚ विभावर्यु॒च्छन्ती॒ न प्र॒मीय॑से॒ सुजा᳚ते॒, अश्व॑सूनृते ||<span class='MantraNumbering'>{10/10}{4.4.22.5}{5.79.10}{5.6.7.10}{433, 4312}</span></td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[72] द्युतद्यामानमिति षडृचस्य सूक्तस्यात्रेयःसत्यश्रवाउषास्त्रिष्टुप् |</td>
@@ -1992,7 +1992,7 @@
 <td class='VargaStyle1'>ए॒षा जनं᳚ दर्श॒ता बो॒धय᳚न्ती सु॒गान्‌ प॒थः कृ᳚ण्व॒ती या॒त्यग्रे᳚ |<span class='RishiDevChandas'>{आत्रेयः सत्यश्रवाः | उषाः | त्रिष्टुप्}</span><p>बृ॒ह॒द्र॒था बृ॑ह॒ती वि॑श्वमि॒न्वोषा ज्योति᳚र्यच्छ॒त्यग्रे॒, अह्ना᳚म् ||<span class='MantraNumbering'>{2/6}{4.4.23.2}{5.80.2}{5.6.8.2}{434, 4314}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ए॒षा गोभि॑ररु॒णेभि᳚र्युजा॒नास्रे᳚धन्ती र॒यिमप्रा᳚यु चक्रे |<span class='RishiDevChandas'>{आत्रेयः सत्यश्रवाः | उषाः | त्रिष्टुप्}</span><p>प॒थो रद᳚न्ती सुवि॒ताय॑ दे॒वी पु॑रुष्टु॒ता वि॒श्ववा᳚रा॒ वि भा᳚ति ||<span class='MantraNumbering'>{3/6}{4.4.23.3}{5.80.3}{5.6.8.3}{434, 4315}</span></td>
+<td class='VargaStyle1'>ए॒षा गोभि॑ररु॒णेभि᳚र्युजा॒ना ऽस्रे᳚धन्ती र॒यिमप्रा᳚यु चक्रे |<span class='RishiDevChandas'>{आत्रेयः सत्यश्रवाः | उषाः | त्रिष्टुप्}</span><p>प॒थो रद᳚न्ती सुवि॒ताय॑ दे॒वी पु॑रुष्टु॒ता वि॒श्ववा᳚रा॒ वि भा᳚ति ||<span class='MantraNumbering'>{3/6}{4.4.23.3}{5.80.3}{5.6.8.3}{434, 4315}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ए॒षा व्ये᳚नी भवति द्वि॒बर्हा᳚, आविष्कृण्वा॒ना त॒न्वं᳚ पु॒रस्ता᳚त् |<span class='RishiDevChandas'>{आत्रेयः सत्यश्रवाः | उषाः | त्रिष्टुप्}</span><p>ऋ॒तस्य॒ पन्था॒मन्वे᳚ति सा॒धु प्र॑जान॒तीव॒ न दिशो᳚ मिनाति ||<span class='MantraNumbering'>{4/6}{4.4.23.4}{5.80.4}{5.6.8.4}{434, 4316}</span></td>
@@ -2001,7 +2001,7 @@
 <td class='VargaStyle1'>ए॒षा शु॒भ्रा न त॒न्वो᳚ विदा॒नोर्ध्वेव॑ स्ना॒ती दृ॒शये᳚ नो, अस्थात् |<span class='RishiDevChandas'>{आत्रेयः सत्यश्रवाः | उषाः | त्रिष्टुप्}</span><p>अप॒ द्वेषो॒ बाध॑माना॒ तमां᳚स्यु॒षा दि॒वो दु॑हि॒ता ज्योति॒षागा᳚त् ||<span class='MantraNumbering'>{5/6}{4.4.23.5}{5.80.5}{5.6.8.5}{434, 4317}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ए॒षा प्र॑ती॒ची दु॑हि॒ता दि॒वो नॄन्योषे᳚व भ॒द्रा नि रि॑णीते॒, अप्सः॑ |<span class='RishiDevChandas'>{आत्रेयः सत्यश्रवाः | उषाः | त्रिष्टुप्}</span><p>व्यू॒र्ण्व॒ती दा॒शुषे॒ वार्या᳚णि॒ पुन॒र्ज्योति᳚र्युव॒तिः पू॒र्वथा᳚कः ||<span class='MantraNumbering'>{6/6}{4.4.23.6}{5.80.6}{5.6.8.6}{434, 4318}</span></td>
+<td class='VargaStyle1'>ए॒षा प्र॑ती॒ची दु॑हि॒ता दि॒वो नॄन् योषे᳚व भ॒द्रा नि रि॑णीते॒, अप्सः॑ |<span class='RishiDevChandas'>{आत्रेयः सत्यश्रवाः | उषाः | त्रिष्टुप्}</span><p>व्यू॒र्ण्व॒ती दा॒शुषे॒ वार्या᳚णि॒ पुन॒र्ज्योति᳚र्युव॒तिः पू॒र्वथा᳚कः ||<span class='MantraNumbering'>{6/6}{4.4.23.6}{5.80.6}{5.6.8.6}{434, 4318}</span></td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[73] युंजतेमनइति पंचर्चस्य सूक्तस्यात्रेयः श्यावाश्वः सविताजगती |</td>
@@ -2010,10 +2010,10 @@
 <td class='VargaStyle2'>यु॒ञ्जते॒ मन॑ उ॒त यु᳚ञ्जते॒ धियो॒ विप्रा॒ विप्र॑स्य बृह॒तो वि॑प॒श्चितः॑ |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | सविता | जगती}</span><p>वि होत्रा᳚ दधे वयुना॒विदेक॒ इन्म॒ही दे॒वस्य॑ सवि॒तुः परि॑ष्टुतिः ||<span class='MantraNumbering'>{1/5}{4.4.24.1}{5.81.1}{5.6.9.1}{435, 4319}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>विश्वा᳚ रू॒पाणि॒ प्रति॑ मुञ्चते क॒विः प्रासा᳚वीद्भ॒द्रं द्वि॒पदे॒ चतु॑ष्पदे |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | सविता | जगती}</span><p>वि नाक॑मख्यत्सवि॒ता वरे॒ण्योऽनु॑ प्र॒याण॑मु॒षसो॒ वि रा᳚जति ||<span class='MantraNumbering'>{2/5}{4.4.24.2}{5.81.2}{5.6.9.2}{435, 4320}</span></td>
+<td class='VargaStyle2'>विश्वा᳚ रू॒पाणि॒ प्रति॑ मुञ्चते क॒विः प्रासा᳚वीद्‌ भ॒द्रं द्वि॒पदे॒ चतु॑ष्पदे |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | सविता | जगती}</span><p>वि नाक॑मख्यत्‌ सवि॒ता वरे॒ण्योऽनु॑ प्र॒याण॑मु॒षसो॒ वि रा᳚जति ||<span class='MantraNumbering'>{2/5}{4.4.24.2}{5.81.2}{5.6.9.2}{435, 4320}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>यस्य॑ प्र॒याण॒मन्व॒न्य इद्य॒युर्दे॒वा दे॒वस्य॑ महि॒मान॒मोज॑सा |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | सविता | जगती}</span><p>यः पार्थि॑वानि विम॒मे स एत॑शो॒ रजां᳚सि दे॒वः स॑वि॒ता म॑हित्व॒ना ||<span class='MantraNumbering'>{3/5}{4.4.24.3}{5.81.3}{5.6.9.3}{435, 4321}</span></td>
+<td class='VargaStyle2'>यस्य॑ प्र॒याण॒मन्व॒न्य इद्‌ य॒युर्दे॒वा दे॒वस्य॑ महि॒मान॒मोज॑सा |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | सविता | जगती}</span><p>यः पार्थि॑वानि विम॒मे स एत॑शो॒ रजां᳚सि दे॒वः स॑वि॒ता म॑हित्व॒ना ||<span class='MantraNumbering'>{3/5}{4.4.24.3}{5.81.3}{5.6.9.3}{435, 4321}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>उ॒त या᳚सि सवित॒स्त्रीणि॑ रोच॒नोत सूर्य॑स्य र॒श्मिभिः॒ समु॑च्यसि |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | सविता | जगती}</span><p>उ॒त रात्री᳚मुभ॒यतः॒ परी᳚यस उ॒त मि॒त्रो भ॑वसि देव॒ धर्म॑भिः ||<span class='MantraNumbering'>{4/5}{4.4.24.4}{5.81.4}{5.6.9.4}{435, 4322}</span></td>
@@ -2025,7 +2025,7 @@
 <td class='SuktaLabel'>[74] तत्सवितुरिति नवर्चस्य सूक्तस्यात्रेयःश्यावाश्वः सवितागायत्री आद्यानुष्टुप् |</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>तत्स॑वि॒तुर्वृ॑णीमहे व॒यं दे॒वस्य॒ भोज॑नम् |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | सविता | अनुष्टुप्}</span><p>श्रेष्ठं᳚ सर्व॒धात॑मं॒ तुरं॒ भग॑स्य धीमहि ||<span class='MantraNumbering'>{1/9}{4.4.25.1}{5.82.1}{5.6.10.1}{436, 4324}</span></td>
+<td class='VargaStyle1'>तत्‌ स॑वि॒तुर्वृ॑णीमहे व॒यं दे॒वस्य॒ भोज॑नम् |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | सविता | अनुष्टुप्}</span><p>श्रेष्ठं᳚ सर्व॒धात॑मं॒ तुरं॒ भग॑स्य धीमहि ||<span class='MantraNumbering'>{1/9}{4.4.25.1}{5.82.1}{5.6.10.1}{436, 4324}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>अस्य॒ हि स्वय॑शस्तरं सवि॒तुः कच्च॒न प्रि॒यम् |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | सविता | गायत्री}</span><p>न मि॒नन्ति॑ स्व॒राज्य᳚म् ||<span class='MantraNumbering'>{2/9}{4.4.25.2}{5.82.2}{5.6.10.2}{436, 4325}</span></td>
@@ -2034,10 +2034,10 @@
 <td class='VargaStyle1'>स हि रत्ना᳚नि दा॒शुषे᳚ सु॒वाति॑ सवि॒ता भगः॑ |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | सविता | गायत्री}</span><p>तं भा॒गं चि॒त्रमी᳚महे ||<span class='MantraNumbering'>{3/9}{4.4.25.3}{5.82.3}{5.6.10.3}{436, 4326}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>अ॒द्या नो᳚ देव सवितः प्र॒जाव॑त्सावीः॒ सौभ॑गम् |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | सविता | गायत्री}</span><p>परा᳚ दु॒ष्ष्वप्न्यं᳚ सुव ||<span class='MantraNumbering'>{4/9}{4.4.25.4}{5.82.4}{5.6.10.4}{436, 4327}</span></td>
+<td class='VargaStyle1'>अ॒द्या नो᳚ देव सवितः प्र॒जाव॑त्‌ सावीः॒ सौभ॑गम् |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | सविता | गायत्री}</span><p>परा᳚ दु॒ष्ष्वप्न्यं᳚ सुव ||<span class='MantraNumbering'>{4/9}{4.4.25.4}{5.82.4}{5.6.10.4}{436, 4327}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>विश्वा᳚नि देव सवितर्दुरि॒तानि॒ परा᳚ सुव |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | सविता | गायत्री}</span><p>यद्भ॒द्रं तन्न॒ आ सु॑व ||<span class='MantraNumbering'>{5/9}{4.4.25.5}{5.82.5}{5.6.10.5}{436, 4328}</span></td>
+<td class='VargaStyle1'>विश्वा᳚नि देव सवितर्दुरि॒तानि॒ परा᳚ सुव |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | सविता | गायत्री}</span><p>यद्‌ भ॒द्रं तन्न॒ आ सु॑व ||<span class='MantraNumbering'>{5/9}{4.4.25.5}{5.82.5}{5.6.10.5}{436, 4328}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>अना᳚गसो॒, अदि॑तये दे॒वस्य॑ सवि॒तुः स॒वे |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | सविता | गायत्री}</span><p>विश्वा᳚ वा॒मानि॑ धीमहि ||<span class='MantraNumbering'>{6/9}{4.4.26.1}{5.82.6}{5.6.10.6}{436, 4329}</span></td>
@@ -2064,7 +2064,7 @@
 <td class='VargaStyle1'>र॒थीव॒ कश॒याश्वाँ᳚, अभिक्षि॒पन्ना॒विर्दू॒तान्‌ कृ॑णुते व॒र्ष्या॒३॑(आँ॒) अह॑ |<span class='RishiDevChandas'>{भौमोत्रिः | पर्जन्यः | जगती}</span><p>दू॒रात्‌ सिं॒हस्य॑ स्त॒नथा॒, उदी᳚रते॒ यत्‌ प॒र्जन्यः॑ कृणु॒ते व॒र्ष्य१॑(अं॒) नभः॑ ||<span class='MantraNumbering'>{3/10}{4.4.27.3}{5.83.3}{5.6.11.3}{437, 4335}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>प्र वाता॒ वान्‌ ति॑ प॒तय᳚न्ति वि॒द्युत॒ उदोष॑धी॒र्जिह॑ते॒ पिन्व॑ते॒ स्वः॑ |<span class='RishiDevChandas'>{भौमोत्रिः | पर्जन्यः | जगती}</span><p>इरा॒ विश्व॑स्मै॒ भुव॑नाय जायते॒ यत्‌ प॒र्जन्यः॑ पृथि॒वीं रेत॒साव॑ति ||<span class='MantraNumbering'>{4/10}{4.4.27.4}{5.83.4}{5.6.11.4}{437, 4336}</span></td>
+<td class='VargaStyle1'>प्र वाता॒ वान्ति॑ प॒तय᳚न्ति वि॒द्युत॒ उदोष॑धी॒र्जिह॑ते॒ पिन्व॑ते॒ स्वः॑ |<span class='RishiDevChandas'>{भौमोत्रिः | पर्जन्यः | जगती}</span><p>इरा॒ विश्व॑स्मै॒ भुव॑नाय जायते॒ यत्‌ प॒र्जन्यः॑ पृथि॒वीं रेत॒साव॑ति ||<span class='MantraNumbering'>{4/10}{4.4.27.4}{5.83.4}{5.6.11.4}{437, 4336}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>यस्य᳚ व्र॒ते पृ॑थि॒वी नन्न॑मीति॒ यस्य᳚ व्र॒ते श॒फव॒ज्जर्भु॑रीति |<span class='RishiDevChandas'>{भौमोत्रिः | पर्जन्यः | त्रिष्टुप्}</span><p>यस्य᳚ व्र॒त ओष॑धीर्वि॒श्वरू᳚पाः॒ स नः॑ पर्जन्य॒ महि॒ शर्म॑ यच्छ ||<span class='MantraNumbering'>{5/10}{4.4.27.5}{5.83.5}{5.6.11.5}{437, 4337}</span></td>
@@ -2094,7 +2094,7 @@
 <td class='VargaStyle1'>स्तोमा᳚सस्त्वा विचारिणि॒ प्रति॑ ष्टोभन्त्य॒क्तुभिः॑ |<span class='RishiDevChandas'>{भौमोत्रिः | पृथिवी | अनुष्टुप्}</span><p>प्र या वाजं॒ न हेष᳚न्तं पे॒रुमस्य॑स्यर्जुनि ||<span class='MantraNumbering'>{2/3}{4.4.29.2}{5.84.2}{5.6.12.2}{438, 4344}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>दृ॒ळ्हा चि॒द्या वन॒स्पती᳚न्‌ क्ष्म॒या दर्ध॒र्ष्योज॑सा |<span class='RishiDevChandas'>{भौमोत्रिः | पृथिवी | अनुष्टुप्}</span><p>यत्ते᳚, अ॒भ्रस्य॑ वि॒द्युतो᳚ दि॒वो वर्ष᳚न्ति वृ॒ष्टयः॑ ||<span class='MantraNumbering'>{3/3}{4.4.29.3}{5.84.3}{5.6.12.3}{438, 4345}</span></td>
+<td class='VargaStyle1'>दृ॒ळ्हा चि॒द्‌ या वन॒स्पती᳚न् क्ष्म॒या दर्ध॒र्ष्योज॑सा |<span class='RishiDevChandas'>{भौमोत्रिः | पृथिवी | अनुष्टुप्}</span><p>यत्ते᳚, अ॒भ्रस्य॑ वि॒द्युतो᳚ दि॒वो वर्ष᳚न्ति वृ॒ष्टयः॑ ||<span class='MantraNumbering'>{3/3}{4.4.29.3}{5.84.3}{5.6.12.3}{438, 4345}</span></td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[77] प्रसम्राजइत्यष्टर्चस्य सूक्तस्य भौमोत्रिर्वरुणत्रिष्टुप् |</td>
