--- a/Rigveda/SamhitaPatha/Devanagari/Mandala/Format3/RVS-Devanagari-F3-M05.html
+++ b/Rigveda/SamhitaPatha/Devanagari/Mandala/Format3/RVS-Devanagari-F3-M05.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ऋग्वेद संहिता (मंडल: 05) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 22-Jan-2025]</h6>
+<br> [Last updated on: 01-Feb-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -2325,13 +2325,13 @@
 <td class='VargaStyle1'>अ॒भियेत्वा᳚विभावरि॒स्तोमै᳚र्गृ॒णन्ति॒वह्न॑यः |<p>म॒घैर्म॑घोनिसु॒श्रियो॒दाम᳚न्वन्तःसुरा॒तयः॒सुजा᳚ते॒,अश्व॑सूनृते || 4 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>यच्चि॒द्धिते᳚ग॒णा,इ॒मेछ॒दय᳚न्तिम॒घत्त॑ये |<p>परि॑चि॒द्वष्ट॑योदधु॒र्दद॑तो॒राधो॒,अह्र॑यं॒सुजा᳚ते॒,अश्व॑सूनृते || 5 || </td>
+<td class='VargaStyle1'>यच्चि॒द्धिते᳚ग॒णा,इ॒मेछ॒दय᳚न्तिम॒घत्त॑ये |<p>परि॑चि॒द्‌वष्ट॑योदधु॒र्दद॑तो॒राधो॒,अह्र॑यं॒सुजा᳚ते॒,अश्व॑सूनृते || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ऐषु॑धावी॒रव॒द्यश॒उषो᳚मघोनिसू॒रिषु॑ |<p>येनो॒राधां॒स्यह्र॑याम॒घवा᳚नो॒,अरा᳚सत॒सुजा᳚ते॒,अश्व॑सूनृते || 6 || <span class='MantraNumbering'>वर्ग:22</span></td>
+<td class='VargaStyle2'>ऐषु॑धावी॒रव॒द्‌यश॒उषो᳚मघोनिसू॒रिषु॑ |<p>येनो॒राधां॒स्यह्र॑याम॒घवा᳚नो॒,अरा᳚सत॒सुजा᳚ते॒,अश्व॑सूनृते || 6 || <span class='MantraNumbering'>वर्ग:22</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>तेभ्यो᳚द्यु॒म्नंबृ॒हद्यश॒उषो᳚मघो॒न्याव॑ह |<p>येनो॒राधां॒स्यश्व्या᳚ग॒व्याभज᳚न्तसू॒रयः॒सुजा᳚ते॒,अश्व॑सूनृते || 7 || </td>
+<td class='VargaStyle2'>तेभ्यो᳚द्यु॒म्नंबृ॒हद्‌यश॒उषो᳚मघो॒न्याव॑ह |<p>येनो॒राधां॒स्यश्व्या᳚ग॒व्याभज᳚न्तसू॒रयः॒सुजा᳚ते॒,अश्व॑सूनृते || 7 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>उ॒तनो॒गोम॑ती॒रिष॒आव॑हादुहितर्दिवः |<p>सा॒कंसूर्य॑स्यर॒श्मिभिः॑शु॒क्रैःशोच॑द्भिर॒र्चिभिः॒सुजा᳚ते॒,अश्व॑सूनृते || 8 || </td>
@@ -2340,7 +2340,7 @@
 <td class='VargaStyle2'>व्यु॑च्छादुहितर्दिवो॒माचि॒रंत॑नुथा॒,अपः॑ |<p>नेत्‌त्वा᳚स्ते॒नंयथा᳚रि॒पुंतपा᳚ति॒सूरो᳚,अ॒र्चिषा॒सुजा᳚ते॒,अश्व॑सूनृते || 9 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ए॒ताव॒द्वेदु॑ष॒स्त्वंभूयो᳚वा॒दातु॑मर्हसि |<p>यास्तो॒तृभ्यो᳚विभावर्यु॒च्छन्ती॒नप्र॒मीय॑से॒सुजा᳚ते॒,अश्व॑सूनृते || 10 || </td>
+<td class='VargaStyle2'>ए॒ताव॒द्‌वेदु॑ष॒स्त्वंभूयो᳚वा॒दातु॑मर्हसि |<p>यास्तो॒तृभ्यो᳚विभावर्यु॒च्छन्ती॒नप्र॒मीय॑से॒सुजा᳚ते॒,अश्व॑सूनृते || 10 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[80] द्युतद्यामानमिति षडृचस्य सूक्तस्यात्रेयःसत्यश्रवाउषास्त्रिष्टुप् |<span class='MantraNumbering'>{मंडल:5, सूक्त:80}{अनुवाक:6, सूक्त:8}{अष्टक:4, अध्याय:4}</span>
@@ -2353,7 +2353,7 @@
 <td class='VargaStyle1'>ए॒षाजनं᳚दर्श॒ताबो॒धय᳚न्तीसु॒गान्‌प॒थःकृ᳚ण्व॒तीया॒त्यग्रे᳚ |<p>बृ॒ह॒द्र॒थाबृ॑ह॒तीवि॑श्वमि॒न्वोषाज्योति᳚र्यच्छ॒त्यग्रे॒,अह्ना᳚म् || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ए॒षागोभि॑ररु॒णेभि᳚र्युजा॒नास्रे᳚धन्तीर॒यिमप्रा᳚युचक्रे |<p>प॒थोरद᳚न्तीसुवि॒ताय॑दे॒वीपु॑रुष्टु॒तावि॒श्ववा᳚रा॒विभा᳚ति || 3 || </td>
+<td class='VargaStyle1'>ए॒षागोभि॑ररु॒णेभि᳚र्युजा॒नाऽस्रे᳚धन्तीर॒यिमप्रा᳚युचक्रे |<p>प॒थोरद᳚न्तीसुवि॒ताय॑दे॒वीपु॑रुष्टु॒तावि॒श्ववा᳚रा॒विभा᳚ति || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ए॒षाव्ये᳚नीभवतिद्वि॒बर्हा᳚,आविष्कृण्वा॒नात॒न्वं᳚पु॒रस्ता᳚त् |<p>ऋ॒तस्य॒पन्था॒मन्वे᳚तिसा॒धुप्र॑जान॒तीव॒नदिशो᳚मिनाति || 4 || </td>
@@ -2372,10 +2372,10 @@
 <td class='VargaStyle2'>यु॒ञ्जते॒मन॑उ॒तयु᳚ञ्जते॒धियो॒विप्रा॒विप्र॑स्यबृह॒तोवि॑प॒श्चितः॑ |<p>विहोत्रा᳚दधेवयुना॒विदेक॒इन्म॒हीदे॒वस्य॑सवि॒तुःपरि॑ष्टुतिः || 1 || <span class='MantraNumbering'>वर्ग:24</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>विश्वा᳚रू॒पाणि॒प्रति॑मुञ्चतेक॒विःप्रासा᳚वीद्भ॒द्रंद्वि॒पदे॒चतु॑ष्पदे |<p>विनाक॑मख्यत्सवि॒तावरे॒ण्योऽनु॑प्र॒याण॑मु॒षसो॒विरा᳚जति || 2 || </td>
+<td class='VargaStyle2'>विश्वा᳚रू॒पाणि॒प्रति॑मुञ्चतेक॒विःप्रासा᳚वीद्‌भ॒द्रंद्वि॒पदे॒चतु॑ष्पदे |<p>विनाक॑मख्यत्‌सवि॒तावरे॒ण्योऽनु॑प्र॒याण॑मु॒षसो॒विरा᳚जति || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>यस्य॑प्र॒याण॒मन्व॒न्यइद्य॒युर्दे॒वादे॒वस्य॑महि॒मान॒मोज॑सा |<p>यःपार्थि॑वानिविम॒मेसएत॑शो॒रजां᳚सिदे॒वःस॑वि॒ताम॑हित्व॒ना || 3 || </td>
+<td class='VargaStyle2'>यस्य॑प्र॒याण॒मन्व॒न्यइद्‌य॒युर्दे॒वादे॒वस्य॑महि॒मान॒मोज॑सा |<p>यःपार्थि॑वानिविम॒मेसएत॑शो॒रजां᳚सिदे॒वःस॑वि॒ताम॑हित्व॒ना || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>उ॒तया᳚सिसवित॒स्त्रीणि॑रोच॒नोतसूर्य॑स्यर॒श्मिभिः॒समु॑च्यसि |<p>उ॒तरात्री᳚मुभ॒यतः॒परी᳚यसउ॒तमि॒त्रोभ॑वसिदेव॒धर्म॑भिः || 4 || </td>
@@ -2388,7 +2388,7 @@
 </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>तत्स॑वि॒तुर्वृ॑णीमहेव॒यंदे॒वस्य॒भोज॑नम् | श्रेष्ठं᳚सर्व॒धात॑मं॒तुरं॒भग॑स्यधीमहि || 1 || <span class='MantraNumbering'>वर्ग:25</span></td>
+<td class='VargaStyle1'>तत्‌स॑वि॒तुर्वृ॑णीमहेव॒यंदे॒वस्य॒भोज॑नम् | श्रेष्ठं᳚सर्व॒धात॑मं॒तुरं॒भग॑स्यधीमहि || 1 || <span class='MantraNumbering'>वर्ग:25</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>अस्य॒हिस्वय॑शस्तरंसवि॒तुःकच्च॒नप्रि॒यम् | नमि॒नन्ति॑स्व॒राज्य᳚म् || 2 || </td>
@@ -2397,10 +2397,10 @@
 <td class='VargaStyle1'>सहिरत्ना᳚निदा॒शुषे᳚सु॒वाति॑सवि॒ताभगः॑ | तंभा॒गंचि॒त्रमी᳚महे || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>अ॒द्यानो᳚देवसवितःप्र॒जाव॑त्सावीः॒सौभ॑गम् | परा᳚दु॒ष्ष्वप्न्यं᳚सुव || 4 || </td>
+<td class='VargaStyle1'>अ॒द्यानो᳚देवसवितःप्र॒जाव॑त्‌सावीः॒सौभ॑गम् | परा᳚दु॒ष्ष्वप्न्यं᳚सुव || 4 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>विश्वा᳚निदेवसवितर्दुरि॒तानि॒परा᳚सुव | यद्भ॒द्रंतन्न॒आसु॑व || 5 || </td>
+<td class='VargaStyle1'>विश्वा᳚निदेवसवितर्दुरि॒तानि॒परा᳚सुव | यद्‌भ॒द्रंतन्न॒आसु॑व || 5 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>अना᳚गसो॒,अदि॑तयेदे॒वस्य॑सवि॒तुःस॒वे | विश्वा᳚वा॒मानि॑धीमहि || 6 || <span class='MantraNumbering'>वर्ग:26</span></td>
@@ -2428,7 +2428,7 @@
 <td class='VargaStyle1'>र॒थीव॒कश॒याश्वाँ᳚,अभिक्षि॒पन्ना॒विर्दू॒तान्‌कृ॑णुतेव॒र्ष्या॒३॑(आँ॒)अह॑ |<p>दू॒रात्‌सिं॒हस्य॑स्त॒नथा॒,उदी᳚रते॒यत्‌प॒र्जन्यः॑कृणु॒तेव॒र्ष्य१॑(अं॒)नभः॑ || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>प्रवाता॒वान्‌ति॑प॒तय᳚न्तिवि॒द्युत॒उदोष॑धी॒र्जिह॑ते॒पिन्व॑ते॒स्वः॑ |<p>इरा॒विश्व॑स्मै॒भुव॑नायजायते॒यत्‌प॒र्जन्यः॑पृथि॒वींरेत॒साव॑ति || 4 || </td>
+<td class='VargaStyle1'>प्रवाता॒वान्ति॑प॒तय᳚न्तिवि॒द्युत॒उदोष॑धी॒र्जिह॑ते॒पिन्व॑ते॒स्वः॑ |<p>इरा॒विश्व॑स्मै॒भुव॑नायजायते॒यत्‌प॒र्जन्यः॑पृथि॒वींरेत॒साव॑ति || 4 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>यस्य᳚व्र॒तेपृ॑थि॒वीनन्न॑मीति॒यस्य᳚व्र॒तेश॒फव॒ज्जर्भु॑रीति |<p>यस्य᳚व्र॒तओष॑धीर्वि॒श्वरू᳚पाः॒सनः॑पर्जन्य॒महि॒शर्म॑यच्छ || 5 || </td>
@@ -2459,7 +2459,7 @@
 <td class='VargaStyle1'>स्तोमा᳚सस्त्वाविचारिणि॒प्रति॑ष्टोभन्त्य॒क्तुभिः॑ | प्रयावाजं॒नहेष᳚न्तंपे॒रुमस्य॑स्यर्जुनि || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>दृ॒ळ्हाचि॒द्यावन॒स्पती᳚न्‌क्ष्म॒यादर्ध॒र्ष्योज॑सा | यत्ते᳚,अ॒भ्रस्य॑वि॒द्युतो᳚दि॒वोवर्ष᳚न्तिवृ॒ष्टयः॑ || 3 || </td>
+<td class='VargaStyle1'>दृ॒ळ्हाचि॒द्‌यावन॒स्पती᳚न्क्ष्म॒यादर्ध॒र्ष्योज॑सा | यत्ते᳚,अ॒भ्रस्य॑वि॒द्युतो᳚दि॒वोवर्ष᳚न्तिवृ॒ष्टयः॑ || 3 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[85] प्रसम्राजइत्यष्टर्चस्य सूक्तस्य भौमोत्रिर्वरुणत्रिष्टुप् |<span class='MantraNumbering'>{मंडल:5, सूक्त:85}{अनुवाक:6, सूक्त:13}{अष्टक:4, अध्याय:4}</span>
