--- a/Rigveda/SamhitaPatha/Kannada/Ashtaka/Format3/RVS-Kannada-F3-A01.html
+++ b/Rigveda/SamhitaPatha/Kannada/Ashtaka/Format3/RVS-Kannada-F3-A01.html
@@ -74,7 +74,7 @@
 <td class='VargaStyle2'>ಕ॒ವೀನೋ᳚ಮಿ॒ತ್ರಾವರು॑ಣಾತುವಿಜಾ॒ತಾ,ಉ॑ರು॒ಕ್ಷಯಾ᳚ | ದಕ್ಷಂ᳚ದಧಾತೇ,ಅ॒ಪಸಂ᳚ || 9 || </td>
 </tr>
 <tr>
-<td class='SuktaLabel'>[3] ಅಶ್ವಿನಾಯಜ್ವರೀರಿತಿ ದ್ವಾದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ವೈಶ್ವಾಮಿತ್ರೋಮಧುಚ್ಛಂದಾಃ  ಆದ್ಯತೃಚಸ್ಯಾಶ್ವಿನೌ ದ್ವಿತೀಯತೃಚಸ್ಯೇಂದ್ರಃ ತೃತೀಯತೃಚಸ್ಯವಿಶ್ವೇದೇವಾಃ ಚತುರ್ಥತೃಚಸ್ಯ ಸರಸ್ವತೀ ಗಾಯತ್ರೀ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:1, ಅಧ್ಯಾಯ:1}{ಮಂಡಲ:1, ಸೂಕ್ತ:3}{ಅನುವಾಕ:1, ಸೂಕ್ತ:3}</td>
+<td class='SuktaLabel'>[3] ಅಶ್ವಿನಾಯಜ್ವರೀರಿತಿ ದ್ವಾದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ವೈಶ್ವಾಮಿತ್ರೋಮಧುಚ್ಛಂದಾಃ  ಆದ್ಯತೃಚಸ್ಯಾಶ್ವಿನೌ ದ್ವಿತೀಯತೃಚಸ್ಯೇಂದ್ರಃ ತೃತೀಯತೃಚಸ್ಯವಿಶ್ವೇದೇವಾಃ ಚತುರ್ಥತೃಚಸ್ಯಸರಸ್ವತೀಗಾಯತ್ರೀ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:1, ಅಧ್ಯಾಯ:1}{ಮಂಡಲ:1, ಸೂಕ್ತ:3}{ಅನುವಾಕ:1, ಸೂಕ್ತ:3}</td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಅಶ್ವಿ॑ನಾ॒ಯಜ್ವ॑ರೀ॒ರಿಷೋ॒ದ್ರವ॑ತ್ಪಾಣೀ॒ಶುಭ॑ಸ್ಪತೀ | ಪುರು॑ಭುಜಾಚನ॒ಸ್ಯತಂ᳚ || 1 || <span class='MantraNumbering'>ವರ್ಗ:5</span></td>
@@ -113,7 +113,7 @@
 <td class='VargaStyle2'>ಮ॒ಹೋ,ಅರ್ಣಃ॒ಸರ॑ಸ್ವತೀ॒ಪ್ರಚೇ᳚ತಯತಿಕೇ॒ತುನಾ᳚ | ಧಿಯೋ॒ವಿಶ್ವಾ॒ವಿರಾ᳚ಜತಿ || 12 || </td>
 </tr>
 <tr>
-<td class='SuktaLabel'>[4] ಸುರೂಪಕೃತ್ನುಮಿತಿ ದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ವೈಶ್ವಾಮಿತ್ರೋ ಮಧುಚ್ಛಂದ ಇಂದ್ರೋ ಗಾಯತ್ರೀ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:1, ಅಧ್ಯಾಯ:1}{ಮಂಡಲ:1, ಸೂಕ್ತ:4}{ಅನುವಾಕ:2, ಸೂಕ್ತ:1}</td>
+<td class='SuktaLabel'>[4] ಸುರೂಪಕೃತ್ನುಮಿತಿ ದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ವೈಶ್ವಾಮಿತ್ರೋಮಧುಚ್ಛಂದಾಇಂದ್ರೋಗಾಯತ್ರೀ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:1, ಅಧ್ಯಾಯ:1}{ಮಂಡಲ:1, ಸೂಕ್ತ:4}{ಅನುವಾಕ:2, ಸೂಕ್ತ:1}</td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಸು॒ರೂ॒ಪ॒ಕೃ॒ತ್ನುಮೂ॒ತಯೇ᳚ಸು॒ದುಘಾ᳚ಮಿವಗೋ॒ದುಹೇ᳚ | ಜು॒ಹೂ॒ಮಸಿ॒ದ್ಯವಿ॑ದ್ಯವಿ || 1 || <span class='MantraNumbering'>ವರ್ಗ:7</span></td>
@@ -146,7 +146,7 @@
 <td class='VargaStyle2'>ಯೋರಾ॒ಯೋ॒೩॑(ಓ॒)ವನಿ᳚ರ್ಮ॒ಹಾಂತ್ಸು॑ಪಾ॒ರಃಸು᳚ನ್ವ॒ತಃಸಖಾ᳚ | ತಸ್ಮಾ॒,ಇಂದ್ರಾ᳚ಯಗಾಯತ || 10 || </td>
 </tr>
 <tr>
-<td class='SuktaLabel'>[5] ಆತ್ವೇತೇತಿ ದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ವೈಶ್ವಾಮಿತ್ರೋ ಮಧುಚ್ಛಂದಾ ಇಂದ್ರೋಗಾಯತ್ರೀ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:1, ಅಧ್ಯಾಯ:1}{ಮಂಡಲ:1, ಸೂಕ್ತ:5}{ಅನುವಾಕ:2, ಸೂಕ್ತ:2}</td>
+<td class='SuktaLabel'>[5] ಆತ್ವೇತೇತಿ ದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ವೈಶ್ವಾಮಿತ್ರೋಮಧುಚ್ಛಂದಾಇಂದ್ರೋಗಾಯತ್ರೀ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:1, ಅಧ್ಯಾಯ:1}{ಮಂಡಲ:1, ಸೂಕ್ತ:5}{ಅನುವಾಕ:2, ಸೂಕ್ತ:2}</td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಆತ್ವೇತಾ॒ನಿಷೀ᳚ದ॒ತೇಂದ್ರ॑ಮ॒ಭಿಪ್ರಗಾ᳚ಯತ | ಸಖಾ᳚ಯಃ॒ಸ್ತೋಮ॑ವಾಹಸಃ || 1 || <span class='MantraNumbering'>ವರ್ಗ:9</span></td>
@@ -179,7 +179,7 @@
 <td class='VargaStyle2'>ಮಾನೋ॒ಮರ್‍ತಾ᳚,ಅ॒ಭಿದ್ರು॑ಹನ್‌ತ॒ನೂನಾ᳚ಮಿಂದ್ರಗಿರ್‍ವಣಃ | ಈಶಾ᳚ನೋಯವಯಾವ॒ಧಂ || 10 || </td>
 </tr>
 <tr>
-<td class='SuktaLabel'>[6] ಯುಂಜತೀತಿ ದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ವೈಶ್ವಾಮಿತ್ರೋ ಮಧುಚ್ಛಂದಾಃ ಆದ್ಯಾನಾಂತಿಸೃಣಾಮಿಂದ್ರಃ ತತಃಷಣ್ಣಾಂಮರುತಃ (ವೀಳುಚಿದಿಂದ್ರೇಣೇತಿದ್ವಯೋರಿಂದ್ರಶ್ಚವಾ) ದಶಮ್ಯಾ ಇಂದ್ರೋ ಗಾಯತ್ರೀ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:1, ಅಧ್ಯಾಯ:1}{ಮಂಡಲ:1, ಸೂಕ್ತ:6}{ಅನುವಾಕ:2, ಸೂಕ್ತ:3}</td>
+<td class='SuktaLabel'>[6] ಯುಂಜತೀತಿ ದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ವೈಶ್ವಾಮಿತ್ರೋಮಧುಚ್ಛಂದಾಃ ಆದ್ಯಾನಾಂತಿಸೃಣಾಮಿಂದ್ರಃ ತತಃಷಣ್ಣಾಂಮರುತಃ (ವೀಳುಚಿದಿಂದ್ರೇಣೇತಿದ್ವಯೋರಿಂದ್ರಶ್ಚವಾ) ದಶಮ್ಯಾಇಂದ್ರೋಗಾಯತ್ರೀ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:1, ಅಧ್ಯಾಯ:1}{ಮಂಡಲ:1, ಸೂಕ್ತ:6}{ಅನುವಾಕ:2, ಸೂಕ್ತ:3}</td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಯುಂ॒ಜಂತಿ॑ಬ್ರ॒ಧ್ನಮ॑ರು॒ಷಂಚರಂ᳚ತಂ॒ಪರಿ॑ತ॒ಸ್ಥುಷಃ॑ | ರೋಚಂ᳚ತೇರೋಚ॒ನಾದಿ॒ವಿ || 1 || <span class='MantraNumbering'>ವರ್ಗ:11</span></td>
@@ -212,7 +212,7 @@
 <td class='VargaStyle2'>ಇ॒ತೋವಾ᳚ಸಾ॒ತಿಮೀಮ॑ಹೇದಿ॒ವೋವಾ॒ಪಾರ್‍ಥಿ॑ವಾ॒ದಧಿ॑ | ಇಂದ್ರಂ᳚ಮ॒ಹೋವಾ॒ರಜ॑ಸಃ || 10 || </td>
 </tr>
 <tr>
-<td class='SuktaLabel'>[7] ಇಂದ್ರಮಿದಿತಿ ದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ವೈಶ್ವಾಮಿತ್ರೋ ಮಧುಚ್ಛಂದ ಇಂದ್ರೋ ಗಾಯತ್ರೀ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:1, ಅಧ್ಯಾಯ:1}{ಮಂಡಲ:1, ಸೂಕ್ತ:7}{ಅನುವಾಕ:2, ಸೂಕ್ತ:4}</td>
+<td class='SuktaLabel'>[7] ಇಂದ್ರಮಿದಿತಿ ದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ವೈಶ್ವಾಮಿತ್ರೋಮಧುಚ್ಛಂದಾಇಂದ್ರೋಗಾಯತ್ರೀ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:1, ಅಧ್ಯಾಯ:1}{ಮಂಡಲ:1, ಸೂಕ್ತ:7}{ಅನುವಾಕ:2, ಸೂಕ್ತ:4}</td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಇಂದ್ರ॒ಮಿದ್‌ಗಾ॒ಥಿನೋ᳚ಬೃ॒ಹದಿಂದ್ರ॑ಮ॒ರ್ಕೇಭಿ॑ರ॒ರ್ಕಿಣಃ॑ | ಇಂದ್ರಂ॒ವಾಣೀ᳚ರನೂಷತ || 1 || <span class='MantraNumbering'>ವರ್ಗ:13</span></td>
@@ -245,7 +245,7 @@
 <td class='VargaStyle2'>ಇಂದ್ರಂ᳚ವೋವಿ॒ಶ್ವತ॒ಸ್ಪರಿ॒ಹವಾ᳚ಮಹೇ॒ಜನೇ᳚ಭ್ಯಃ | ಅ॒ಸ್ಮಾಕ॑ಮಸ್ತು॒ಕೇವ॑ಲಃ || 10 || </td>
 </tr>
 <tr>
-<td class='SuktaLabel'>[8] ಏಂದ್ರೇತಿದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ವೈಶ್ವಾಮಿತ್ರೋ ಮಧುಚ್ಛಂದ ಇಂದ್ರೋಗಾಯತ್ರೀ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:1, ಅಧ್ಯಾಯ:1}{ಮಂಡಲ:1, ಸೂಕ್ತ:8}{ಅನುವಾಕ:3, ಸೂಕ್ತ:1}</td>
+<td class='SuktaLabel'>[8] ಏಂದ್ರೇತಿ ದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ವೈಶ್ವಾಮಿತ್ರೋಮಧುಚ್ಛಂದಾಇಂದ್ರೋಗಾಯತ್ರೀ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:1, ಅಧ್ಯಾಯ:1}{ಮಂಡಲ:1, ಸೂಕ್ತ:8}{ಅನುವಾಕ:3, ಸೂಕ್ತ:1}</td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಏಂದ್ರ॑ಸಾನ॒ಸಿಂರ॒ಯಿಂಸ॒ಜಿತ್ವಾ᳚ನಂಸದಾ॒ಸಹಂ᳚ | ವರ್ಷಿ॑ಷ್ಠಮೂ॒ತಯೇ᳚ಭರ || 1 || <span class='MantraNumbering'>ವರ್ಗ:15</span></td>
@@ -278,7 +278,7 @@
 <td class='VargaStyle2'>ಏ॒ವಾಹ್ಯ॑ಸ್ಯ॒ಕಾಮ್ಯಾ॒ಸ್ತೋಮ॑ಉ॒ಕ್ಥಂಚ॒ಶಂಸ್ಯಾ᳚ | ಇಂದ್ರಾ᳚ಯ॒ಸೋಮ॑ಪೀತಯೇ || 10 || </td>
 </tr>
 <tr>
-<td class='SuktaLabel'>[9] ಇಂದ್ರೇಹೀತಿದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ವೈಶ್ವಾಮಿತ್ರೋ ಮಧುಚ್ಛಂದ ಇಂದ್ರೋಗಾಯತ್ರೀ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:1, ಅಧ್ಯಾಯ:1}{ಮಂಡಲ:1, ಸೂಕ್ತ:9}{ಅನುವಾಕ:3, ಸೂಕ್ತ:2}</td>
+<td class='SuktaLabel'>[9] ಇಂದ್ರೇಹೀತಿ ದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ವೈಶ್ವಾಮಿತ್ರೋಮಧುಚ್ಛಂದಾಇಂದ್ರೋಗಾಯತ್ರೀ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:1, ಅಧ್ಯಾಯ:1}{ಮಂಡಲ:1, ಸೂಕ್ತ:9}{ಅನುವಾಕ:3, ಸೂಕ್ತ:2}</td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಇಂದ್ರೇಹಿ॒ಮತ್ಸ್ಯಂಧ॑ಸೋ॒ವಿಶ್ವೇ᳚ಭಿಃಸೋಮ॒ಪರ್‍ವ॑ಭಿಃ | ಮ॒ಹಾಁ,ಅ॑ಭಿ॒ಷ್ಟಿರೋಜ॑ಸಾ || 1 || <span class='MantraNumbering'>ವರ್ಗ:17</span></td>
@@ -311,7 +311,7 @@
 <td class='VargaStyle2'>ಸು॒ತೇಸು॑ತೇ॒ನ್ಯೋ᳚ಕಸೇಬೃ॒ಹದ್‌ಬೃ॑ಹ॒ತಏದ॒ರಿಃ | ಇಂದ್ರಾ᳚ಯಶೂ॒ಷಮ॑ರ್ಚತಿ || 10 || </td>
 </tr>
 <tr>
-<td class='SuktaLabel'>[10] ಗಾಯಂತೀತಿದ್ವಾದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ವೈಶ್ವಾಮಿತ್ರೋ ಮಧುಚ್ಛಂದ ಈಂದ್ರೋನುಷ್ಟುಪ್ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:1, ಅಧ್ಯಾಯ:1}{ಮಂಡಲ:1, ಸೂಕ್ತ:10}{ಅನುವಾಕ:3, ಸೂಕ್ತ:3}</td>
+<td class='SuktaLabel'>[10] ಗಾಯಂತೀತಿ ದ್ವಾದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ವೈಶ್ವಾಮಿತ್ರೋಮಧುಚ್ಛಂದಾಇಂದ್ರೋನುಷ್ಟುಪ್ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:1, ಅಧ್ಯಾಯ:1}{ಮಂಡಲ:1, ಸೂಕ್ತ:10}{ಅನುವಾಕ:3, ಸೂಕ್ತ:3}</td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಗಾಯಂ᳚ತಿತ್ವಾಗಾಯ॒ತ್ರಿಣೋಽರ್ಚಂ᳚ತ್ಯ॒ರ್ಕಮ॒ರ್ಕಿಣಃ॑ | ಬ್ರ॒ಹ್ಮಾಣ॑ಸ್ತ್ವಾಶತಕ್ರತ॒ಉದ್‌ವಂ॒ಶಮಿ॑ವಯೇಮಿರೇ || 1 || <span class='MantraNumbering'>ವರ್ಗ:19</span></td>
@@ -350,7 +350,7 @@
 <td class='VargaStyle2'>ಪರಿ॑ತ್ವಾಗಿರ್‍ವಣೋ॒ಗಿರ॑ಇ॒ಮಾಭ॑ವಂತುವಿ॒ಶ್ವತಃ॑ | ವೃ॒ದ್ಧಾಯು॒ಮನು॒ವೃದ್ಧ॑ಯೋ॒ಜುಷ್ಟಾ᳚ಭವಂತು॒ಜುಷ್ಟ॑ಯಃ || 12 || </td>
 </tr>
 <tr>
-<td class='SuktaLabel'>[11] ಇಂದ್ರಂವಿಶ್ವಾಇತ್ಯಷ್ಟರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಜೇತಾಮಾಧುಚ್ಛಂದಸ ಇಂದ್ರೋನುಷ್ಟುಪ್ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:1, ಅಧ್ಯಾಯ:1}{ಮಂಡಲ:1, ಸೂಕ್ತ:11}{ಅನುವಾಕ:3, ಸೂಕ್ತ:4}</td>
+<td class='SuktaLabel'>[11] ಇಂದ್ರಂವಿಶ್ವಾಇತ್ಯಷ್ಟರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಜೇತಾಮಾಧುಚ್ಛಂದಸ‌ಇಂದ್ರೋನುಷ್ಟುಪ್ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:1, ಅಧ್ಯಾಯ:1}{ಮಂಡಲ:1, ಸೂಕ್ತ:11}{ಅನುವಾಕ:3, ಸೂಕ್ತ:4}</td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಇಂದ್ರಂ॒ವಿಶ್ವಾ᳚,ಅವೀವೃಧಂತ್‌ಸಮು॒ದ್ರವ್ಯ॑ಚಸಂ॒ಗಿರಃ॑ | ರ॒ಥೀತ॑ಮಂರ॒ಥೀನಾಂ॒ವಾಜಾ᳚ನಾಂ॒ಸತ್ಪ॑ತಿಂ॒ಪತಿಂ᳚ || 1 || <span class='MantraNumbering'>ವರ್ಗ:21</span></td>
@@ -377,7 +377,7 @@
 <td class='VargaStyle1'>ಇಂದ್ರ॒ಮೀಶಾ᳚ನ॒ಮೋಜ॑ಸಾ॒ಭಿಸ್ತೋಮಾ᳚,ಅನೂಷತ | ಸ॒ಹಸ್ರಂ॒ಯಸ್ಯ॑ರಾ॒ತಯ॑ಉ॒ತವಾ॒ಸಂತಿ॒ಭೂಯ॑ಸೀಃ || 8 || </td>
 </tr>
 <tr>
-<td class='SuktaLabel'>[12] ಅಗ್ನಿಂದೂತಮಿತಿದ್ವಾದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಕಾಣ್ವೋಮೇಧಾತಿಥಿರಗ್ನಿರ್ಗಾಯತ್ರೀ ಅಗ್ನಿನಾಗ್ನಿರಿತ್ಯಸ್ಯ ನಿರ್ಮಥ್ಯಾಹವನೀಯಾವನೀದೇವತೇ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:1, ಅಧ್ಯಾಯ:1}{ಮಂಡಲ:1, ಸೂಕ್ತ:12}{ಅನುವಾಕ:4, ಸೂಕ್ತ:1}</td>
+<td class='SuktaLabel'>[12] ಅಗ್ನಿಂದೂತಮಿತಿ ದ್ವಾದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಕಾಣ್ವೋಮೇಧಾತಿಥಿರಗ್ನಿರ್ಗಾಯತ್ರೀ ಅಗ್ನಿನಾಗ್ನಿರಿತ್ಯಸ್ಯ ನಿರ್ಮಥ್ಯಾಹವನೀಯಾವನೀದೇವತೇ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:1, ಅಧ್ಯಾಯ:1}{ಮಂಡಲ:1, ಸೂಕ್ತ:12}{ಅನುವಾಕ:4, ಸೂಕ್ತ:1}</td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಅ॒ಗ್ನಿಂದೂ॒ತಂವೃ॑ಣೀಮಹೇ॒ಹೋತಾ᳚ರಂವಿ॒ಶ್ವವೇ᳚ದಸಂ | ಅ॒ಸ್ಯಯ॒ಜ್ಞಸ್ಯ॑ಸು॒ಕ್ರತುಂ᳚ || 1 || <span class='MantraNumbering'>ವರ್ಗ:22</span></td>
@@ -416,7 +416,7 @@
 <td class='VargaStyle1'>ಅಗ್ನೇ᳚ಶು॒ಕ್ರೇಣ॑ಶೋ॒ಚಿಷಾ॒ವಿಶ್ವಾ᳚ಭಿರ್‌ದೇ॒ವಹೂ᳚ತಿಭಿಃ | ಇ॒ಮಂಸ್ತೋಮಂ᳚ಜುಷಸ್ವನಃ || 12 || </td>
 </tr>
 <tr>
-<td class='SuktaLabel'>[13] ಸುಸಮಿದ್ಧ‌ಇತಿ ದ್ವಾದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಕಾಣ್ವೋಮೇಧಾತಿಥಿಃ ಪ್ರಥಮಾಯಾಇಧ್ಮಃ (ಸಮಿದ್ಧೋಗ್ನಿರ್ವಾ) ದ್ವಿತೀಯಾಯಾಸ್ತನೂನಪಾತ್‌ತೃತೀಯಾಯಾನರಾಶಂಸಃ ಚತುರ್ಥ್ಯಾಇಳಃ ಪಂಚಮ್ಯಾಬರ್ಹಿಃ ಷಷ್ಟ್ಯಾ ದೇವ್ಯೋದ್ವಾರಃ ಸಪ್ತಮ್ಯ ಉಪಾಸಾನಕ್ತಾ ಅಷ್ಟಮ್ಯಾದೈವ್ಯೌಹೋತಾರೌ (ಪ್ರಚೇತಸಾವಿತಿಗುಣಃ) ನವಮ್ಯಾಃ ಸರಸ್ವತೀಳಾ ಭಾರತ್ಯಃ ದಶಮ್ಯಾಸ್ತ್ವಷ್ಟಾ ಏಕಾದಶ್ಯಾವನಸ್ಪತಿಃ ದ್ವಾದಶ್ಯಾಃಸ್ವಾಹಾಕೃತಯೋದೇವತಾಃ ಗಾಯತ್ರೀ ಛಂದಃ (ಏತದಾಪ್ರೀಸೂಕ್ತಂ) |<span class='MantraNumbering'>{ಅಷ್ಟಕ:1, ಅಧ್ಯಾಯ:1}{ಮಂಡಲ:1, ಸೂಕ್ತ:13}{ಅನುವಾಕ:4, ಸೂಕ್ತ:2}</td>
+<td class='SuktaLabel'>[13] ಸುಸಮಿದ್ಧ‌ಇತಿ ದ್ವಾದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಕಾಣ್ವೋಮೇಧಾತಿಥಿಃ ಪ್ರಥಮಾಯಾಇಧ್ಮಃ (ಸಮಿದ್ಧೋಗ್ನಿರ್ವಾ) ದ್ವಿತೀಯಾಯಾಸ್ತನೂನಪಾತ್‌ ತೃತೀಯಾಯಾನರಾಶಂಸಃ ಚತುರ್ಥ್ಯಾಇಳಃ ಪಂಚಮ್ಯಾಬರ್ಹಿಃ ಷಷ್ಟ್ಯಾದೇವ್ಯೋದ್ವಾರಃ ಸಪ್ತಮ್ಯಾಉಷಾಸಾನಕ್ತಾ ಅಷ್ಟಮ್ಯಾದೈವ್ಯೌಹೋತಾರೌ (ಪ್ರಚೇತಸಾವಿತಿಗುಣಃ) ನವಮ್ಯಾಃಸರಸ್ವತೀಳಾಭಾರತ್ಯಃ ದಶಮ್ಯಾಸ್ತ್ವಷ್ಟಾ ಏಕಾದಶ್ಯಾವನಸ್ಪತಿಃ ದ್ವಾದಶ್ಯಾಃಸ್ವಾಹಾಕೃತಯೋದೇವತಾಃ ಗಾಯತ್ರೀ ಛಂದಃ (ಏತದಾಪ್ರೀಸೂಕ್ತಂ) |<span class='MantraNumbering'>{ಅಷ್ಟಕ:1, ಅಧ್ಯಾಯ:1}{ಮಂಡಲ:1, ಸೂಕ್ತ:13}{ಅನುವಾಕ:4, ಸೂಕ್ತ:2}</td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಸುಸ॑ಮಿದ್ಧೋನ॒ಆವ॑ಹದೇ॒ವಾಁ,ಅ॑ಗ್ನೇಹ॒ವಿಷ್ಮ॑ತೇ | ಹೋತಃ॑ಪಾವಕ॒ಯಕ್ಷಿ॑ಚ || 1 || <span class='MantraNumbering'>ವರ್ಗ:24</span></td>
@@ -494,7 +494,7 @@
 <td class='VargaStyle1'>ಯು॒ಕ್ಷ್ವಾಹ್ಯರು॑ಷೀ॒ರಥೇ᳚ಹ॒ರಿತೋ᳚ದೇವರೋ॒ಹಿತಃ॑ | ತಾಭಿ॑ರ್ದೇ॒ವಾಁ,ಇ॒ಹಾವ॑ಹ || 12 || </td>
 </tr>
 <tr>
-<td class='SuktaLabel'>[15] ಇಂದ್ರಸೋಮಮಿತಿದ್ವಾದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಕಾಣ್ವೋಮೇಧಾತಿಥಿಃ ಆದ್ಯಾನಾಂಷಣ್ಣಾಂಇಂದ್ರೋಮರುತಸ್ತ್ವಷ್ಟಾಗ್ನಿರಿಂದ್ರೋಮಿತ್ರಾವರುಣೌ ತತಶ್ಚತಸೃಣಾಂ ದ್ರವಿಣೋದಾ ಅಗ್ನಿಃ ಏಕಾದಶ್ಯಾಅಶ್ವಿನೌದ್ವಾದಶ್ಯಾಅಗ್ನಿರ್ಗಾಯತ್ರೀ (ಋತುದೇವತಾಏತಾಃ) |<span class='MantraNumbering'>{ಅಷ್ಟಕ:1, ಅಧ್ಯಾಯ:1}{ಮಂಡಲ:1, ಸೂಕ್ತ:15}{ಅನುವಾಕ:4, ಸೂಕ್ತ:4}</td>
+<td class='SuktaLabel'>[15] ಇಂದ್ರಸೋಮಮಿತಿ ದ್ವಾದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಕಾಣ್ವೋಮೇಧಾತಿಥಿಃ ಆದ್ಯಾನಾಂಷಣ್ಣಾಂಇಂದ್ರೋಮರುತಸ್ತ್ವಷ್ಟಾಗ್ನಿರಿಂದ್ರೋಮಿತ್ರಾವರುಣೌ ತತಶ್ಚತಸೃಣಾಂ ದ್ರವಿಣೋದಾ ಅಗ್ನಿಃ ಏಕಾದಶ್ಯಾಅಶ್ವಿನೌದ್ವಾದಶ್ಯಾಅಗ್ನಿರ್ಗಾಯತ್ರೀ (ಋತುದೇವತಾಏತಾಃ) |<span class='MantraNumbering'>{ಅಷ್ಟಕ:1, ಅಧ್ಯಾಯ:1}{ಮಂಡಲ:1, ಸೂಕ್ತ:15}{ಅನುವಾಕ:4, ಸೂಕ್ತ:4}</td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಇಂದ್ರ॒ಸೋಮಂ॒ಪಿಬ॑ಋ॒ತುನಾಽಽತ್ವಾ᳚ವಿಶಂ॒ತ್ವಿಂದ॑ವಃ | ಮ॒ತ್ಸ॒ರಾಸ॒ಸ್ತದೋ᳚ಕಸಃ || 1 || <span class='MantraNumbering'>ವರ್ಗ:28</span></td>
@@ -563,7 +563,7 @@
 <td class='VargaStyle1'>ಸೇಮಂನಃ॒ಕಾಮ॒ಮಾಪೃ॑ಣ॒ಗೋಭಿ॒ರಶ್ವೈಃ᳚ಶತಕ್ರತೋ | ಸ್ತವಾ᳚ಮತ್ವಾಸ್ವಾ॒ಧ್ಯಃ॑ || 9 || </td>
 </tr>
 <tr>
-<td class='SuktaLabel'>[17] ಇಂದ್ರಾವರುಣಯೋರಿತಿನವರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಕಾಣ್ವೋಮೇಧಾತಿಥಿರಿಂದ್ರಾವರುಣೌಗಾಯತ್ರೀ | ಯುವಾಕುಹಿದ್ವೃಚೌಪಾದನಿಚೂತೌ (ಇಂದ್ರಃ ಸಹಸ್ರೇತಿಹ್ರಸೀಯಸೀ ವಾ}<span class='MantraNumbering'>{ಅಷ್ಟಕ:1, ಅಧ್ಯಾಯ:1}{ಮಂಡಲ:1, ಸೂಕ್ತ:17}{ಅನುವಾಕ:4, ಸೂಕ್ತ:6}</td>
+<td class='SuktaLabel'>[17] ಇಂದ್ರಾವರುಣಯೋರಿತಿ ನವರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಕಾಣ್ವೋಮೇಧಾತಿಥಿರಿಂದ್ರಾವರುಣೌಗಾಯತ್ರೀ | ಯುವಾಕುಹಿದ್ವೃಚೌಪಾದನಿಚೂತೌ (ಇಂದ್ರಃ ಸಹಸ್ರೇತಿಹ್ರಸೀಯಸೀ ವಾ}<span class='MantraNumbering'>{ಅಷ್ಟಕ:1, ಅಧ್ಯಾಯ:1}{ಮಂಡಲ:1, ಸೂಕ್ತ:17}{ಅನುವಾಕ:4, ಸೂಕ್ತ:6}</td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಇಂದ್ರಾ॒ವರು॑ಣಯೋರ॒ಹಂಸ॒ಮ್ರಾಜೋ॒ರವ॒ಆವೃ॑ಣೇ | ತಾನೋ᳚ಮೃಳಾತಈ॒ದೃಶೇ᳚ || 1 || <span class='MantraNumbering'>ವರ್ಗ:32</span></td>
@@ -593,7 +593,7 @@
 <td class='VargaStyle1'>ಪ್ರವಾ᳚ಮಶ್ನೋತುಸುಷ್ಟು॒ತಿರಿಂದ್ರಾ᳚ವರುಣ॒ಯಾಂಹು॒ವೇ | ಯಾಮೃ॒ಧಾಥೇ᳚ಸ॒ಧಸ್ತು॑ತಿಂ || 9 || </td>
 </tr>
 <tr>
-<td class='SuktaLabel'>[18] ಸೋಮಾನಮಿತಿನವರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಕಾಣ್ವೋ ಮೇಧಾತಿಥಿಃ ಆದ್ಯಾನಾಂತಿಸೃಣಾಂಬ್ರಹ್ಮಣಸ್ಪತಿಃ ಚತುರ್ಥ್ಯಾಇಂದ್ರಸೋಮಬ್ರಹ್ಮಣಸ್ಪತಯಃ ಪಂಚಮ್ಯಾಇಂದ್ರ ಸೋಮ ಬ್ರಹ್ಮಣಸ್ಪತಯೋದಕ್ಷಿಣಾಚ ತತಶ್ಚತಸೃಣಾಂಸದಸಸ್ಪತಿಃ (ಅಂತ್ಯಾಯಾನರಾಶಂಸೋವಾ) ಗಾಯತ್ರೀ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:1, ಅಧ್ಯಾಯ:1}{ಮಂಡಲ:1, ಸೂಕ್ತ:18}{ಅನುವಾಕ:5, ಸೂಕ್ತ:1}</td>
+<td class='SuktaLabel'>[18] ಸೋಮಾನಮಿತಿ ನವರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಕಾಣ್ವೋ ಮೇಧಾತಿಥಿಃ ಆದ್ಯಾನಾಂತಿಸೃಣಾಂಬ್ರಹ್ಮಣಸ್ಪತಿಃ ಚತುರ್ಥ್ಯಾಇಂದ್ರಸೋಮಬ್ರಹ್ಮಣಸ್ಪತಯಃ ಪಂಚಮ್ಯಾಇಂದ್ರ ಸೋಮ ಬ್ರಹ್ಮಣಸ್ಪತಯೋದಕ್ಷಿಣಾಚ ತತಶ್ಚತಸೃಣಾಂಸದಸಸ್ಪತಿಃ (ಅಂತ್ಯಾಯಾನರಾಶಂಸೋವಾ) ಗಾಯತ್ರೀ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:1, ಅಧ್ಯಾಯ:1}{ಮಂಡಲ:1, ಸೂಕ್ತ:18}{ಅನುವಾಕ:5, ಸೂಕ್ತ:1}</td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಸೋ॒ಮಾನಂ॒ಸ್ವರ॑ಣಂಕೃಣು॒ಹಿಬ್ರ᳚ಹ್ಮಣಸ್ಪತೇ | ಕ॒ಕ್ಷೀವಂ᳚ತಂ॒ಯಔ᳚ಶಿ॒ಜಃ || 1 || <span class='MantraNumbering'>ವರ್ಗ:34</span></td>
@@ -623,7 +623,7 @@
 <td class='VargaStyle1'>ನರಾ॒ಶಂಸಂ᳚ಸು॒ಧೃಷ್ಟ॑ಮ॒ಮಪ॑ಶ್ಯಂಸ॒ಪ್ರಥ॑ಸ್ತಮಂ | ದಿ॒ವೋನಸದ್ಮ॑ಮಖಸಂ || 9 || </td>
 </tr>
 <tr>
-<td class='SuktaLabel'>[19] ಪ್ರತಿತ್ಯಮಿತಿನವರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಕಾಣ್ವೋಮೇಧಾತಿಥಿರಗ್ನಾಮರುತೋಗಾಯತ್ರೀ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:1, ಅಧ್ಯಾಯ:1}{ಮಂಡಲ:1, ಸೂಕ್ತ:19}{ಅನುವಾಕ:5, ಸೂಕ್ತ:2}</td>
+<td class='SuktaLabel'>[19] ಪ್ರತಿತ್ಯಮಿತಿ ನವರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಕಾಣ್ವೋಮೇಧಾತಿಥಿರಗ್ನಾಮರುತೋಗಾಯತ್ರೀ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:1, ಅಧ್ಯಾಯ:1}{ಮಂಡಲ:1, ಸೂಕ್ತ:19}{ಅನುವಾಕ:5, ಸೂಕ್ತ:2}</td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಪ್ರತಿ॒ತ್ಯಂಚಾರು॑ಮಧ್ವ॒ರಂಗೋ᳚ಪೀ॒ಥಾಯ॒ಪ್ರಹೂ᳚ಯಸೇ | ಮ॒ರುದ್ಭಿ॑ರಗ್ನ॒ಆಗ॑ಹಿ || 1 || <span class='MantraNumbering'>ವರ್ಗ:36</span></td>
@@ -680,7 +680,7 @@
 <td class='VargaStyle2'>ಅಧಾ᳚ರಯಂತ॒ವಹ್ನ॒ಯೋಽಭ॑ಜಂತಸುಕೃ॒ತ್ಯಯಾ᳚ | ಭಾ॒ಗಂದೇ॒ವೇಷು॑ಯ॒ಜ್ಞಿಯಂ᳚ || 8 || </td>
 </tr>
 <tr>
-<td class='SuktaLabel'>[21] ಇಹೇಂದ್ರಾಗ್ನೀಇತಿಷಳರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಕಾಣ್ವೋಮೇಧಾತಿಥಿರಿಂದ್ರಾಗ್ನೀಗಾಯತ್ರೀ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:1, ಅಧ್ಯಾಯ:2}{ಮಂಡಲ:1, ಸೂಕ್ತ:21}{ಅನುವಾಕ:5, ಸೂಕ್ತ:4}</td>
+<td class='SuktaLabel'>[21] ಇಹೇಂದ್ರಾಗ್ನೀಇತಿ ಷಳರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಕಾಣ್ವೋಮೇಧಾತಿಥಿರಿಂದ್ರಾಗ್ನೀಗಾಯತ್ರೀ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:1, ಅಧ್ಯಾಯ:2}{ಮಂಡಲ:1, ಸೂಕ್ತ:21}{ಅನುವಾಕ:5, ಸೂಕ್ತ:4}</td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಇ॒ಹೇಂದ್ರಾ॒ಗ್ನೀ,ಉಪ॑ಹ್ವಯೇ॒ತಯೋ॒ರಿತ್‌ಸ್ತೋಮ॑ಮುಶ್ಮಸಿ | ತಾಸೋಮಂ᳚ಸೋಮ॒ಪಾತ॑ಮಾ || 1 || <span class='MantraNumbering'>ವರ್ಗ:3</span></td>
