--- a/Rigveda/SamhitaPatha/Kannada/Ashtaka/Format4/RVS-Kannada-F4-A04.html
+++ b/Rigveda/SamhitaPatha/Kannada/Ashtaka/Format4/RVS-Kannada-F4-A04.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ಋಗ್ವೇದ ಸಂಹಿತಾ (ಅಷ್ಟಕ: 04) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 22-Jan-2025]</h6>
+<br> [Last updated on: 01-Feb-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1967,13 +1967,13 @@
 <td class='VargaStyle1'>ಅ॒ಭಿಯೇತ್ವಾ᳚ವಿಭಾವರಿ॒ಸ್ತೋಮೈ᳚ರ್ಗೃ॒ಣಂತಿ॒ವಹ್ನ॑ಯಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸತ್ಯಶ್ರವಾಃ | ಉಷಾಃ | ಪಂಕ್ತಿಃ}</span><p>ಮ॒ಘೈರ್ಮ॑ಘೋನಿಸು॒ಶ್ರಿಯೋ॒ದಾಮ᳚ನ್ವಂತಃಸುರಾ॒ತಯಃ॒ಸುಜಾ᳚ತೇ॒,ಅಶ್ವ॑ಸೂನೃತೇ॒(ಸ್ವಾಹಾ᳚) || 4 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಯಚ್ಚಿ॒ದ್ಧಿತೇ᳚ಗ॒ಣಾ,ಇ॒ಮೇಛ॒ದಯಂ᳚ತಿಮ॒ಘತ್ತ॑ಯೇ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸತ್ಯಶ್ರವಾಃ | ಉಷಾಃ | ಪಂಕ್ತಿಃ}</span><p>ಪರಿ॑ಚಿ॒ದ್ವಷ್ಟ॑ಯೋದಧು॒ರ್ದದ॑ತೋ॒ರಾಧೋ॒,ಅಹ್ರ॑ಯಂ॒ಸುಜಾ᳚ತೇ॒,ಅಶ್ವ॑ಸೂನೃತೇ॒(ಸ್ವಾಹಾ᳚) || 5 || </td>
+<td class='VargaStyle1'>ಯಚ್ಚಿ॒ದ್ಧಿತೇ᳚ಗ॒ಣಾ,ಇ॒ಮೇಛ॒ದಯಂ᳚ತಿಮ॒ಘತ್ತ॑ಯೇ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸತ್ಯಶ್ರವಾಃ | ಉಷಾಃ | ಪಂಕ್ತಿಃ}</span><p>ಪರಿ॑ಚಿ॒ದ್‌ವಷ್ಟ॑ಯೋದಧು॒ರ್ದದ॑ತೋ॒ರಾಧೋ॒,ಅಹ್ರ॑ಯಂ॒ಸುಜಾ᳚ತೇ॒,ಅಶ್ವ॑ಸೂನೃತೇ॒(ಸ್ವಾಹಾ᳚) || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಐಷು॑ಧಾವೀ॒ರವ॒ದ್ಯಶ॒ಉಷೋ᳚ಮಘೋನಿಸೂ॒ರಿಷು॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸತ್ಯಶ್ರವಾಃ | ಉಷಾಃ | ಪಂಕ್ತಿಃ}</span><p>ಯೇನೋ॒ರಾಧಾಂ॒ಸ್ಯಹ್ರ॑ಯಾಮ॒ಘವಾ᳚ನೋ॒,ಅರಾ᳚ಸತ॒ಸುಜಾ᳚ತೇ॒,ಅಶ್ವ॑ಸೂನೃತೇ॒(ಸ್ವಾಹಾ᳚) || 6 || <span class='MantraNumbering'>ವರ್ಗ:22</span></td>
+<td class='VargaStyle2'>ಐಷು॑ಧಾವೀ॒ರವ॒ದ್‌ಯಶ॒ಉಷೋ᳚ಮಘೋನಿಸೂ॒ರಿಷು॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸತ್ಯಶ್ರವಾಃ | ಉಷಾಃ | ಪಂಕ್ತಿಃ}</span><p>ಯೇನೋ॒ರಾಧಾಂ॒ಸ್ಯಹ್ರ॑ಯಾಮ॒ಘವಾ᳚ನೋ॒,ಅರಾ᳚ಸತ॒ಸುಜಾ᳚ತೇ॒,ಅಶ್ವ॑ಸೂನೃತೇ॒(ಸ್ವಾಹಾ᳚) || 6 || <span class='MantraNumbering'>ವರ್ಗ:22</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ತೇಭ್ಯೋ᳚ದ್ಯು॒ಮ್ನಂಬೃ॒ಹದ್ಯಶ॒ಉಷೋ᳚ಮಘೋ॒ನ್ಯಾವ॑ಹ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸತ್ಯಶ್ರವಾಃ | ಉಷಾಃ | ಪಂಕ್ತಿಃ}</span><p>ಯೇನೋ॒ರಾಧಾಂ॒ಸ್ಯಶ್ವ್ಯಾ᳚ಗ॒ವ್ಯಾಭಜಂ᳚ತಸೂ॒ರಯಃ॒ಸುಜಾ᳚ತೇ॒,ಅಶ್ವ॑ಸೂನೃತೇ॒(ಸ್ವಾಹಾ᳚) || 7 || </td>
+<td class='VargaStyle2'>ತೇಭ್ಯೋ᳚ದ್ಯು॒ಮ್ನಂಬೃ॒ಹದ್‌ಯಶ॒ಉಷೋ᳚ಮಘೋ॒ನ್ಯಾವ॑ಹ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸತ್ಯಶ್ರವಾಃ | ಉಷಾಃ | ಪಂಕ್ತಿಃ}</span><p>ಯೇನೋ॒ರಾಧಾಂ॒ಸ್ಯಶ್ವ್ಯಾ᳚ಗ॒ವ್ಯಾಭಜಂ᳚ತಸೂ॒ರಯಃ॒ಸುಜಾ᳚ತೇ॒,ಅಶ್ವ॑ಸೂನೃತೇ॒(ಸ್ವಾಹಾ᳚) || 7 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಉ॒ತನೋ॒ಗೋಮ॑ತೀ॒ರಿಷ॒ಆವ॑ಹಾದುಹಿತರ್ದಿವಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸತ್ಯಶ್ರವಾಃ | ಉಷಾಃ | ಪಂಕ್ತಿಃ}</span><p>ಸಾ॒ಕಂಸೂರ್‍ಯ॑ಸ್ಯರ॒ಶ್ಮಿಭಿಃ॑ಶು॒ಕ್ರೈಃಶೋಚ॑ದ್ಭಿರ॒ರ್ಚಿಭಿಃ॒ಸುಜಾ᳚ತೇ॒,ಅಶ್ವ॑ಸೂನೃತೇ॒(ಸ್ವಾಹಾ᳚) || 8 || </td>
@@ -1982,7 +1982,7 @@
 <td class='VargaStyle2'>ವ್ಯು॑ಚ್ಛಾದುಹಿತರ್ದಿವೋ॒ಮಾಚಿ॒ರಂತ॑ನುಥಾ॒,ಅಪಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸತ್ಯಶ್ರವಾಃ | ಉಷಾಃ | ಪಂಕ್ತಿಃ}</span><p>ನೇತ್‌ತ್ವಾ᳚ಸ್ತೇ॒ನಂಯಥಾ᳚ರಿ॒ಪುಂತಪಾ᳚ತಿ॒ಸೂರೋ᳚,ಅ॒ರ್ಚಿಷಾ॒ಸುಜಾ᳚ತೇ॒,ಅಶ್ವ॑ಸೂನೃತೇ॒(ಸ್ವಾಹಾ᳚) || 9 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಏ॒ತಾವ॒ದ್ವೇದು॑ಷ॒ಸ್ತ್ವಂಭೂಯೋ᳚ವಾ॒ದಾತು॑ಮರ್ಹಸಿ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸತ್ಯಶ್ರವಾಃ | ಉಷಾಃ | ಪಂಕ್ತಿಃ}</span><p>ಯಾಸ್ತೋ॒ತೃಭ್ಯೋ᳚ವಿಭಾವರ್‍ಯು॒ಚ್ಛಂತೀ॒ನಪ್ರ॒ಮೀಯ॑ಸೇ॒ಸುಜಾ᳚ತೇ॒,ಅಶ್ವ॑ಸೂನೃತೇ॒(ಸ್ವಾಹಾ᳚) || 10 || </td>
+<td class='VargaStyle2'>ಏ॒ತಾವ॒ದ್‌ವೇದು॑ಷ॒ಸ್ತ್ವಂಭೂಯೋ᳚ವಾ॒ದಾತು॑ಮರ್ಹಸಿ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸತ್ಯಶ್ರವಾಃ | ಉಷಾಃ | ಪಂಕ್ತಿಃ}</span><p>ಯಾಸ್ತೋ॒ತೃಭ್ಯೋ᳚ವಿಭಾವರ್‍ಯು॒ಚ್ಛಂತೀ॒ನಪ್ರ॒ಮೀಯ॑ಸೇ॒ಸುಜಾ᳚ತೇ॒,ಅಶ್ವ॑ಸೂನೃತೇ॒(ಸ್ವಾಹಾ᳚) || 10 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[72] ದ್ಯುತದ್ಯಾಮಾನಮಿತಿ ಷಡೃಚಸ್ಯ ಸೂಕ್ತಸ್ಯಾತ್ರೇಯಃಸತ್ಯಶ್ರವಾಉಷಾಸ್ತ್ರಿಷ್ಟುಪ್ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:4, ಅಧ್ಯಾಯ:4}{ಮಂಡಲ:5, ಸೂಕ್ತ:80}{ಅನುವಾಕ:6, ಸೂಕ್ತ:8}</td>
@@ -1994,7 +1994,7 @@
 <td class='VargaStyle1'>ಏ॒ಷಾಜನಂ᳚ದರ್ಶ॒ತಾಬೋ॒ಧಯಂ᳚ತೀಸು॒ಗಾನ್‌ಪ॒ಥಃಕೃ᳚ಣ್ವ॒ತೀಯಾ॒ತ್ಯಗ್ರೇ᳚ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸತ್ಯಶ್ರವಾಃ | ಉಷಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಬೃ॒ಹ॒ದ್ರ॒ಥಾಬೃ॑ಹ॒ತೀವಿ॑ಶ್ವಮಿ॒ನ್ವೋಷಾಜ್ಯೋತಿ᳚ರ್ಯಚ್ಛ॒ತ್ಯಗ್ರೇ॒,ಅಹ್ನಾ॒‌ಮ್(ಸ್ವಾಹಾ᳚) || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಏ॒ಷಾಗೋಭಿ॑ರರು॒ಣೇಭಿ᳚ರ್ಯುಜಾ॒ನಾಸ್ರೇ᳚ಧಂತೀರ॒ಯಿಮಪ್ರಾ᳚ಯುಚಕ್ರೇ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸತ್ಯಶ್ರವಾಃ | ಉಷಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಪ॒ಥೋರದಂ᳚ತೀಸುವಿ॒ತಾಯ॑ದೇ॒ವೀಪು॑ರುಷ್ಟು॒ತಾವಿ॒ಶ್ವವಾ᳚ರಾ॒ವಿಭಾ᳚ತಿ॒(ಸ್ವಾಹಾ᳚) || 3 || </td>
+<td class='VargaStyle1'>ಏ॒ಷಾಗೋಭಿ॑ರರು॒ಣೇಭಿ᳚ರ್ಯುಜಾ॒ನಾಽಸ್ರೇ᳚ಧಂತೀರ॒ಯಿಮಪ್ರಾ᳚ಯುಚಕ್ರೇ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸತ್ಯಶ್ರವಾಃ | ಉಷಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಪ॒ಥೋರದಂ᳚ತೀಸುವಿ॒ತಾಯ॑ದೇ॒ವೀಪು॑ರುಷ್ಟು॒ತಾವಿ॒ಶ್ವವಾ᳚ರಾ॒ವಿಭಾ᳚ತಿ॒(ಸ್ವಾಹಾ᳚) || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಏ॒ಷಾವ್ಯೇ᳚ನೀಭವತಿದ್ವಿ॒ಬರ್ಹಾ᳚,ಆವಿಷ್ಕೃಣ್ವಾ॒ನಾತ॒ನ್ವಂ᳚ಪು॒ರಸ್ತಾ᳚ತ್ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸತ್ಯಶ್ರವಾಃ | ಉಷಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಋ॒ತಸ್ಯ॒ಪಂಥಾ॒ಮನ್ವೇ᳚ತಿಸಾ॒ಧುಪ್ರ॑ಜಾನ॒ತೀವ॒ನದಿಶೋ᳚ಮಿನಾತಿ॒(ಸ್ವಾಹಾ᳚) || 4 || </td>
@@ -2012,10 +2012,10 @@
 <td class='VargaStyle2'>ಯುಂ॒ಜತೇ॒ಮನ॑ಉ॒ತಯುಂ᳚ಜತೇ॒ಧಿಯೋ॒ವಿಪ್ರಾ॒ವಿಪ್ರ॑ಸ್ಯಬೃಹ॒ತೋವಿ॑ಪ॒ಶ್ಚಿತಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಸವಿತಾ | ಜಗತೀ}</span><p>ವಿಹೋತ್ರಾ᳚ದಧೇವಯುನಾ॒ವಿದೇಕ॒ಇನ್ಮ॒ಹೀದೇ॒ವಸ್ಯ॑ಸವಿ॒ತುಃಪರಿ॑ಷ್ಟುತಿಃ॒(ಸ್ವಾಹಾ᳚) || 1 || <span class='MantraNumbering'>ವರ್ಗ:24</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ವಿಶ್ವಾ᳚ರೂ॒ಪಾಣಿ॒ಪ್ರತಿ॑ಮುಂಚತೇಕ॒ವಿಃಪ್ರಾಸಾ᳚ವೀದ್ಭ॒ದ್ರಂದ್ವಿ॒ಪದೇ॒ಚತು॑ಷ್ಪದೇ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಸವಿತಾ | ಜಗತೀ}</span><p>ವಿನಾಕ॑ಮಖ್ಯತ್ಸವಿ॒ತಾವರೇ॒ಣ್ಯೋಽನು॑ಪ್ರ॒ಯಾಣ॑ಮು॒ಷಸೋ॒ವಿರಾ᳚ಜತಿ॒(ಸ್ವಾಹಾ᳚) || 2 || </td>
+<td class='VargaStyle2'>ವಿಶ್ವಾ᳚ರೂ॒ಪಾಣಿ॒ಪ್ರತಿ॑ಮುಂಚತೇಕ॒ವಿಃಪ್ರಾಸಾ᳚ವೀದ್‌ಭ॒ದ್ರಂದ್ವಿ॒ಪದೇ॒ಚತು॑ಷ್ಪದೇ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಸವಿತಾ | ಜಗತೀ}</span><p>ವಿನಾಕ॑ಮಖ್ಯತ್‌ಸವಿ॒ತಾವರೇ॒ಣ್ಯೋಽನು॑ಪ್ರ॒ಯಾಣ॑ಮು॒ಷಸೋ॒ವಿರಾ᳚ಜತಿ॒(ಸ್ವಾಹಾ᳚) || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಯಸ್ಯ॑ಪ್ರ॒ಯಾಣ॒ಮನ್ವ॒ನ್ಯಇದ್ಯ॒ಯುರ್ದೇ॒ವಾದೇ॒ವಸ್ಯ॑ಮಹಿ॒ಮಾನ॒ಮೋಜ॑ಸಾ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಸವಿತಾ | ಜಗತೀ}</span><p>ಯಃಪಾರ್‍ಥಿ॑ವಾನಿವಿಮ॒ಮೇಸಏತ॑ಶೋ॒ರಜಾಂ᳚ಸಿದೇ॒ವಃಸ॑ವಿ॒ತಾಮ॑ಹಿತ್ವ॒ನಾ(ಸ್ವಾಹಾ᳚) || 3 || </td>
+<td class='VargaStyle2'>ಯಸ್ಯ॑ಪ್ರ॒ಯಾಣ॒ಮನ್ವ॒ನ್ಯಇದ್‌ಯ॒ಯುರ್ದೇ॒ವಾದೇ॒ವಸ್ಯ॑ಮಹಿ॒ಮಾನ॒ಮೋಜ॑ಸಾ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಸವಿತಾ | ಜಗತೀ}</span><p>ಯಃಪಾರ್‍ಥಿ॑ವಾನಿವಿಮ॒ಮೇಸಏತ॑ಶೋ॒ರಜಾಂ᳚ಸಿದೇ॒ವಃಸ॑ವಿ॒ತಾಮ॑ಹಿತ್ವ॒ನಾ(ಸ್ವಾಹಾ᳚) || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಉ॒ತಯಾ᳚ಸಿಸವಿತ॒ಸ್ತ್ರೀಣಿ॑ರೋಚ॒ನೋತಸೂರ್‍ಯ॑ಸ್ಯರ॒ಶ್ಮಿಭಿಃ॒ಸಮು॑ಚ್ಯಸಿ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಸವಿತಾ | ಜಗತೀ}</span><p>ಉ॒ತರಾತ್ರೀ᳚ಮುಭ॒ಯತಃ॒ಪರೀ᳚ಯಸಉ॒ತಮಿ॒ತ್ರೋಭ॑ವಸಿದೇವ॒ಧರ್ಮ॑ಭಿಃ॒(ಸ್ವಾಹಾ᳚) || 4 || </td>
@@ -2027,7 +2027,7 @@
 <td class='SuktaLabel'>[74] ತತ್ಸವಿತುರಿತಿ ನವರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯಾತ್ರೇಯಃಶ್ಯಾವಾಶ್ವಃ ಸವಿತಾಗಾಯತ್ರೀ ಆದ್ಯಾನುಷ್ಟುಪ್ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:4, ಅಧ್ಯಾಯ:4}{ಮಂಡಲ:5, ಸೂಕ್ತ:82}{ಅನುವಾಕ:6, ಸೂಕ್ತ:10}</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ತತ್ಸ॑ವಿ॒ತುರ್‍ವೃ॑ಣೀಮಹೇವ॒ಯಂದೇ॒ವಸ್ಯ॒ಭೋಜ॑ನಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಸವಿತಾ | ಅನುಷ್ಟುಪ್}</span><p>ಶ್ರೇಷ್ಠಂ᳚ಸರ್‍ವ॒ಧಾತ॑ಮಂ॒ತುರಂ॒ಭಗ॑ಸ್ಯಧೀಮಹಿ॒(ಸ್ವಾಹಾ᳚) || 1 || <span class='MantraNumbering'>ವರ್ಗ:25</span></td>
+<td class='VargaStyle1'>ತತ್‌ಸ॑ವಿ॒ತುರ್‍ವೃ॑ಣೀಮಹೇವ॒ಯಂದೇ॒ವಸ್ಯ॒ಭೋಜ॑ನಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಸವಿತಾ | ಅನುಷ್ಟುಪ್}</span><p>ಶ್ರೇಷ್ಠಂ᳚ಸರ್‍ವ॒ಧಾತ॑ಮಂ॒ತುರಂ॒ಭಗ॑ಸ್ಯಧೀಮಹಿ॒(ಸ್ವಾಹಾ᳚) || 1 || <span class='MantraNumbering'>ವರ್ಗ:25</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಅಸ್ಯ॒ಹಿಸ್ವಯ॑ಶಸ್ತರಂಸವಿ॒ತುಃಕಚ್ಚ॒ನಪ್ರಿ॒ಯಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಸವಿತಾ | ಗಾಯತ್ರೀ}</span><p>ನಮಿ॒ನಂತಿ॑ಸ್ವ॒ರಾಜ್ಯ॒‌ಮ್(ಸ್ವಾಹಾ᳚) || 2 || </td>
@@ -2036,10 +2036,10 @@
 <td class='VargaStyle1'>ಸಹಿರತ್ನಾ᳚ನಿದಾ॒ಶುಷೇ᳚ಸು॒ವಾತಿ॑ಸವಿ॒ತಾಭಗಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಸವಿತಾ | ಗಾಯತ್ರೀ}</span><p>ತಂಭಾ॒ಗಂಚಿ॒ತ್ರಮೀ᳚ಮಹೇ॒(ಸ್ವಾಹಾ᳚) || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಅ॒ದ್ಯಾನೋ᳚ದೇವಸವಿತಃಪ್ರ॒ಜಾವ॑ತ್ಸಾವೀಃ॒ಸೌಭ॑ಗಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಸವಿತಾ | ಗಾಯತ್ರೀ}</span><p>ಪರಾ᳚ದು॒ಷ್ಷ್ವಪ್ನ್ಯಂ᳚ಸುವ॒(ಸ್ವಾಹಾ᳚) || 4 || </td>
+<td class='VargaStyle1'>ಅ॒ದ್ಯಾನೋ᳚ದೇವಸವಿತಃಪ್ರ॒ಜಾವ॑ತ್‌ಸಾವೀಃ॒ಸೌಭ॑ಗಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಸವಿತಾ | ಗಾಯತ್ರೀ}</span><p>ಪರಾ᳚ದು॒ಷ್ಷ್ವಪ್ನ್ಯಂ᳚ಸುವ॒(ಸ್ವಾಹಾ᳚) || 4 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ವಿಶ್ವಾ᳚ನಿದೇವಸವಿತರ್ದುರಿ॒ತಾನಿ॒ಪರಾ᳚ಸುವ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಸವಿತಾ | ಗಾಯತ್ರೀ}</span><p>ಯದ್ಭ॒ದ್ರಂತನ್ನ॒ಆಸು॑ವ॒(ಸ್ವಾಹಾ᳚) || 5 || </td>
+<td class='VargaStyle1'>ವಿಶ್ವಾ᳚ನಿದೇವಸವಿತರ್ದುರಿ॒ತಾನಿ॒ಪರಾ᳚ಸುವ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಸವಿತಾ | ಗಾಯತ್ರೀ}</span><p>ಯದ್‌ಭ॒ದ್ರಂತನ್ನ॒ಆಸು॑ವ॒(ಸ್ವಾಹಾ᳚) || 5 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಅನಾ᳚ಗಸೋ॒,ಅದಿ॑ತಯೇದೇ॒ವಸ್ಯ॑ಸವಿ॒ತುಃಸ॒ವೇ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಸವಿತಾ | ಗಾಯತ್ರೀ}</span><p>ವಿಶ್ವಾ᳚ವಾ॒ಮಾನಿ॑ಧೀಮಹಿ॒(ಸ್ವಾಹಾ᳚) || 6 || <span class='MantraNumbering'>ವರ್ಗ:26</span></td>
@@ -2066,7 +2066,7 @@
 <td class='VargaStyle1'>ರ॒ಥೀವ॒ಕಶ॒ಯಾಶ್ವಾಁ᳚,ಅಭಿಕ್ಷಿ॒ಪನ್ನಾ॒ವಿರ್ದೂ॒ತಾನ್‌ಕೃ॑ಣುತೇವ॒ರ್ಷ್ಯಾ॒೩॑(ಆಁ॒)ಅಹ॑ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ಪರ್ಜನ್ಯಃ | ಜಗತೀ}</span><p>ದೂ॒ರಾತ್‌ಸಿಂ॒ಹಸ್ಯ॑ಸ್ತ॒ನಥಾ॒,ಉದೀ᳚ರತೇ॒ಯತ್‌ಪ॒ರ್ಜನ್ಯಃ॑ಕೃಣು॒ತೇವ॒ರ್ಷ್ಯ೧॑(ಅಂ॒)ನಭಃ॒(ಸ್ವಾಹಾ᳚) || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಪ್ರವಾತಾ॒ವಾನ್‌ತಿ॑ಪ॒ತಯಂ᳚ತಿವಿ॒ದ್ಯುತ॒ಉದೋಷ॑ಧೀ॒ರ್ಜಿಹ॑ತೇ॒ಪಿನ್ವ॑ತೇ॒ಸ್ವಃ॑ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ಪರ್ಜನ್ಯಃ | ಜಗತೀ}</span><p>ಇರಾ॒ವಿಶ್ವ॑ಸ್ಮೈ॒ಭುವ॑ನಾಯಜಾಯತೇ॒ಯತ್‌ಪ॒ರ್ಜನ್ಯಃ॑ಪೃಥಿ॒ವೀಂರೇತ॒ಸಾವ॑ತಿ॒(ಸ್ವಾಹಾ᳚) || 4 || </td>
+<td class='VargaStyle1'>ಪ್ರವಾತಾ॒ವಾಂತಿ॑ಪ॒ತಯಂ᳚ತಿವಿ॒ದ್ಯುತ॒ಉದೋಷ॑ಧೀ॒ರ್‌ಜಿಹ॑ತೇ॒ಪಿನ್ವ॑ತೇ॒ಸ್ವಃ॑ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ಪರ್ಜನ್ಯಃ | ಜಗತೀ}</span><p>ಇರಾ॒ವಿಶ್ವ॑ಸ್ಮೈ॒ಭುವ॑ನಾಯಜಾಯತೇ॒ಯತ್‌ಪ॒ರ್ಜನ್ಯಃ॑ಪೃಥಿ॒ವೀಂರೇತ॒ಸಾವ॑ತಿ॒(ಸ್ವಾಹಾ᳚) || 4 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಯಸ್ಯ᳚ವ್ರ॒ತೇಪೃ॑ಥಿ॒ವೀನನ್ನ॑ಮೀತಿ॒ಯಸ್ಯ᳚ವ್ರ॒ತೇಶ॒ಫವ॒ಜ್ಜರ್ಭು॑ರೀತಿ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ಪರ್ಜನ್ಯಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಯಸ್ಯ᳚ವ್ರ॒ತಓಷ॑ಧೀರ್‍ವಿ॒ಶ್ವರೂ᳚ಪಾಃ॒ಸನಃ॑ಪರ್ಜನ್ಯ॒ಮಹಿ॒ಶರ್ಮ॑ಯಚ್ಛ॒(ಸ್ವಾಹಾ᳚) || 5 || </td>
@@ -2084,7 +2084,7 @@
 <td class='VargaStyle2'>ಯತ್‌ಪ॑ರ್ಜನ್ಯ॒ಕನಿ॑ಕ್ರದತ್‌ಸ್ತ॒ನಯ॒ನ್‌ಹಂಸಿ॑ದು॒ಷ್ಕೃತಃ॑ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ಪರ್ಜನ್ಯಃ | ಅನುಷ್ಟುಪ್}</span><p>ಪ್ರತೀ॒ದಂವಿಶ್ವಂ᳚ಮೋದತೇ॒ಯತ್‌ಕಿಂಚ॑ಪೃಥಿ॒ವ್ಯಾಮಧಿ॒(ಸ್ವಾಹಾ᳚) || 9 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಅವ॑ರ್ಷೀರ್‍ವ॒ರ್ಷಮುದು॒ಷೂಗೃ॑ಭಾ॒ಯಾಽಕ॒ರ್ಧನ್ವಾ॒ನ್ಯತ್ಯೇ᳚ತ॒ವಾ,ಉ॑ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ಪರ್ಜನ್ಯಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಅಜೀ᳚ಜನ॒ಓಷ॑ಧೀ॒ರ್ಭೋಜ॑ನಾಯ॒ಕಮು॒ತಪ್ರ॒ಜಾಭ್ಯೋ᳚ಽವಿದೋಮನೀ॒ಷಾಂ(ಸ್ವಾಹಾ᳚) || 10 || </td>
+<td class='VargaStyle2'>ಅವ॑ರ್ಷೀರ್‌ವ॒ರ್ಷಮುದು॒ಷೂಗೃ॑ಭಾ॒ಯಾಽಕ॒ರ್ಧನ್ವಾ॒ನ್ಯತ್ಯೇ᳚ತ॒ವಾ,ಉ॑ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ಪರ್ಜನ್ಯಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಅಜೀ᳚ಜನ॒ಓಷ॑ಧೀ॒ರ್‌ಭೋಜ॑ನಾಯ॒ಕಮು॒ತಪ್ರ॒ಜಾಭ್ಯೋ᳚ಽವಿದೋಮನೀ॒ಷಾಂ(ಸ್ವಾಹಾ᳚) || 10 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[76] ಬಳಿತ್ಥೇತಿ ತೃಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಭೌಮೋತ್ರಿಃಪೃಥಿವ್ಯನುಷ್ಟುಪ್ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:4, ಅಧ್ಯಾಯ:4}{ಮಂಡಲ:5, ಸೂಕ್ತ:84}{ಅನುವಾಕ:6, ಸೂಕ್ತ:12}</td>
@@ -2096,7 +2096,7 @@
 <td class='VargaStyle1'>ಸ್ತೋಮಾ᳚ಸಸ್ತ್ವಾವಿಚಾರಿಣಿ॒ಪ್ರತಿ॑ಷ್ಟೋಭಂತ್ಯ॒ಕ್ತುಭಿಃ॑ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ಪೃಥಿವೀ | ಅನುಷ್ಟುಪ್}</span><p>ಪ್ರಯಾವಾಜಂ॒ನಹೇಷಂ᳚ತಂಪೇ॒ರುಮಸ್ಯ॑ಸ್ಯರ್ಜುನಿ॒(ಸ್ವಾಹಾ᳚) || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ದೃ॒ಳ್ಹಾಚಿ॒ದ್ಯಾವನ॒ಸ್ಪತೀ᳚ನ್‌ಕ್ಷ್ಮ॒ಯಾದರ್ಧ॒ರ್ಷ್ಯೋಜ॑ಸಾ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ಪೃಥಿವೀ | ಅನುಷ್ಟುಪ್}</span><p>ಯತ್ತೇ᳚,ಅ॒ಭ್ರಸ್ಯ॑ವಿ॒ದ್ಯುತೋ᳚ದಿ॒ವೋವರ್ಷಂ᳚ತಿವೃ॒ಷ್ಟಯಃ॒(ಸ್ವಾಹಾ᳚) || 3 || </td>
+<td class='VargaStyle1'>ದೃ॒ಳ್ಹಾಚಿ॒ದ್‌ಯಾವನ॒ಸ್ಪತೀ᳚ನ್ಕ್ಷ್ಮ॒ಯಾದರ್‌ಧ॒ರ್ಷ್ಯೋಜ॑ಸಾ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ಪೃಥಿವೀ | ಅನುಷ್ಟುಪ್}</span><p>ಯತ್ತೇ᳚,ಅ॒ಭ್ರಸ್ಯ॑ವಿ॒ದ್ಯುತೋ᳚ದಿ॒ವೋವರ್ಷಂ᳚ತಿವೃ॒ಷ್ಟಯಃ॒(ಸ್ವಾಹಾ᳚) || 3 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[77] ಪ್ರಸಮ್ರಾಜಇತ್ಯಷ್ಟರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಭೌಮೋತ್ರಿರ್ವರುಣತ್ರಿಷ್ಟುಪ್ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:4, ಅಧ್ಯಾಯ:4}{ಮಂಡಲ:5, ಸೂಕ್ತ:85}{ಅನುವಾಕ:6, ಸೂಕ್ತ:13}</td>
