--- a/Rigveda/SamhitaPatha/Kannada/Ashtaka/Format4/RVS-Kannada-F4-A08.html
+++ b/Rigveda/SamhitaPatha/Kannada/Ashtaka/Format4/RVS-Kannada-F4-A08.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ಋಗ್ವೇದ ಸಂಹಿತಾ (ಅಷ್ಟಕ: 08) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 22-Jan-2025]</h6>
+<br> [Last updated on: 24-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -2414,10 +2414,10 @@
 <td class='SuktaLabel'>[60] ಕದೇತ್ಯೇಕಾದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯ ಕೌತ್ಸೋದುರ್ಮಿತ್ರ ಇಂದ್ರ ಉಷ್ಣಿಕ್ ಆದ್ಯಾಗಾಯತ್ರೀವಾ ದ್ವಿತೀಯಾಸಪ್ತಮ್ಯೌಪಿಪೀಲಿಕಮಧ್ಯೇಅಂತ್ಯಾತ್ರಿಷ್ಟುಪ್ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:8, ಅಧ್ಯಾಯ:5}{ಮಂಡಲ:10, ಸೂಕ್ತ:105}{ಅನುವಾಕ:9, ಸೂಕ್ತ:6}</td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಕ॒ದಾವ॑ಸೋಸ್ತೋ॒ತ್ರಂಹರ್‍ಯ॑ತ॒ಆವ॑ಶ್ಮ॒ಶಾರು॑ಧ॒ದ್ವಾಃ |<span class='RishiDevChandas'>{ಕೌತ್ಸೋ ದುರ್ಮಿತ್ರಃ | ಇಂದ್ರಃ | ಗಾಯತ್ರಿ}</span><p>ದೀ॒ರ್ಘಂಸು॒ತಂವಾ॒ತಾಪ್ಯಾ᳚ಯ॒(ಸ್ವಾಹಾ᳚) || 1 || <span class='MantraNumbering'>ವರ್ಗ:26</span></td>
+<td class='VargaStyle2'>ಕ॒ದಾವ॑ಸೋಸ್ತೋ॒ತ್ರಂಹರ್‍ಯ॑ತ॒ಆವ॑ಶ್ಮ॒ಶಾರು॑ಧ॒ದ್ವಾಃ |<span class='RishiDevChandas'>{ಕೌತ್ಸೋ ದುರ್ಮಿತ್ರಃ | ಇಂದ್ರಃ | ಗಾಯತ್ರೀ}</span><p>ದೀ॒ರ್ಘಂಸು॒ತಂವಾ॒ತಾಪ್ಯಾ᳚ಯ॒(ಸ್ವಾಹಾ᳚) || 1 || <span class='MantraNumbering'>ವರ್ಗ:26</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಹರೀ॒ಯಸ್ಯ॑ಸು॒ಯುಜಾ॒ವಿವ್ರ॑ತಾ॒ವೇರರ್‍ವಂ॒ತಾನು॒ಶೇಪಾ᳚ |<span class='RishiDevChandas'>{ಕೌತ್ಸೋ ದುರ್ಮಿತ್ರಃ | ಇಂದ್ರಃ | ಪಿಪೀಲಿಕಮಧ್ಯ}</span><p>ಉ॒ಭಾರ॒ಜೀನಕೇ॒ಶಿನಾ॒ಪತಿ॒ರ್ದನ್(ಸ್ವಾಹಾ᳚) || 2 || </td>
+<td class='VargaStyle2'>ಹರೀ॒ಯಸ್ಯ॑ಸು॒ಯುಜಾ॒ವಿವ್ರ॑ತಾ॒ವೇರರ್‍ವಂ॒ತಾನು॒ಶೇಪಾ᳚ |<span class='RishiDevChandas'>{ಕೌತ್ಸೋ ದುರ್ಮಿತ್ರಃ | ಇಂದ್ರಃ | ಗಾಯತ್ರೀ}</span><p>ಉ॒ಭಾರ॒ಜೀನಕೇ॒ಶಿನಾ॒ಪತಿ॒ರ್ದನ್(ಸ್ವಾಹಾ᳚) || 2 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಅಪ॒ಯೋರಿಂದ್ರಃ॒ಪಾಪ॑ಜ॒ಆಮರ್‍ತೋ॒ನಶ॑ಶ್ರಮಾ॒ಣೋಬಿ॑ಭೀ॒ವಾನ್ |<span class='RishiDevChandas'>{ಕೌತ್ಸೋ ದುರ್ಮಿತ್ರಃ | ಇಂದ್ರಃ | ಉಷ್ಣಿಕ್}</span><p>ಶು॒ಭೇಯದ್ಯು॑ಯು॒ಜೇತವಿ॑ಷೀವಾ॒‌ನ್(ಸ್ವಾಹಾ᳚) || 3 || </td>
@@ -2432,7 +2432,7 @@
 <td class='VargaStyle1'>ಪ್ರಾಸ್ತೌ᳚ದೃ॒ಷ್ವೌಜಾ᳚ಋ॒ಷ್ವೇಭಿ॑ಸ್ತ॒ತಕ್ಷ॒ಶೂರಃ॒ಶವ॑ಸಾ |<span class='RishiDevChandas'>{ಕೌತ್ಸೋ ದುರ್ಮಿತ್ರಃ | ಇಂದ್ರಃ | ಉಷ್ಣಿಕ್}</span><p>ಋ॒ಭುರ್‍ನಕ್ರತು॑ಭಿರ್ಮಾತ॒ರಿಶ್ವಾ॒(ಸ್ವಾಹಾ᳚) || 6 || <span class='MantraNumbering'>ವರ್ಗ:27</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ವಜ್ರಂ॒ಯಶ್ಚ॒ಕ್ರೇಸು॒ಹನಾ᳚ಯ॒ದಸ್ಯ॑ವೇಹಿರೀಮ॒ಶೋಹಿರೀ᳚ಮಾನ್ |<span class='RishiDevChandas'>{ಕೌತ್ಸೋ ದುರ್ಮಿತ್ರಃ | ಇಂದ್ರಃ | ಪಿಪೀಲಿಕಮಧ್ಯ}</span><p>ಅರು॑ತಹನು॒ರದ್ಭು॑ತಂ॒ನರಜಃ॒(ಸ್ವಾಹಾ᳚) || 7 || </td>
+<td class='VargaStyle1'>ವಜ್ರಂ॒ಯಶ್ಚ॒ಕ್ರೇಸು॒ಹನಾ᳚ಯ॒ದಸ್ಯ॑ವೇಹಿರೀಮ॒ಶೋಹಿರೀ᳚ಮಾನ್ |<span class='RishiDevChandas'>{ಕೌತ್ಸೋ ದುರ್ಮಿತ್ರಃ | ಇಂದ್ರಃ | ಗಾಯತ್ರೀ}</span><p>ಅರು॑ತಹನು॒ರದ್ಭು॑ತಂ॒ನರಜಃ॒(ಸ್ವಾಹಾ᳚) || 7 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಅವ॑ನೋವೃಜಿ॒ನಾಶಿ॑ಶೀಹ್ಯೃ॒ಚಾವ॑ನೇಮಾ॒ನೃಚಃ॑ |<span class='RishiDevChandas'>{ಕೌತ್ಸೋ ದುರ್ಮಿತ್ರಃ | ಇಂದ್ರಃ | ಉಷ್ಣಿಕ್}</span><p>ನಾಬ್ರ᳚ಹ್ಮಾಯ॒ಜ್ಞಋಧ॒ಗ್ಜೋಷ॑ತಿ॒ತ್ವೇ(ಸ್ವಾಹಾ᳚) || 8 || </td>
