--- a/Rigveda/SamhitaPatha/Malayalam/Ashtaka/Format1/RVS-Malayalam-F1-A04.html
+++ b/Rigveda/SamhitaPatha/Malayalam/Ashtaka/Format1/RVS-Malayalam-F1-A04.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ശ്രീ॒ ഗു॒രു॒ഭ്യോ॒ ന॒മഃ॒ ഹരിഃ ഓം ||</h1>
 <h2 class='simpHtmlH1'>|| ഋഗ്വേദ സംഹിതാ (അഷ്ടക: 04) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{അഷ്ടക,അധ്യായ,വർഗ,മന്ത്ര}{മണ്ഡല,സൂക്ത,മന്ത്ര}{മണ്ഡല,അനുവാക,സൂക്ത,മന്ത്ര}{ഋക്സംഹിത സൂക്ത സംഖ്യാ,ഋക്സംഹിത മന്ത്ര സംഖ്യാ}<br> [Last updated on: 22-Jan-2025]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{അഷ്ടക,അധ്യായ,വർഗ,മന്ത്ര}{മണ്ഡല,സൂക്ത,മന്ത്ര}{മണ്ഡല,അനുവാക,സൂക്ത,മന്ത്ര}{ഋക്സംഹിത സൂക്ത സംഖ്യാ,ഋക്സംഹിത മന്ത്ര സംഖ്യാ}<br> [Last updated on: 01-Feb-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1965,13 +1965,13 @@
 <td class='VargaStyle1'>അ॒ഭി യേ ത്വാ᳚ വിഭാവരി॒ സ്തോമൈ᳚ർഗൃ॒ണന്തി॒ വഹ്ന॑യഃ |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | പങ്ക്തിഃ}</span><p>മ॒ഘൈർമ॑ഘോനി സു॒ശ്രിയോ॒ ദാമ᳚ന്വന്തഃ സുരാ॒തയഃ॒ സുജാ᳚തേ॒, അശ്വ॑സൂനൃതേ ||<span class='MantraNumbering'>{4/10}{4.4.21.4}{5.79.4}{5.6.7.4}{433, 4306}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>യച്ചി॒ദ്ധി തേ᳚ ഗ॒ണാ, ഇ॒മേ ഛ॒ദയ᳚ന്തി മ॒ഘത്ത॑യേ |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | പങ്ക്തിഃ}</span><p>പരി॑ ചി॒ദ്വഷ്ട॑യോ ദധു॒ർദദ॑തോ॒ രാധോ॒, അഹ്ര॑യം॒ സുജാ᳚തേ॒, അശ്വ॑സൂനൃതേ ||<span class='MantraNumbering'>{5/10}{4.4.21.5}{5.79.5}{5.6.7.5}{433, 4307}</span></td>
+<td class='VargaStyle1'>യച്ചി॒ദ്ധി തേ᳚ ഗ॒ണാ, ഇ॒മേ ഛ॒ദയ᳚ന്തി മ॒ഘത്ത॑യേ |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | പങ്ക്തിഃ}</span><p>പരി॑ ചി॒ദ്‌ വഷ്ട॑യോ ദധു॒ർദദ॑തോ॒ രാധോ॒, അഹ്ര॑യം॒ സുജാ᳚തേ॒, അശ്വ॑സൂനൃതേ ||<span class='MantraNumbering'>{5/10}{4.4.21.5}{5.79.5}{5.6.7.5}{433, 4307}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ഐഷു॑ ധാ വീ॒രവ॒ദ്യശ॒ ഉഷോ᳚ മഘോനി സൂ॒രിഷു॑ |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | പങ്ക്തിഃ}</span><p>യേ നോ॒ രാധാം॒സ്യഹ്ര॑യാ മ॒ഘവാ᳚നോ॒, അരാ᳚സത॒ സുജാ᳚തേ॒, അശ്വ॑സൂനൃതേ ||<span class='MantraNumbering'>{6/10}{4.4.22.1}{5.79.6}{5.6.7.6}{433, 4308}</span></td>
+<td class='VargaStyle2'>ഐഷു॑ ധാ വീ॒രവ॒ദ്‌ യശ॒ ഉഷോ᳚ മഘോനി സൂ॒രിഷു॑ |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | പങ്ക്തിഃ}</span><p>യേ നോ॒ രാധാം॒സ്യഹ്ര॑യാ മ॒ഘവാ᳚നോ॒, അരാ᳚സത॒ സുജാ᳚തേ॒, അശ്വ॑സൂനൃതേ ||<span class='MantraNumbering'>{6/10}{4.4.22.1}{5.79.6}{5.6.7.6}{433, 4308}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>തേഭ്യോ᳚ ദ്യു॒മ്നം ബൃ॒ഹദ്യശ॒ ഉഷോ᳚ മഘോ॒ന്യാ വ॑ഹ |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | പങ്ക്തിഃ}</span><p>യേ നോ॒ രാധാം॒സ്യശ്വ്യാ᳚ ഗ॒വ്യാ ഭജ᳚ന്ത സൂ॒രയഃ॒ സുജാ᳚തേ॒, അശ്വ॑സൂനൃതേ ||<span class='MantraNumbering'>{7/10}{4.4.22.2}{5.79.7}{5.6.7.7}{433, 4309}</span></td>
+<td class='VargaStyle2'>തേഭ്യോ᳚ ദ്യു॒മ്നം ബൃ॒ഹദ്‌ യശ॒ ഉഷോ᳚ മഘോ॒ന്യാ വ॑ഹ |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | പങ്ക്തിഃ}</span><p>യേ നോ॒ രാധാം॒സ്യശ്വ്യാ᳚ ഗ॒വ്യാ ഭജ᳚ന്ത സൂ॒രയഃ॒ സുജാ᳚തേ॒, അശ്വ॑സൂനൃതേ ||<span class='MantraNumbering'>{7/10}{4.4.22.2}{5.79.7}{5.6.7.7}{433, 4309}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ഉ॒ത നോ॒ ഗോമ॑തീ॒രിഷ॒ ആ വ॑ഹാ ദുഹിതർദിവഃ |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | പങ്ക്തിഃ}</span><p>സാ॒കം സൂര്യ॑സ്യ ര॒ശ്മിഭിഃ॑ ശു॒ക്രൈഃ ശോച॑ദ്ഭിര॒ർചിഭിഃ॒ സുജാ᳚തേ॒, അശ്വ॑സൂനൃതേ ||<span class='MantraNumbering'>{8/10}{4.4.22.3}{5.79.8}{5.6.7.8}{433, 4310}</span></td>
@@ -1980,7 +1980,7 @@
 <td class='VargaStyle2'>വ്യു॑ച്ഛാ ദുഹിതർദിവോ॒ മാ ചി॒രം ത॑നുഥാ॒, അപഃ॑ |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | പങ്ക്തിഃ}</span><p>നേത്‌ ത്വാ᳚ സ്തേ॒നം യഥാ᳚ രി॒പും തപാ᳚തി॒ സൂരോ᳚, അ॒ർചിഷാ॒ സുജാ᳚തേ॒, അശ്വ॑സൂനൃതേ ||<span class='MantraNumbering'>{9/10}{4.4.22.4}{5.79.9}{5.6.7.9}{433, 4311}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ഏ॒താവ॒ദ്വേദു॑ഷ॒സ്ത്വം ഭൂയോ᳚ വാ॒ ദാതു॑മർഹസി |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | പങ്ക്തിഃ}</span><p>യാ സ്തോ॒തൃഭ്യോ᳚ വിഭാവര്യു॒ച്ഛന്തീ॒ ന പ്ര॒മീയ॑സേ॒ സുജാ᳚തേ॒, അശ്വ॑സൂനൃതേ ||<span class='MantraNumbering'>{10/10}{4.4.22.5}{5.79.10}{5.6.7.10}{433, 4312}</span></td>
+<td class='VargaStyle2'>ഏ॒താവ॒ദ്‌ വേദു॑ഷ॒സ്ത്വം ഭൂയോ᳚ വാ॒ ദാതു॑മർഹസി |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | പങ്ക്തിഃ}</span><p>യാ സ്തോ॒തൃഭ്യോ᳚ വിഭാവര്യു॒ച്ഛന്തീ॒ ന പ്ര॒മീയ॑സേ॒ സുജാ᳚തേ॒, അശ്വ॑സൂനൃതേ ||<span class='MantraNumbering'>{10/10}{4.4.22.5}{5.79.10}{5.6.7.10}{433, 4312}</span></td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[72] ദ്യുതദ്യാമാനമിതി ഷഡൃചസ്യ സൂക്തസ്യാത്രേയഃസത്യശ്രവാഉഷാസ്ത്രിഷ്ടുപ് |</td>
@@ -1992,7 +1992,7 @@
 <td class='VargaStyle1'>ഏ॒ഷാ ജനം᳚ ദർശ॒താ ബോ॒ധയ᳚ന്തീ സു॒ഗാൻ‌ പ॒ഥഃ കൃ᳚ണ്വ॒തീ യാ॒ത്യഗ്രേ᳚ |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | ത്രിഷ്ടുപ്}</span><p>ബൃ॒ഹ॒ദ്ര॒ഥാ ബൃ॑ഹ॒തീ വി॑ശ്വമി॒ന്വോഷാ ജ്യോതി᳚ര്യച്ഛ॒ത്യഗ്രേ॒, അഹ്നാം᳚ ||<span class='MantraNumbering'>{2/6}{4.4.23.2}{5.80.2}{5.6.8.2}{434, 4314}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ഏ॒ഷാ ഗോഭി॑രരു॒ണേഭി᳚ര്യുജാ॒നാസ്രേ᳚ധന്തീ ര॒യിമപ്രാ᳚യു ചക്രേ |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | ത്രിഷ്ടുപ്}</span><p>പ॒ഥോ രദ᳚ന്തീ സുവി॒തായ॑ ദേ॒വീ പു॑രുഷ്ടു॒താ വി॒ശ്വവാ᳚രാ॒ വി ഭാ᳚തി ||<span class='MantraNumbering'>{3/6}{4.4.23.3}{5.80.3}{5.6.8.3}{434, 4315}</span></td>
+<td class='VargaStyle1'>ഏ॒ഷാ ഗോഭി॑രരു॒ണേഭി᳚ര്യുജാ॒നാ ഽസ്രേ᳚ധന്തീ ര॒യിമപ്രാ᳚യു ചക്രേ |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | ത്രിഷ്ടുപ്}</span><p>പ॒ഥോ രദ᳚ന്തീ സുവി॒തായ॑ ദേ॒വീ പു॑രുഷ്ടു॒താ വി॒ശ്വവാ᳚രാ॒ വി ഭാ᳚തി ||<span class='MantraNumbering'>{3/6}{4.4.23.3}{5.80.3}{5.6.8.3}{434, 4315}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ഏ॒ഷാ വ്യേ᳚നീ ഭവതി ദ്വി॒ബർഹാ᳚, ആവിഷ്കൃണ്വാ॒നാ ത॒ന്വം᳚ പു॒രസ്താ᳚ത് |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | ത്രിഷ്ടുപ്}</span><p>ഋ॒തസ്യ॒ പന്ഥാ॒മന്വേ᳚തി സാ॒ധു പ്ര॑ജാന॒തീവ॒ ന ദിശോ᳚ മിനാതി ||<span class='MantraNumbering'>{4/6}{4.4.23.4}{5.80.4}{5.6.8.4}{434, 4316}</span></td>
@@ -2001,7 +2001,7 @@
 <td class='VargaStyle1'>ഏ॒ഷാ ശു॒ഭ്രാ ന ത॒ന്വോ᳚ വിദാ॒നോർധ്വേവ॑ സ്നാ॒തീ ദൃ॒ശയേ᳚ നോ, അസ്ഥാത് |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | ത്രിഷ്ടുപ്}</span><p>അപ॒ ദ്വേഷോ॒ ബാധ॑മാനാ॒ തമാം᳚സ്യു॒ഷാ ദി॒വോ ദു॑ഹി॒താ ജ്യോതി॒ഷാഗാ᳚ത് ||<span class='MantraNumbering'>{5/6}{4.4.23.5}{5.80.5}{5.6.8.5}{434, 4317}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ഏ॒ഷാ പ്ര॑തീ॒ചീ ദു॑ഹി॒താ ദി॒വോ നൄന്യോഷേ᳚വ ഭ॒ദ്രാ നി രി॑ണീതേ॒, അപ്സഃ॑ |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | ത്രിഷ്ടുപ്}</span><p>വ്യൂ॒ർണ്വ॒തീ ദാ॒ശുഷേ॒ വാര്യാ᳚ണി॒ പുന॒ർജ്യോതി᳚ര്യുവ॒തിഃ പൂ॒ർവഥാ᳚കഃ ||<span class='MantraNumbering'>{6/6}{4.4.23.6}{5.80.6}{5.6.8.6}{434, 4318}</span></td>
+<td class='VargaStyle1'>ഏ॒ഷാ പ്ര॑തീ॒ചീ ദു॑ഹി॒താ ദി॒വോ നൄൻ യോഷേ᳚വ ഭ॒ദ്രാ നി രി॑ണീതേ॒, അപ്സഃ॑ |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | ത്രിഷ്ടുപ്}</span><p>വ്യൂ॒ർണ്വ॒തീ ദാ॒ശുഷേ॒ വാര്യാ᳚ണി॒ പുന॒ർജ്യോതി᳚ര്യുവ॒തിഃ പൂ॒ർവഥാ᳚കഃ ||<span class='MantraNumbering'>{6/6}{4.4.23.6}{5.80.6}{5.6.8.6}{434, 4318}</span></td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[73] യുഞ്ജതേമനഇതി പഞ്ചർചസ്യ സൂക്തസ്യാത്രേയഃ ശ്യാവാശ്വഃ സവിതാജഗതീ |</td>
@@ -2010,10 +2010,10 @@
 <td class='VargaStyle2'>യു॒ഞ്ജതേ॒ മന॑ ഉ॒ത യു᳚ഞ്ജതേ॒ ധിയോ॒ വിപ്രാ॒ വിപ്ര॑സ്യ ബൃഹ॒തോ വി॑പ॒ശ്ചിതഃ॑ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | സവിതാ | ജഗതീ}</span><p>വി ഹോത്രാ᳚ ദധേ വയുനാ॒വിദേക॒ ഇന്മ॒ഹീ ദേ॒വസ്യ॑ സവി॒തുഃ പരി॑ഷ്ടുതിഃ ||<span class='MantraNumbering'>{1/5}{4.4.24.1}{5.81.1}{5.6.9.1}{435, 4319}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>വിശ്വാ᳚ രൂ॒പാണി॒ പ്രതി॑ മുഞ്ചതേ ക॒വിഃ പ്രാസാ᳚വീദ്ഭ॒ദ്രം ദ്വി॒പദേ॒ ചതു॑ഷ്പദേ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | സവിതാ | ജഗതീ}</span><p>വി നാക॑മഖ്യത്സവി॒താ വരേ॒ണ്യോഽനു॑ പ്ര॒യാണ॑മു॒ഷസോ॒ വി രാ᳚ജതി ||<span class='MantraNumbering'>{2/5}{4.4.24.2}{5.81.2}{5.6.9.2}{435, 4320}</span></td>
+<td class='VargaStyle2'>വിശ്വാ᳚ രൂ॒പാണി॒ പ്രതി॑ മുഞ്ചതേ ക॒വിഃ പ്രാസാ᳚വീദ്‌ ഭ॒ദ്രം ദ്വി॒പദേ॒ ചതു॑ഷ്പദേ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | സവിതാ | ജഗതീ}</span><p>വി നാക॑മഖ്യത്‌ സവി॒താ വരേ॒ണ്യോഽനു॑ പ്ര॒യാണ॑മു॒ഷസോ॒ വി രാ᳚ജതി ||<span class='MantraNumbering'>{2/5}{4.4.24.2}{5.81.2}{5.6.9.2}{435, 4320}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>യസ്യ॑ പ്ര॒യാണ॒മന്വ॒ന്യ ഇദ്യ॒യുർദേ॒വാ ദേ॒വസ്യ॑ മഹി॒മാന॒മോജ॑സാ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | സവിതാ | ജഗതീ}</span><p>യഃ പാർഥി॑വാനി വിമ॒മേ സ ഏത॑ശോ॒ രജാം᳚സി ദേ॒വഃ സ॑വി॒താ മ॑ഹിത്വ॒നാ ||<span class='MantraNumbering'>{3/5}{4.4.24.3}{5.81.3}{5.6.9.3}{435, 4321}</span></td>
+<td class='VargaStyle2'>യസ്യ॑ പ്ര॒യാണ॒മന്വ॒ന്യ ഇദ്‌ യ॒യുർദേ॒വാ ദേ॒വസ്യ॑ മഹി॒മാന॒മോജ॑സാ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | സവിതാ | ജഗതീ}</span><p>യഃ പാർഥി॑വാനി വിമ॒മേ സ ഏത॑ശോ॒ രജാം᳚സി ദേ॒വഃ സ॑വി॒താ മ॑ഹിത്വ॒നാ ||<span class='MantraNumbering'>{3/5}{4.4.24.3}{5.81.3}{5.6.9.3}{435, 4321}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ഉ॒ത യാ᳚സി സവിത॒സ്ത്രീണി॑ രോച॒നോത സൂര്യ॑സ്യ ര॒ശ്മിഭിഃ॒ സമു॑ച്യസി |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | സവിതാ | ജഗതീ}</span><p>ഉ॒ത രാത്രീ᳚മുഭ॒യതഃ॒ പരീ᳚യസ ഉ॒ത മി॒ത്രോ ഭ॑വസി ദേവ॒ ധർമ॑ഭിഃ ||<span class='MantraNumbering'>{4/5}{4.4.24.4}{5.81.4}{5.6.9.4}{435, 4322}</span></td>
@@ -2025,7 +2025,7 @@
 <td class='SuktaLabel'>[74] തത്സവിതുരിതി നവർചസ്യ സൂക്തസ്യാത്രേയഃശ്യാവാശ്വഃ സവിതാഗായത്രീ ആദ്യാനുഷ്ടുപ് |</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>തത്സ॑വി॒തുർവൃ॑ണീമഹേ വ॒യം ദേ॒വസ്യ॒ ഭോജ॑നം |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | സവിതാ | അനുഷ്ടുപ്}</span><p>ശ്രേഷ്ഠം᳚ സർവ॒ധാത॑മം॒ തുരം॒ ഭഗ॑സ്യ ധീമഹി ||<span class='MantraNumbering'>{1/9}{4.4.25.1}{5.82.1}{5.6.10.1}{436, 4324}</span></td>
+<td class='VargaStyle1'>തത്‌ സ॑വി॒തുർവൃ॑ണീമഹേ വ॒യം ദേ॒വസ്യ॒ ഭോജ॑നം |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | സവിതാ | അനുഷ്ടുപ്}</span><p>ശ്രേഷ്ഠം᳚ സർവ॒ധാത॑മം॒ തുരം॒ ഭഗ॑സ്യ ധീമഹി ||<span class='MantraNumbering'>{1/9}{4.4.25.1}{5.82.1}{5.6.10.1}{436, 4324}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>അസ്യ॒ ഹി സ്വയ॑ശസ്തരം സവി॒തുഃ കച്ച॒ന പ്രി॒യം |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | സവിതാ | ഗായത്രീ}</span><p>ന മി॒നന്തി॑ സ്വ॒രാജ്യം᳚ ||<span class='MantraNumbering'>{2/9}{4.4.25.2}{5.82.2}{5.6.10.2}{436, 4325}</span></td>
@@ -2034,10 +2034,10 @@
 <td class='VargaStyle1'>സ ഹി രത്നാ᳚നി ദാ॒ശുഷേ᳚ സു॒വാതി॑ സവി॒താ ഭഗഃ॑ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | സവിതാ | ഗായത്രീ}</span><p>തം ഭാ॒ഗം ചി॒ത്രമീ᳚മഹേ ||<span class='MantraNumbering'>{3/9}{4.4.25.3}{5.82.3}{5.6.10.3}{436, 4326}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>അ॒ദ്യാ നോ᳚ ദേവ സവിതഃ പ്ര॒ജാവ॑ത്സാവീഃ॒ സൗഭ॑ഗം |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | സവിതാ | ഗായത്രീ}</span><p>പരാ᳚ ദു॒ഷ്ഷ്വപ്ന്യം᳚ സുവ ||<span class='MantraNumbering'>{4/9}{4.4.25.4}{5.82.4}{5.6.10.4}{436, 4327}</span></td>
+<td class='VargaStyle1'>അ॒ദ്യാ നോ᳚ ദേവ സവിതഃ പ്ര॒ജാവ॑ത്‌ സാവീഃ॒ സൗഭ॑ഗം |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | സവിതാ | ഗായത്രീ}</span><p>പരാ᳚ ദു॒ഷ്ഷ്വപ്ന്യം᳚ സുവ ||<span class='MantraNumbering'>{4/9}{4.4.25.4}{5.82.4}{5.6.10.4}{436, 4327}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>വിശ്വാ᳚നി ദേവ സവിതർദുരി॒താനി॒ പരാ᳚ സുവ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | സവിതാ | ഗായത്രീ}</span><p>യദ്ഭ॒ദ്രം തന്ന॒ ആ സു॑വ ||<span class='MantraNumbering'>{5/9}{4.4.25.5}{5.82.5}{5.6.10.5}{436, 4328}</span></td>
+<td class='VargaStyle1'>വിശ്വാ᳚നി ദേവ സവിതർദുരി॒താനി॒ പരാ᳚ സുവ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | സവിതാ | ഗായത്രീ}</span><p>യദ്‌ ഭ॒ദ്രം തന്ന॒ ആ സു॑വ ||<span class='MantraNumbering'>{5/9}{4.4.25.5}{5.82.5}{5.6.10.5}{436, 4328}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>അനാ᳚ഗസോ॒, അദി॑തയേ ദേ॒വസ്യ॑ സവി॒തുഃ സ॒വേ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | സവിതാ | ഗായത്രീ}</span><p>വിശ്വാ᳚ വാ॒മാനി॑ ധീമഹി ||<span class='MantraNumbering'>{6/9}{4.4.26.1}{5.82.6}{5.6.10.6}{436, 4329}</span></td>
@@ -2064,7 +2064,7 @@
 <td class='VargaStyle1'>ര॒ഥീവ॒ കശ॒യാശ്വാഁ᳚, അഭിക്ഷി॒പന്നാ॒വിർദൂ॒താൻ‌ കൃ॑ണുതേ വ॒ർഷ്യാ॒3॑(ആഁ॒) അഹ॑ |<span class='RishiDevChandas'>{ഭൗമോത്രിഃ | പർജന്യഃ | ജഗതീ}</span><p>ദൂ॒രാത്‌ സിം॒ഹസ്യ॑ സ്ത॒നഥാ॒, ഉദീ᳚രതേ॒ യത്‌ പ॒ർജന്യഃ॑ കൃണു॒തേ വ॒ർഷ്യ1॑(അം॒) നഭഃ॑ ||<span class='MantraNumbering'>{3/10}{4.4.27.3}{5.83.3}{5.6.11.3}{437, 4335}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>പ്ര വാതാ॒ വാൻ‌ തി॑ പ॒തയ᳚ന്തി വി॒ദ്യുത॒ ഉദോഷ॑ധീ॒ർജിഹ॑തേ॒ പിന്വ॑തേ॒ സ്വഃ॑ |<span class='RishiDevChandas'>{ഭൗമോത്രിഃ | പർജന്യഃ | ജഗതീ}</span><p>ഇരാ॒ വിശ്വ॑സ്മൈ॒ ഭുവ॑നായ ജായതേ॒ യത്‌ പ॒ർജന്യഃ॑ പൃഥി॒വീം രേത॒സാവ॑തി ||<span class='MantraNumbering'>{4/10}{4.4.27.4}{5.83.4}{5.6.11.4}{437, 4336}</span></td>
+<td class='VargaStyle1'>പ്ര വാതാ॒ വാന്തി॑ പ॒തയ᳚ന്തി വി॒ദ്യുത॒ ഉദോഷ॑ധീ॒ർജിഹ॑തേ॒ പിന്വ॑തേ॒ സ്വഃ॑ |<span class='RishiDevChandas'>{ഭൗമോത്രിഃ | പർജന്യഃ | ജഗതീ}</span><p>ഇരാ॒ വിശ്വ॑സ്മൈ॒ ഭുവ॑നായ ജായതേ॒ യത്‌ പ॒ർജന്യഃ॑ പൃഥി॒വീം രേത॒സാവ॑തി ||<span class='MantraNumbering'>{4/10}{4.4.27.4}{5.83.4}{5.6.11.4}{437, 4336}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>യസ്യ᳚ വ്ര॒തേ പൃ॑ഥി॒വീ നന്ന॑മീതി॒ യസ്യ᳚ വ്ര॒തേ ശ॒ഫവ॒ജ്ജർഭു॑രീതി |<span class='RishiDevChandas'>{ഭൗമോത്രിഃ | പർജന്യഃ | ത്രിഷ്ടുപ്}</span><p>യസ്യ᳚ വ്ര॒ത ഓഷ॑ധീർവി॒ശ്വരൂ᳚പാഃ॒ സ നഃ॑ പർജന്യ॒ മഹി॒ ശർമ॑ യച്ഛ ||<span class='MantraNumbering'>{5/10}{4.4.27.5}{5.83.5}{5.6.11.5}{437, 4337}</span></td>
@@ -2094,7 +2094,7 @@
 <td class='VargaStyle1'>സ്തോമാ᳚സസ്ത്വാ വിചാരിണി॒ പ്രതി॑ ഷ്ടോഭന്ത്യ॒ക്തുഭിഃ॑ |<span class='RishiDevChandas'>{ഭൗമോത്രിഃ | പൃഥിവീ | അനുഷ്ടുപ്}</span><p>പ്ര യാ വാജം॒ ന ഹേഷ᳚ന്തം പേ॒രുമസ്യ॑സ്യർജുനി ||<span class='MantraNumbering'>{2/3}{4.4.29.2}{5.84.2}{5.6.12.2}{438, 4344}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ദൃ॒ൾഹാ ചി॒ദ്യാ വന॒സ്പതീ᳚ൻ‌ ക്ഷ്മ॒യാ ദർധ॒ർഷ്യോജ॑സാ |<span class='RishiDevChandas'>{ഭൗമോത്രിഃ | പൃഥിവീ | അനുഷ്ടുപ്}</span><p>യത്തേ᳚, അ॒ഭ്രസ്യ॑ വി॒ദ്യുതോ᳚ ദി॒വോ വർഷ᳚ന്തി വൃ॒ഷ്ടയഃ॑ ||<span class='MantraNumbering'>{3/3}{4.4.29.3}{5.84.3}{5.6.12.3}{438, 4345}</span></td>
+<td class='VargaStyle1'>ദൃ॒ൾഹാ ചി॒ദ്‌ യാ വന॒സ്പതീ᳚ൻ ക്ഷ്മ॒യാ ദർധ॒ർഷ്യോജ॑സാ |<span class='RishiDevChandas'>{ഭൗമോത്രിഃ | പൃഥിവീ | അനുഷ്ടുപ്}</span><p>യത്തേ᳚, അ॒ഭ്രസ്യ॑ വി॒ദ്യുതോ᳚ ദി॒വോ വർഷ᳚ന്തി വൃ॒ഷ്ടയഃ॑ ||<span class='MantraNumbering'>{3/3}{4.4.29.3}{5.84.3}{5.6.12.3}{438, 4345}</span></td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[77] പ്രസമ്രാജഇത്യഷ്ടർചസ്യ സൂക്തസ്യ ഭൗമോത്രിർവരുണത്രിഷ്ടുപ് |</td>
