--- a/Rigveda/SamhitaPatha/Malayalam/Mandala/Format4/RVS-Malayalam-F4-M05.html
+++ b/Rigveda/SamhitaPatha/Malayalam/Mandala/Format4/RVS-Malayalam-F4-M05.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ഋഗ്വേദ സംഹിതാ (മണ്ഡല: 05) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 22-Jan-2025]</h6>
+<br> [Last updated on: 01-Feb-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -2325,13 +2325,13 @@
 <td class='VargaStyle1'>അ॒ഭിയേത്വാ᳚വിഭാവരി॒സ്തോമൈ᳚ർഗൃ॒ണന്തി॒വഹ്ന॑യഃ |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | പങ്ക്തിഃ}</span><p>മ॒ഘൈർമ॑ഘോനിസു॒ശ്രിയോ॒ദാമ᳚ന്വന്തഃസുരാ॒തയഃ॒സുജാ᳚തേ॒,അശ്വ॑സൂനൃതേ॒(സ്വാഹാ᳚) || 4 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>യച്ചി॒ദ്ധിതേ᳚ഗ॒ണാ,ഇ॒മേഛ॒ദയ᳚ന്തിമ॒ഘത്ത॑യേ |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | പങ്ക്തിഃ}</span><p>പരി॑ചി॒ദ്വഷ്ട॑യോദധു॒ർദദ॑തോ॒രാധോ॒,അഹ്ര॑യം॒സുജാ᳚തേ॒,അശ്വ॑സൂനൃതേ॒(സ്വാഹാ᳚) || 5 || </td>
+<td class='VargaStyle1'>യച്ചി॒ദ്ധിതേ᳚ഗ॒ണാ,ഇ॒മേഛ॒ദയ᳚ന്തിമ॒ഘത്ത॑യേ |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | പങ്ക്തിഃ}</span><p>പരി॑ചി॒ദ്‌വഷ്ട॑യോദധു॒ർദദ॑തോ॒രാധോ॒,അഹ്ര॑യം॒സുജാ᳚തേ॒,അശ്വ॑സൂനൃതേ॒(സ്വാഹാ᳚) || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ഐഷു॑ധാവീ॒രവ॒ദ്യശ॒ഉഷോ᳚മഘോനിസൂ॒രിഷു॑ |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | പങ്ക്തിഃ}</span><p>യേനോ॒രാധാം॒സ്യഹ്ര॑യാമ॒ഘവാ᳚നോ॒,അരാ᳚സത॒സുജാ᳚തേ॒,അശ്വ॑സൂനൃതേ॒(സ്വാഹാ᳚) || 6 || <span class='MantraNumbering'>വർഗ:22</span></td>
+<td class='VargaStyle2'>ഐഷു॑ധാവീ॒രവ॒ദ്‌യശ॒ഉഷോ᳚മഘോനിസൂ॒രിഷു॑ |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | പങ്ക്തിഃ}</span><p>യേനോ॒രാധാം॒സ്യഹ്ര॑യാമ॒ഘവാ᳚നോ॒,അരാ᳚സത॒സുജാ᳚തേ॒,അശ്വ॑സൂനൃതേ॒(സ്വാഹാ᳚) || 6 || <span class='MantraNumbering'>വർഗ:22</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>തേഭ്യോ᳚ദ്യു॒മ്നംബൃ॒ഹദ്യശ॒ഉഷോ᳚മഘോ॒ന്യാവ॑ഹ |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | പങ്ക്തിഃ}</span><p>യേനോ॒രാധാം॒സ്യശ്വ്യാ᳚ഗ॒വ്യാഭജ᳚ന്തസൂ॒രയഃ॒സുജാ᳚തേ॒,അശ്വ॑സൂനൃതേ॒(സ്വാഹാ᳚) || 7 || </td>
+<td class='VargaStyle2'>തേഭ്യോ᳚ദ്യു॒മ്നംബൃ॒ഹദ്‌യശ॒ഉഷോ᳚മഘോ॒ന്യാവ॑ഹ |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | പങ്ക്തിഃ}</span><p>യേനോ॒രാധാം॒സ്യശ്വ്യാ᳚ഗ॒വ്യാഭജ᳚ന്തസൂ॒രയഃ॒സുജാ᳚തേ॒,അശ്വ॑സൂനൃതേ॒(സ്വാഹാ᳚) || 7 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ഉ॒തനോ॒ഗോമ॑തീ॒രിഷ॒ആവ॑ഹാദുഹിതർദിവഃ |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | പങ്ക്തിഃ}</span><p>സാ॒കംസൂര്യ॑സ്യര॒ശ്മിഭിഃ॑ശു॒ക്രൈഃശോച॑ദ്ഭിര॒ർചിഭിഃ॒സുജാ᳚തേ॒,അശ്വ॑സൂനൃതേ॒(സ്വാഹാ᳚) || 8 || </td>
@@ -2340,7 +2340,7 @@
 <td class='VargaStyle2'>വ്യു॑ച്ഛാദുഹിതർദിവോ॒മാചി॒രംത॑നുഥാ॒,അപഃ॑ |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | പങ്ക്തിഃ}</span><p>നേത്‌ത്വാ᳚സ്തേ॒നംയഥാ᳚രി॒പുംതപാ᳚തി॒സൂരോ᳚,അ॒ർചിഷാ॒സുജാ᳚തേ॒,അശ്വ॑സൂനൃതേ॒(സ്വാഹാ᳚) || 9 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ഏ॒താവ॒ദ്വേദു॑ഷ॒സ്ത്വംഭൂയോ᳚വാ॒ദാതു॑മർഹസി |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | പങ്ക്തിഃ}</span><p>യാസ്തോ॒തൃഭ്യോ᳚വിഭാവര്യു॒ച്ഛന്തീ॒നപ്ര॒മീയ॑സേ॒സുജാ᳚തേ॒,അശ്വ॑സൂനൃതേ॒(സ്വാഹാ᳚) || 10 || </td>
+<td class='VargaStyle2'>ഏ॒താവ॒ദ്‌വേദു॑ഷ॒സ്ത്വംഭൂയോ᳚വാ॒ദാതു॑മർഹസി |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | പങ്ക്തിഃ}</span><p>യാസ്തോ॒തൃഭ്യോ᳚വിഭാവര്യു॒ച്ഛന്തീ॒നപ്ര॒മീയ॑സേ॒സുജാ᳚തേ॒,അശ്വ॑സൂനൃതേ॒(സ്വാഹാ᳚) || 10 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[80] ദ്യുതദ്യാമാനമിതി ഷഡൃചസ്യ സൂക്തസ്യാത്രേയഃസത്യശ്രവാഉഷാസ്ത്രിഷ്ടുപ് |<span class='MantraNumbering'>{മണ്ഡല:5, സൂക്ത:80}{അനുവാക:6, സൂക്ത:8}{അഷ്ടക:4, അധ്യായ:4}</span>
@@ -2353,7 +2353,7 @@
 <td class='VargaStyle1'>ഏ॒ഷാജനം᳚ദർശ॒താബോ॒ധയ᳚ന്തീസു॒ഗാൻ‌പ॒ഥഃകൃ᳚ണ്വ॒തീയാ॒ത്യഗ്രേ᳚ |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | ത്രിഷ്ടുപ്}</span><p>ബൃ॒ഹ॒ദ്ര॒ഥാബൃ॑ഹ॒തീവി॑ശ്വമി॒ന്വോഷാജ്യോതി᳚ര്യച്ഛ॒ത്യഗ്രേ॒,അഹ്നാ॒‌മ്(സ്വാഹാ᳚) || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ഏ॒ഷാഗോഭി॑രരു॒ണേഭി᳚ര്യുജാ॒നാസ്രേ᳚ധന്തീര॒യിമപ്രാ᳚യുചക്രേ |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | ത്രിഷ്ടുപ്}</span><p>പ॒ഥോരദ᳚ന്തീസുവി॒തായ॑ദേ॒വീപു॑രുഷ്ടു॒താവി॒ശ്വവാ᳚രാ॒വിഭാ᳚തി॒(സ്വാഹാ᳚) || 3 || </td>
+<td class='VargaStyle1'>ഏ॒ഷാഗോഭി॑രരു॒ണേഭി᳚ര്യുജാ॒നാഽസ്രേ᳚ധന്തീര॒യിമപ്രാ᳚യുചക്രേ |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | ത്രിഷ്ടുപ്}</span><p>പ॒ഥോരദ᳚ന്തീസുവി॒തായ॑ദേ॒വീപു॑രുഷ്ടു॒താവി॒ശ്വവാ᳚രാ॒വിഭാ᳚തി॒(സ്വാഹാ᳚) || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ഏ॒ഷാവ്യേ᳚നീഭവതിദ്വി॒ബർഹാ᳚,ആവിഷ്കൃണ്വാ॒നാത॒ന്വം᳚പു॒രസ്താ᳚ത് |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | ത്രിഷ്ടുപ്}</span><p>ഋ॒തസ്യ॒പന്ഥാ॒മന്വേ᳚തിസാ॒ധുപ്ര॑ജാന॒തീവ॒നദിശോ᳚മിനാതി॒(സ്വാഹാ᳚) || 4 || </td>
@@ -2362,7 +2362,7 @@
 <td class='VargaStyle1'>ഏ॒ഷാശു॒ഭ്രാനത॒ന്വോ᳚വിദാ॒നോർധ്വേവ॑സ്നാ॒തീദൃ॒ശയേ᳚നോ,അസ്ഥാത് |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | ത്രിഷ്ടുപ്}</span><p>അപ॒ദ്വേഷോ॒ബാധ॑മാനാ॒തമാം᳚സ്യു॒ഷാദി॒വോദു॑ഹി॒താജ്യോതി॒ഷാഗാ॒‌ത്(സ്വാഹാ᳚) || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ഏ॒ഷാപ്ര॑തീ॒ചീദു॑ഹി॒താദി॒വോനൄന്യോഷേ᳚വഭ॒ദ്രാനിരി॑ണീതേ॒,അപ്സഃ॑ |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | ത്രിഷ്ടുപ്}</span><p>വ്യൂ॒ർണ്വ॒തീദാ॒ശുഷേ॒വാര്യാ᳚ണി॒പുന॒ർജ്യോതി᳚ര്യുവ॒തിഃപൂ॒ർവഥാ᳚കഃ॒(സ്വാഹാ᳚) || 6 || </td>
+<td class='VargaStyle1'>ഏ॒ഷാപ്ര॑തീ॒ചീദു॑ഹി॒താദി॒വോനൄൻയോഷേ᳚വഭ॒ദ്രാനിരി॑ണീതേ॒,അപ്സഃ॑ |<span class='RishiDevChandas'>{ആത്രേയഃ സത്യശ്രവാഃ | ഉഷാഃ | ത്രിഷ്ടുപ്}</span><p>വ്യൂ॒ർണ്വ॒തീദാ॒ശുഷേ॒വാര്യാ᳚ണി॒പുന॒ർജ്യോതി᳚ര്യുവ॒തിഃപൂ॒ർവഥാ᳚കഃ॒(സ്വാഹാ᳚) || 6 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[81] യുഞ്ജതേമനഇതി പഞ്ചർചസ്യ സൂക്തസ്യാത്രേയഃ ശ്യാവാശ്വഃ സവിതാജഗതീ |<span class='MantraNumbering'>{മണ്ഡല:5, സൂക്ത:81}{അനുവാക:6, സൂക്ത:9}{അഷ്ടക:4, അധ്യായ:4}</span>
@@ -2372,10 +2372,10 @@
 <td class='VargaStyle2'>യു॒ഞ്ജതേ॒മന॑ഉ॒തയു᳚ഞ്ജതേ॒ധിയോ॒വിപ്രാ॒വിപ്ര॑സ്യബൃഹ॒തോവി॑പ॒ശ്ചിതഃ॑ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | സവിതാ | ജഗതീ}</span><p>വിഹോത്രാ᳚ദധേവയുനാ॒വിദേക॒ഇന്മ॒ഹീദേ॒വസ്യ॑സവി॒തുഃപരി॑ഷ്ടുതിഃ॒(സ്വാഹാ᳚) || 1 || <span class='MantraNumbering'>വർഗ:24</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>വിശ്വാ᳚രൂ॒പാണി॒പ്രതി॑മുഞ്ചതേക॒വിഃപ്രാസാ᳚വീദ്ഭ॒ദ്രംദ്വി॒പദേ॒ചതു॑ഷ്പദേ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | സവിതാ | ജഗതീ}</span><p>വിനാക॑മഖ്യത്സവി॒താവരേ॒ണ്യോഽനു॑പ്ര॒യാണ॑മു॒ഷസോ॒വിരാ᳚ജതി॒(സ്വാഹാ᳚) || 2 || </td>
+<td class='VargaStyle2'>വിശ്വാ᳚രൂ॒പാണി॒പ്രതി॑മുഞ്ചതേക॒വിഃപ്രാസാ᳚വീദ്‌ഭ॒ദ്രംദ്വി॒പദേ॒ചതു॑ഷ്പദേ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | സവിതാ | ജഗതീ}</span><p>വിനാക॑മഖ്യത്‌സവി॒താവരേ॒ണ്യോഽനു॑പ്ര॒യാണ॑മു॒ഷസോ॒വിരാ᳚ജതി॒(സ്വാഹാ᳚) || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>യസ്യ॑പ്ര॒യാണ॒മന്വ॒ന്യഇദ്യ॒യുർദേ॒വാദേ॒വസ്യ॑മഹി॒മാന॒മോജ॑സാ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | സവിതാ | ജഗതീ}</span><p>യഃപാർഥി॑വാനിവിമ॒മേസഏത॑ശോ॒രജാം᳚സിദേ॒വഃസ॑വി॒താമ॑ഹിത്വ॒നാ(സ്വാഹാ᳚) || 3 || </td>
+<td class='VargaStyle2'>യസ്യ॑പ്ര॒യാണ॒മന്വ॒ന്യഇദ്‌യ॒യുർദേ॒വാദേ॒വസ്യ॑മഹി॒മാന॒മോജ॑സാ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | സവിതാ | ജഗതീ}</span><p>യഃപാർഥി॑വാനിവിമ॒മേസഏത॑ശോ॒രജാം᳚സിദേ॒വഃസ॑വി॒താമ॑ഹിത്വ॒നാ(സ്വാഹാ᳚) || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ഉ॒തയാ᳚സിസവിത॒സ്ത്രീണി॑രോച॒നോതസൂര്യ॑സ്യര॒ശ്മിഭിഃ॒സമു॑ച്യസി |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | സവിതാ | ജഗതീ}</span><p>ഉ॒തരാത്രീ᳚മുഭ॒യതഃ॒പരീ᳚യസഉ॒തമി॒ത്രോഭ॑വസിദേവ॒ധർമ॑ഭിഃ॒(സ്വാഹാ᳚) || 4 || </td>
@@ -2388,7 +2388,7 @@
 </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>തത്സ॑വി॒തുർവൃ॑ണീമഹേവ॒യംദേ॒വസ്യ॒ഭോജ॑നം |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | സവിതാ | അനുഷ്ടുപ്}</span><p>ശ്രേഷ്ഠം᳚സർവ॒ധാത॑മം॒തുരം॒ഭഗ॑സ്യധീമഹി॒(സ്വാഹാ᳚) || 1 || <span class='MantraNumbering'>വർഗ:25</span></td>
+<td class='VargaStyle1'>തത്‌സ॑വി॒തുർവൃ॑ണീമഹേവ॒യംദേ॒വസ്യ॒ഭോജ॑നം |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | സവിതാ | അനുഷ്ടുപ്}</span><p>ശ്രേഷ്ഠം᳚സർവ॒ധാത॑മം॒തുരം॒ഭഗ॑സ്യധീമഹി॒(സ്വാഹാ᳚) || 1 || <span class='MantraNumbering'>വർഗ:25</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>അസ്യ॒ഹിസ്വയ॑ശസ്തരംസവി॒തുഃകച്ച॒നപ്രി॒യം |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | സവിതാ | ഗായത്രീ}</span><p>നമി॒നന്തി॑സ്വ॒രാജ്യ॒‌മ്(സ്വാഹാ᳚) || 2 || </td>
@@ -2397,10 +2397,10 @@
 <td class='VargaStyle1'>സഹിരത്നാ᳚നിദാ॒ശുഷേ᳚സു॒വാതി॑സവി॒താഭഗഃ॑ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | സവിതാ | ഗായത്രീ}</span><p>തംഭാ॒ഗംചി॒ത്രമീ᳚മഹേ॒(സ്വാഹാ᳚) || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>അ॒ദ്യാനോ᳚ദേവസവിതഃപ്ര॒ജാവ॑ത്സാവീഃ॒സൗഭ॑ഗം |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | സവിതാ | ഗായത്രീ}</span><p>പരാ᳚ദു॒ഷ്ഷ്വപ്ന്യം᳚സുവ॒(സ്വാഹാ᳚) || 4 || </td>
+<td class='VargaStyle1'>അ॒ദ്യാനോ᳚ദേവസവിതഃപ്ര॒ജാവ॑ത്‌സാവീഃ॒സൗഭ॑ഗം |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | സവിതാ | ഗായത്രീ}</span><p>പരാ᳚ദു॒ഷ്ഷ്വപ്ന്യം᳚സുവ॒(സ്വാഹാ᳚) || 4 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>വിശ്വാ᳚നിദേവസവിതർദുരി॒താനി॒പരാ᳚സുവ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | സവിതാ | ഗായത്രീ}</span><p>യദ്ഭ॒ദ്രംതന്ന॒ആസു॑വ॒(സ്വാഹാ᳚) || 5 || </td>
+<td class='VargaStyle1'>വിശ്വാ᳚നിദേവസവിതർദുരി॒താനി॒പരാ᳚സുവ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | സവിതാ | ഗായത്രീ}</span><p>യദ്‌ഭ॒ദ്രംതന്ന॒ആസു॑വ॒(സ്വാഹാ᳚) || 5 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>അനാ᳚ഗസോ॒,അദി॑തയേദേ॒വസ്യ॑സവി॒തുഃസ॒വേ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | സവിതാ | ഗായത്രീ}</span><p>വിശ്വാ᳚വാ॒മാനി॑ധീമഹി॒(സ്വാഹാ᳚) || 6 || <span class='MantraNumbering'>വർഗ:26</span></td>
@@ -2428,7 +2428,7 @@
 <td class='VargaStyle1'>ര॒ഥീവ॒കശ॒യാശ്വാഁ᳚,അഭിക്ഷി॒പന്നാ॒വിർദൂ॒താൻ‌കൃ॑ണുതേവ॒ർഷ്യാ॒3॑(ആഁ॒)അഹ॑ |<span class='RishiDevChandas'>{ഭൗമോത്രിഃ | പർജന്യഃ | ജഗതീ}</span><p>ദൂ॒രാത്‌സിം॒ഹസ്യ॑സ്ത॒നഥാ॒,ഉദീ᳚രതേ॒യത്‌പ॒ർജന്യഃ॑കൃണു॒തേവ॒ർഷ്യ1॑(അം॒)നഭഃ॒(സ്വാഹാ᳚) || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>പ്രവാതാ॒വാൻ‌തി॑പ॒തയ᳚ന്തിവി॒ദ്യുത॒ഉദോഷ॑ധീ॒ർജിഹ॑തേ॒പിന്വ॑തേ॒സ്വഃ॑ |<span class='RishiDevChandas'>{ഭൗമോത്രിഃ | പർജന്യഃ | ജഗതീ}</span><p>ഇരാ॒വിശ്വ॑സ്മൈ॒ഭുവ॑നായജായതേ॒യത്‌പ॒ർജന്യഃ॑പൃഥി॒വീംരേത॒സാവ॑തി॒(സ്വാഹാ᳚) || 4 || </td>
+<td class='VargaStyle1'>പ്രവാതാ॒വാന്തി॑പ॒തയ᳚ന്തിവി॒ദ്യുത॒ഉദോഷ॑ധീ॒ർജിഹ॑തേ॒പിന്വ॑തേ॒സ്വഃ॑ |<span class='RishiDevChandas'>{ഭൗമോത്രിഃ | പർജന്യഃ | ജഗതീ}</span><p>ഇരാ॒വിശ്വ॑സ്മൈ॒ഭുവ॑നായജായതേ॒യത്‌പ॒ർജന്യഃ॑പൃഥി॒വീംരേത॒സാവ॑തി॒(സ്വാഹാ᳚) || 4 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>യസ്യ᳚വ്ര॒തേപൃ॑ഥി॒വീനന്ന॑മീതി॒യസ്യ᳚വ്ര॒തേശ॒ഫവ॒ജ്ജർഭു॑രീതി |<span class='RishiDevChandas'>{ഭൗമോത്രിഃ | പർജന്യഃ | ത്രിഷ്ടുപ്}</span><p>യസ്യ᳚വ്ര॒തഓഷ॑ധീർവി॒ശ്വരൂ᳚പാഃ॒സനഃ॑പർജന്യ॒മഹി॒ശർമ॑യച്ഛ॒(സ്വാഹാ᳚) || 5 || </td>
@@ -2459,7 +2459,7 @@
 <td class='VargaStyle1'>സ്തോമാ᳚സസ്ത്വാവിചാരിണി॒പ്രതി॑ഷ്ടോഭന്ത്യ॒ക്തുഭിഃ॑ |<span class='RishiDevChandas'>{ഭൗമോത്രിഃ | പൃഥിവീ | അനുഷ്ടുപ്}</span><p>പ്രയാവാജം॒നഹേഷ᳚ന്തംപേ॒രുമസ്യ॑സ്യർജുനി॒(സ്വാഹാ᳚) || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ദൃ॒ൾഹാചി॒ദ്യാവന॒സ്പതീ᳚ൻ‌ക്ഷ്മ॒യാദർധ॒ർഷ്യോജ॑സാ |<span class='RishiDevChandas'>{ഭൗമോത്രിഃ | പൃഥിവീ | അനുഷ്ടുപ്}</span><p>യത്തേ᳚,അ॒ഭ്രസ്യ॑വി॒ദ്യുതോ᳚ദി॒വോവർഷ᳚ന്തിവൃ॒ഷ്ടയഃ॒(സ്വാഹാ᳚) || 3 || </td>
+<td class='VargaStyle1'>ദൃ॒ൾഹാചി॒ദ്‌യാവന॒സ്പതീ᳚ൻക്ഷ്മ॒യാദർധ॒ർഷ്യോജ॑സാ |<span class='RishiDevChandas'>{ഭൗമോത്രിഃ | പൃഥിവീ | അനുഷ്ടുപ്}</span><p>യത്തേ᳚,അ॒ഭ്രസ്യ॑വി॒ദ്യുതോ᳚ദി॒വോവർഷ᳚ന്തിവൃ॒ഷ്ടയഃ॒(സ്വാഹാ᳚) || 3 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[85] പ്രസമ്രാജഇത്യഷ്ടർചസ്യ സൂക്തസ്യ ഭൗമോത്രിർവരുണത്രിഷ്ടുപ് |<span class='MantraNumbering'>{മണ്ഡല:5, സൂക്ത:85}{അനുവാക:6, സൂക്ത:13}{അഷ്ടക:4, അധ്യായ:4}</span>
