--- a/Rigveda/SamhitaPatha/Telugu/Ashtaka/Format4/RVS-Telugu-F4-A04.html
+++ b/Rigveda/SamhitaPatha/Telugu/Ashtaka/Format4/RVS-Telugu-F4-A04.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ఋగ్వేద సంహితా (అష్టక: 04) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 22-Jan-2025]</h6>
+<br> [Last updated on: 01-Feb-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1967,13 +1967,13 @@
 <td class='VargaStyle1'>అ॒భియేత్వా᳚విభావరి॒స్తోమై᳚ర్గృ॒ణంతి॒వహ్న॑యః |<span class='RishiDevChandas'>{ఆత్రేయః సత్యశ్రవాః | ఉషాః | పంక్తిః}</span><p>మ॒ఘైర్మ॑ఘోనిసు॒శ్రియో॒దామ᳚న్వంతఃసురా॒తయః॒సుజా᳚తే॒,అశ్వ॑సూనృతే॒(స్వాహా᳚) || 4 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>యచ్చి॒ద్ధితే᳚గ॒ణా,ఇ॒మేఛ॒దయం᳚తిమ॒ఘత్త॑యే |<span class='RishiDevChandas'>{ఆత్రేయః సత్యశ్రవాః | ఉషాః | పంక్తిః}</span><p>పరి॑చి॒ద్వష్ట॑యోదధు॒ర్దద॑తో॒రాధో॒,అహ్ర॑యం॒సుజా᳚తే॒,అశ్వ॑సూనృతే॒(స్వాహా᳚) || 5 || </td>
+<td class='VargaStyle1'>యచ్చి॒ద్ధితే᳚గ॒ణా,ఇ॒మేఛ॒దయం᳚తిమ॒ఘత్త॑యే |<span class='RishiDevChandas'>{ఆత్రేయః సత్యశ్రవాః | ఉషాః | పంక్తిః}</span><p>పరి॑చి॒ద్‌వష్ట॑యోదధు॒ర్దద॑తో॒రాధో॒,అహ్ర॑యం॒సుజా᳚తే॒,అశ్వ॑సూనృతే॒(స్వాహా᳚) || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ఐషు॑ధావీ॒రవ॒ద్యశ॒ఉషో᳚మఘోనిసూ॒రిషు॑ |<span class='RishiDevChandas'>{ఆత్రేయః సత్యశ్రవాః | ఉషాః | పంక్తిః}</span><p>యేనో॒రాధాం॒స్యహ్ర॑యామ॒ఘవా᳚నో॒,అరా᳚సత॒సుజా᳚తే॒,అశ్వ॑సూనృతే॒(స్వాహా᳚) || 6 || <span class='MantraNumbering'>వర్గ:22</span></td>
+<td class='VargaStyle2'>ఐషు॑ధావీ॒రవ॒ద్‌యశ॒ఉషో᳚మఘోనిసూ॒రిషు॑ |<span class='RishiDevChandas'>{ఆత్రేయః సత్యశ్రవాః | ఉషాః | పంక్తిః}</span><p>యేనో॒రాధాం॒స్యహ్ర॑యామ॒ఘవా᳚నో॒,అరా᳚సత॒సుజా᳚తే॒,అశ్వ॑సూనృతే॒(స్వాహా᳚) || 6 || <span class='MantraNumbering'>వర్గ:22</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>తేభ్యో᳚ద్యు॒మ్నంబృ॒హద్యశ॒ఉషో᳚మఘో॒న్యావ॑హ |<span class='RishiDevChandas'>{ఆత్రేయః సత్యశ్రవాః | ఉషాః | పంక్తిః}</span><p>యేనో॒రాధాం॒స్యశ్వ్యా᳚గ॒వ్యాభజం᳚తసూ॒రయః॒సుజా᳚తే॒,అశ్వ॑సూనృతే॒(స్వాహా᳚) || 7 || </td>
+<td class='VargaStyle2'>తేభ్యో᳚ద్యు॒మ్నంబృ॒హద్‌యశ॒ఉషో᳚మఘో॒న్యావ॑హ |<span class='RishiDevChandas'>{ఆత్రేయః సత్యశ్రవాః | ఉషాః | పంక్తిః}</span><p>యేనో॒రాధాం॒స్యశ్వ్యా᳚గ॒వ్యాభజం᳚తసూ॒రయః॒సుజా᳚తే॒,అశ్వ॑సూనృతే॒(స్వాహా᳚) || 7 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ఉ॒తనో॒గోమ॑తీ॒రిష॒ఆవ॑హాదుహితర్దివః |<span class='RishiDevChandas'>{ఆత్రేయః సత్యశ్రవాః | ఉషాః | పంక్తిః}</span><p>సా॒కంసూర్య॑స్యర॒శ్మిభిః॑శు॒క్రైఃశోచ॑ద్భిర॒ర్చిభిః॒సుజా᳚తే॒,అశ్వ॑సూనృతే॒(స్వాహా᳚) || 8 || </td>
@@ -1982,7 +1982,7 @@
 <td class='VargaStyle2'>వ్యు॑చ్ఛాదుహితర్దివో॒మాచి॒రంత॑నుథా॒,అపః॑ |<span class='RishiDevChandas'>{ఆత్రేయః సత్యశ్రవాః | ఉషాః | పంక్తిః}</span><p>నేత్‌త్వా᳚స్తే॒నంయథా᳚రి॒పుంతపా᳚తి॒సూరో᳚,అ॒ర్చిషా॒సుజా᳚తే॒,అశ్వ॑సూనృతే॒(స్వాహా᳚) || 9 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ఏ॒తావ॒ద్వేదు॑ష॒స్త్వంభూయో᳚వా॒దాతు॑మర్హసి |<span class='RishiDevChandas'>{ఆత్రేయః సత్యశ్రవాః | ఉషాః | పంక్తిః}</span><p>యాస్తో॒తృభ్యో᳚విభావర్యు॒చ్ఛంతీ॒నప్ర॒మీయ॑సే॒సుజా᳚తే॒,అశ్వ॑సూనృతే॒(స్వాహా᳚) || 10 || </td>
+<td class='VargaStyle2'>ఏ॒తావ॒ద్‌వేదు॑ష॒స్త్వంభూయో᳚వా॒దాతు॑మర్హసి |<span class='RishiDevChandas'>{ఆత్రేయః సత్యశ్రవాః | ఉషాః | పంక్తిః}</span><p>యాస్తో॒తృభ్యో᳚విభావర్యు॒చ్ఛంతీ॒నప్ర॒మీయ॑సే॒సుజా᳚తే॒,అశ్వ॑సూనృతే॒(స్వాహా᳚) || 10 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[72] ద్యుతద్యామానమితి షడృచస్య సూక్తస్యాత్రేయఃసత్యశ్రవాఉషాస్త్రిష్టుప్ |<span class='MantraNumbering'>{అష్టక:4, అధ్యాయ:4}{మండల:5, సూక్త:80}{అనువాక:6, సూక్త:8}</td>
@@ -1994,7 +1994,7 @@
 <td class='VargaStyle1'>ఏ॒షాజనం᳚దర్శ॒తాబో॒ధయం᳚తీసు॒గాన్‌ప॒థఃకృ᳚ణ్వ॒తీయా॒త్యగ్రే᳚ |<span class='RishiDevChandas'>{ఆత్రేయః సత్యశ్రవాః | ఉషాః | త్రిష్టుప్}</span><p>బృ॒హ॒ద్ర॒థాబృ॑హ॒తీవి॑శ్వమి॒న్వోషాజ్యోతి᳚ర్యచ్ఛ॒త్యగ్రే॒,అహ్నా॒‌మ్(స్వాహా᳚) || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ఏ॒షాగోభి॑రరు॒ణేభి᳚ర్యుజా॒నాస్రే᳚ధంతీర॒యిమప్రా᳚యుచక్రే |<span class='RishiDevChandas'>{ఆత్రేయః సత్యశ్రవాః | ఉషాః | త్రిష్టుప్}</span><p>ప॒థోరదం᳚తీసువి॒తాయ॑దే॒వీపు॑రుష్టు॒తావి॒శ్వవా᳚రా॒విభా᳚తి॒(స్వాహా᳚) || 3 || </td>
+<td class='VargaStyle1'>ఏ॒షాగోభి॑రరు॒ణేభి᳚ర్యుజా॒నాఽస్రే᳚ధంతీర॒యిమప్రా᳚యుచక్రే |<span class='RishiDevChandas'>{ఆత్రేయః సత్యశ్రవాః | ఉషాః | త్రిష్టుప్}</span><p>ప॒థోరదం᳚తీసువి॒తాయ॑దే॒వీపు॑రుష్టు॒తావి॒శ్వవా᳚రా॒విభా᳚తి॒(స్వాహా᳚) || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ఏ॒షావ్యే᳚నీభవతిద్వి॒బర్హా᳚,ఆవిష్కృణ్వా॒నాత॒న్వం᳚పు॒రస్తా᳚త్ |<span class='RishiDevChandas'>{ఆత్రేయః సత్యశ్రవాః | ఉషాః | త్రిష్టుప్}</span><p>ఋ॒తస్య॒పంథా॒మన్వే᳚తిసా॒ధుప్ర॑జాన॒తీవ॒నదిశో᳚మినాతి॒(స్వాహా᳚) || 4 || </td>
@@ -2012,10 +2012,10 @@
 <td class='VargaStyle2'>యుం॒జతే॒మన॑ఉ॒తయుం᳚జతే॒ధియో॒విప్రా॒విప్ర॑స్యబృహ॒తోవి॑ప॒శ్చితః॑ |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | సవితా | జగతీ}</span><p>విహోత్రా᳚దధేవయునా॒విదేక॒ఇన్మ॒హీదే॒వస్య॑సవి॒తుఃపరి॑ష్టుతిః॒(స్వాహా᳚) || 1 || <span class='MantraNumbering'>వర్గ:24</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>విశ్వా᳚రూ॒పాణి॒ప్రతి॑ముంచతేక॒విఃప్రాసా᳚వీద్భ॒ద్రంద్వి॒పదే॒చతు॑ష్పదే |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | సవితా | జగతీ}</span><p>వినాక॑మఖ్యత్సవి॒తావరే॒ణ్యోఽను॑ప్ర॒యాణ॑ము॒షసో॒విరా᳚జతి॒(స్వాహా᳚) || 2 || </td>
+<td class='VargaStyle2'>విశ్వా᳚రూ॒పాణి॒ప్రతి॑ముంచతేక॒విఃప్రాసా᳚వీద్‌భ॒ద్రంద్వి॒పదే॒చతు॑ష్పదే |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | సవితా | జగతీ}</span><p>వినాక॑మఖ్యత్‌సవి॒తావరే॒ణ్యోఽను॑ప్ర॒యాణ॑ము॒షసో॒విరా᳚జతి॒(స్వాహా᳚) || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>యస్య॑ప్ర॒యాణ॒మన్వ॒న్యఇద్య॒యుర్దే॒వాదే॒వస్య॑మహి॒మాన॒మోజ॑సా |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | సవితా | జగతీ}</span><p>యఃపార్థి॑వానివిమ॒మేసఏత॑శో॒రజాం᳚సిదే॒వఃస॑వి॒తామ॑హిత్వ॒నా(స్వాహా᳚) || 3 || </td>
+<td class='VargaStyle2'>యస్య॑ప్ర॒యాణ॒మన్వ॒న్యఇద్‌య॒యుర్దే॒వాదే॒వస్య॑మహి॒మాన॒మోజ॑సా |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | సవితా | జగతీ}</span><p>యఃపార్థి॑వానివిమ॒మేసఏత॑శో॒రజాం᳚సిదే॒వఃస॑వి॒తామ॑హిత్వ॒నా(స్వాహా᳚) || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ఉ॒తయా᳚సిసవిత॒స్త్రీణి॑రోచ॒నోతసూర్య॑స్యర॒శ్మిభిః॒సము॑చ్యసి |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | సవితా | జగతీ}</span><p>ఉ॒తరాత్రీ᳚ముభ॒యతః॒పరీ᳚యసఉ॒తమి॒త్రోభ॑వసిదేవ॒ధర్మ॑భిః॒(స్వాహా᳚) || 4 || </td>
@@ -2027,7 +2027,7 @@
 <td class='SuktaLabel'>[74] తత్సవితురితి నవర్చస్య సూక్తస్యాత్రేయఃశ్యావాశ్వః సవితాగాయత్రీ ఆద్యానుష్టుప్ |<span class='MantraNumbering'>{అష్టక:4, అధ్యాయ:4}{మండల:5, సూక్త:82}{అనువాక:6, సూక్త:10}</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>తత్స॑వి॒తుర్వృ॑ణీమహేవ॒యందే॒వస్య॒భోజ॑నం |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | సవితా | అనుష్టుప్}</span><p>శ్రేష్ఠం᳚సర్వ॒ధాత॑మం॒తురం॒భగ॑స్యధీమహి॒(స్వాహా᳚) || 1 || <span class='MantraNumbering'>వర్గ:25</span></td>
+<td class='VargaStyle1'>తత్‌స॑వి॒తుర్వృ॑ణీమహేవ॒యందే॒వస్య॒భోజ॑నం |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | సవితా | అనుష్టుప్}</span><p>శ్రేష్ఠం᳚సర్వ॒ధాత॑మం॒తురం॒భగ॑స్యధీమహి॒(స్వాహా᳚) || 1 || <span class='MantraNumbering'>వర్గ:25</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>అస్య॒హిస్వయ॑శస్తరంసవి॒తుఃకచ్చ॒నప్రి॒యం |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | సవితా | గాయత్రీ}</span><p>నమి॒నంతి॑స్వ॒రాజ్య॒‌మ్(స్వాహా᳚) || 2 || </td>
@@ -2036,10 +2036,10 @@
 <td class='VargaStyle1'>సహిరత్నా᳚నిదా॒శుషే᳚సు॒వాతి॑సవి॒తాభగః॑ |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | సవితా | గాయత్రీ}</span><p>తంభా॒గంచి॒త్రమీ᳚మహే॒(స్వాహా᳚) || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>అ॒ద్యానో᳚దేవసవితఃప్ర॒జావ॑త్సావీః॒సౌభ॑గం |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | సవితా | గాయత్రీ}</span><p>పరా᳚దు॒ష్ష్వప్న్యం᳚సువ॒(స్వాహా᳚) || 4 || </td>
+<td class='VargaStyle1'>అ॒ద్యానో᳚దేవసవితఃప్ర॒జావ॑త్‌సావీః॒సౌభ॑గం |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | సవితా | గాయత్రీ}</span><p>పరా᳚దు॒ష్ష్వప్న్యం᳚సువ॒(స్వాహా᳚) || 4 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>విశ్వా᳚నిదేవసవితర్దురి॒తాని॒పరా᳚సువ |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | సవితా | గాయత్రీ}</span><p>యద్భ॒ద్రంతన్న॒ఆసు॑వ॒(స్వాహా᳚) || 5 || </td>
+<td class='VargaStyle1'>విశ్వా᳚నిదేవసవితర్దురి॒తాని॒పరా᳚సువ |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | సవితా | గాయత్రీ}</span><p>యద్‌భ॒ద్రంతన్న॒ఆసు॑వ॒(స్వాహా᳚) || 5 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>అనా᳚గసో॒,అది॑తయేదే॒వస్య॑సవి॒తుఃస॒వే |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | సవితా | గాయత్రీ}</span><p>విశ్వా᳚వా॒మాని॑ధీమహి॒(స్వాహా᳚) || 6 || <span class='MantraNumbering'>వర్గ:26</span></td>
@@ -2066,7 +2066,7 @@
 <td class='VargaStyle1'>ర॒థీవ॒కశ॒యాశ్వాఀ᳚,అభిక్షి॒పన్నా॒విర్దూ॒తాన్‌కృ॑ణుతేవ॒ర్ష్యా॒3॑(ఆఀ॒)అహ॑ |<span class='RishiDevChandas'>{భౌమోత్రిః | పర్జన్యః | జగతీ}</span><p>దూ॒రాత్‌సిం॒హస్య॑స్త॒నథా॒,ఉదీ᳚రతే॒యత్‌ప॒ర్జన్యః॑కృణు॒తేవ॒ర్ష్య1॑(అం॒)నభః॒(స్వాహా᳚) || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ప్రవాతా॒వాన్‌తి॑ప॒తయం᳚తివి॒ద్యుత॒ఉదోష॑ధీ॒ర్జిహ॑తే॒పిన్వ॑తే॒స్వః॑ |<span class='RishiDevChandas'>{భౌమోత్రిః | పర్జన్యః | జగతీ}</span><p>ఇరా॒విశ్వ॑స్మై॒భువ॑నాయజాయతే॒యత్‌ప॒ర్జన్యః॑పృథి॒వీంరేత॒సావ॑తి॒(స్వాహా᳚) || 4 || </td>
+<td class='VargaStyle1'>ప్రవాతా॒వాంతి॑ప॒తయం᳚తివి॒ద్యుత॒ఉదోష॑ధీ॒ర్జిహ॑తే॒పిన్వ॑తే॒స్వః॑ |<span class='RishiDevChandas'>{భౌమోత్రిః | పర్జన్యః | జగతీ}</span><p>ఇరా॒విశ్వ॑స్మై॒భువ॑నాయజాయతే॒యత్‌ప॒ర్జన్యః॑పృథి॒వీంరేత॒సావ॑తి॒(స్వాహా᳚) || 4 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>యస్య᳚వ్ర॒తేపృ॑థి॒వీనన్న॑మీతి॒యస్య᳚వ్ర॒తేశ॒ఫవ॒జ్జర్భు॑రీతి |<span class='RishiDevChandas'>{భౌమోత్రిః | పర్జన్యః | త్రిష్టుప్}</span><p>యస్య᳚వ్ర॒తఓష॑ధీర్వి॒శ్వరూ᳚పాః॒సనః॑పర్జన్య॒మహి॒శర్మ॑యచ్ఛ॒(స్వాహా᳚) || 5 || </td>
@@ -2096,7 +2096,7 @@
 <td class='VargaStyle1'>స్తోమా᳚సస్త్వావిచారిణి॒ప్రతి॑ష్టోభంత్య॒క్తుభిః॑ |<span class='RishiDevChandas'>{భౌమోత్రిః | పృథివీ | అనుష్టుప్}</span><p>ప్రయావాజం॒నహేషం᳚తంపే॒రుమస్య॑స్యర్జుని॒(స్వాహా᳚) || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>దృ॒ళ్హాచి॒ద్యావన॒స్పతీ᳚న్‌క్ష్మ॒యాదర్ధ॒ర్ష్యోజ॑సా |<span class='RishiDevChandas'>{భౌమోత్రిః | పృథివీ | అనుష్టుప్}</span><p>యత్తే᳚,అ॒భ్రస్య॑వి॒ద్యుతో᳚ది॒వోవర్షం᳚తివృ॒ష్టయః॒(స్వాహా᳚) || 3 || </td>
+<td class='VargaStyle1'>దృ॒ళ్హాచి॒ద్‌యావన॒స్పతీ᳚న్క్ష్మ॒యాదర్ధ॒ర్ష్యోజ॑సా |<span class='RishiDevChandas'>{భౌమోత్రిః | పృథివీ | అనుష్టుప్}</span><p>యత్తే᳚,అ॒భ్రస్య॑వి॒ద్యుతో᳚ది॒వోవర్షం᳚తివృ॒ష్టయః॒(స్వాహా᳚) || 3 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[77] ప్రసమ్రాజఇత్యష్టర్చస్య సూక్తస్య భౌమోత్రిర్వరుణత్రిష్టుప్ |<span class='MantraNumbering'>{అష్టక:4, అధ్యాయ:4}{మండల:5, సూక్త:85}{అనువాక:6, సూక్త:13}</td>
